--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,47 +1,25 @@
 ---
-title: 回顾2021年北京对台湾的威胁加剧了美中紧张局势
+title: 中共公布与拉美国家的合作计划以扩大其影响力
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1817232/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1817277/)
 
-撰稿：小湫
-![](https://assets.gnews.org/wp-content/uploads/2022/01/IMG_2555.jpg)网络截图1
-2021年[，随着北京对台湾的不断威胁，与美国承诺台湾一旦遭中国政府入侵将提供援助之间的矛盾，伴随着中美之间的紧张局势](https://www.foxnews.com/world/chinas-xi-warns-countries-about-breaking-their-heads-on-the-steel-great-wall)继续升温。
+#### 翻译/撰稿：zzballack
 
-中共政府声称台湾是其领土的一部分，坚决不允许台湾独立。大陆与台湾自1949年分裂，中共一直在加大对台湾政府的压力，反对其加入联合国等国际组织。美国没有正式承认台湾，但保持非官方关系，并支持其台湾的民主制度。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-3-1.jpg)图片来源：中新网
+据《华盛顿观察家报》（Washington Examiner）1月2日报道，在与美国最近的邻国进行了新一轮的峰会后，中共官员公布了与拉美国家的“合作行动计划”，这相当于一个影响该地区并威胁美国利益的“全面”计划。
 
-多年来，双方的政治斗争一直在外交上走钢丝，直到2021 年，局势陡然紧张。
+去年12月3日举行的中国—拉美和加勒比国家共同体（CELAC）论坛最终通过了一项计划，不仅要增强经济联系，而且要加强“政治和安全合作”，同时深化中共在高科技领域的参与度—从网络空间和人工智能到“空间科学、卫星数据共享、卫星应用、地面基础设施建设”，甚至包括核能。CELAC于 2011年在已故委内瑞拉总统乌戈·查韦斯 (Hugo Chávez) 的主持下成立。查韦斯当时希望有一个与美洲国家组织（OAS）相抗衡的场所，并挑战美国在拉丁美洲的影响力。现在它为中共总书记习近平提供了一个平台，以组建一个符合北京利益的、由左派和独裁领导人组成的联盟。
 
-2021年初，时任美国国务卿迈克·蓬佩奥 (Mike Pompeo)[取消](https://www.washingtonpost.com/world/asia_pacific/trump-biden-taiwan-china/2021/01/13/1bbadee0-53c0-11eb-acc5-92d2819a1ccb_story.html)：禁止美国和台湾外交官互动政策，此举招致中国政府强烈反对。
+前美国国务院政策规划人员、美国陆军战争学院（U.S. Army War College）的研究教授埃文·埃利斯（Evan Ellis）说：“尽管中共没有说‘我们想接管拉丁美洲’，但他们明确地提出了一个多维度的参与战略。如果成功，这将大大扩大他们的影响力，并对美国造成巨大的情报隐患。”
 
-随着拜登政府的上任，台湾最高代表团被邀请参加拜登总统就职典礼，也让中国政府看到，拜登政府不会在棘手的台湾问题上采取温和态度。总统就职典礼几天后，中国政府向台湾海峡派出战斗机，这被视为向拜登政府政府展示武力。
+参议员马尔科·鲁比奥 (Marco Rubio)说：“中共政府正在积极寻求加强其在整个西半球的关系，特别是与反美成员的关系。北京正在寻求在各个领域超越美国，我们必须认真对待这一威胁。”
 
-在接下来的几个月里，拜登政府发表了一些亲台声明，其中包括国务卿安东尼·布林肯 (Antony Blinken) 呼吁让台湾加入世界卫生组织，但中国政府对此表示强烈反对。
+美洲国家尼加拉瓜去年12月9日宣布与台湾断交，转而与中共建立外交关系。鲁比奥12月20日在一篇专栏文章中对此评论说：“奥尔特加-穆里略（Ortega-Murillo）政权认为中共是比美国更好的意识形态盟友，北京的种族灭绝政权也不在乎其一长串的罪行和侵犯人权行为。奥尔特加还希望中共继续提供资金，在尼加拉瓜修建一条从大西洋到太平洋的运河，然后中共解放军的军舰可以通过这条运河进入加勒比地区。”
 
-随后中国政府的言论升级，中国国家主席习近平[声称](https://www.foxnews.com/world/chinas-xi-warns-countries-about-breaking-their-heads-on-the-steel-great-wall)中国有控制台湾的“历史使命”，并敦促其他国家不要干涉中国内政。
+美国传统基金会 (The Heritage Foundation) 的研究助理马特奥·海达尔（Mateo Haydar）说：“中共绝对有成为拉丁美洲主导力量的野心。挑战是全面的，而且那里绝对有安全和军事利益。这种威胁正在增长，它是一种与我们曾看到的苏联威胁截然不同的威胁。”
 
-8月，[白宫澄清](https://www.foxnews.com/politics/bidens-comment-on-taiwan-clarified-by-administration-official)拜登暗示美国有神圣承诺，即如果我们的北约盟国遭受侵犯，我们会做出回应。北约盟国包括日本、韩国、台湾。 这番陈述很快成为头条新闻，因为几十年来，美国对于此类侵犯一直是模糊战略。1979 年的《台湾关系法》承诺美国支持台湾，包括为其提供防御能力，但不一定参与军事冲突。
-
-恰逢美国灾难性地从阿富汗撤军，中国又开始加大对台湾的侵略，一些专家认为两者之间有很大的关联性。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/pastedGraphic.png)图片来自网络
-10 月，[中国](https://www.foxnews.com/world/china-sends-more-aircraft-toward-taiwan-one-day-after-largest-ever-incursion)政府在两天内向台湾[派遣了80多架飞机，](https://www.foxnews.com/world/china-sends-more-aircraft-toward-taiwan-one-day-after-largest-ever-incursion)包括战斗机和轰炸机。在10月1日，派出两波飞机以纪念中华人民共和国国庆日，这导致台湾飞机紧急升空以作应对。
-
-随着紧张局势再次升级，拜登被问及美国是否会保护台湾免受中国的攻击，拜登回应是：是的，我们有这样做的承诺。
-
-美国白宫发言人说美国与台湾的防务关系以《台湾关系法》为指导，我们将恪守该法案下的承诺，我们将继续支持台湾的自卫，我们将继续反对任何单方面改变现状的行为。
-
-中国政府很快就发表尖锐声明作为回应，据中国环球时报报道，中国外交部发言人说任何人都不应低估中国人民维护国家主权和领土完整的强大决心和能力，中国政府绝不会妥协。
-
-随着 2021 年接近尾声，双方的言辞激烈，表明紧张局势可能会在整个 2022 年持续升温。 12 月，国务卿安东尼·布林肯[表示](https://www.foxnews.com/world/blinken-china-warning-taiwan-terrible-consequences)，如果北京入侵或袭击台湾，将发生可怕的后果。布林肯在谈到出兵问题时[说](https://www.reuters.com/world/us/blinken-says-any-move-by-china-invade-taiwan-would-be-potentially-disastrous-2021-12-03/)，多年来，我们一直非常清楚并始终明确，我们致力于确保台湾拥有自卫的手段和能力，如果中国政府真的入侵台湾，我们将继续兑现这一承诺。
-
-周四，中国外交部长王毅[指责](https://www.foxnews.com/politics/china-claims-us-will-pay-unbearable-cost-taiwan)美国“违背了美中建交时的承诺，纵容和教唆台独势力，企图歪曲和否认一个中国原则。他同时声称：这将使台湾陷入极其危险的境地，并给美国本身带来无法承受的代价。
-
-[参考信息：](https://www.foxnews.com/politics/2021-in-review-us-china-tensions-rise-beijing-aggression-taiwan)
-
-发布：Jenny
-
-[【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
-
+新闻来源：[China unveils plan to ‘take over’ Latin America](https://www.washingtonexaminer.com/restoring-america/patriotism-unity/defense-national-security/china-unveils-plan-to-take-over-latin-america)
 
  
 
