--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,46 +1,26 @@
 ---
-title: 喜马拉雅币一周分析与总结（12月27日-1月2日）
+title: 每时每刻的认知 （五）
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1817201/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1817262/)
 
-作者：纽约香草山金融部 – ILOVE战神
+投稿人：春风秋雨
+![](https://assets.gnews.org/wp-content/uploads/2022/01/IMG_2554.jpg)网络截图
+每时每刻的认知，跟随文贵先生，加入爆料革命让我们开智，让我们打开思路，透过事物的表面学会深入思考。
 
+随着全世界各国开始给民众打第三针加强针的事态进一步发展，让我再次回想起多洛雷斯 卡希尔教授在接受采访时说：“Covid-19疫苗（mRNA注射剂）注射引发的抗体依赖增强作用，导致了人们自我毁灭。”而政府、媒体的宣传却让民众认为，打Covid-19疫苗（mRNA注射剂）能够激发人们免疫系统功能，他们会得到保护，这完全是违背良心、违背科学的宣传。
 
+众多有良知的专业人士站出来大声呐喊，告诉全世界的民众，这些Covid-19疫苗（mRNA注射剂），实际上是为免疫系统预设的机制，并不是保护并不是都免于病毒侵害，相反地让你的免疫系统，很快的把你自己的身体作为目标。其本质是在摧毁人们的健康并杀死人类，这种现象叫做抗体依赖增强作用。这些Covid-19疫苗（mRNA注射剂）增强了致病性，从而也叫细胞因子风暴免疫预置-免疫超级预置。所有的这些名字都是在警告人们，这是一个毒风暴，是这些Covid-19疫苗（mRNA注射剂）让注射的人变成了基因改造的生物体，力推了自身免疫系统去抵抗病毒蛋白，同时你自身又重复制造病毒蛋白。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+人类的免疫系统在经过数百年的进化就是要消灭病毒蛋白，现在因为这些Covid-19疫苗（mRNA注射剂），却让你自己重新开始制作病毒蛋白，产生的病毒蛋白能融合进你的细胞和生物组织，因此自身免疫系统就开始攻击病毒蛋白，如此矛盾的抵抗就这样悄悄的发生在你的体内。每日你都会感觉到长时间的疲倦，慢慢地你将被耗得精疲力尽，你的器官开始衰竭，出现各种炎症直至死去。
 
+有良知的专业人士，不顾诽谤、不顾威胁、不顾一切的努力传播真相。而那些黑暗势力利用民众的善良，利用民众相信科学的从众心理，阻止真相传播并制造恐慌。
 
+文贵先生在大直播里说过“整个世界相信科学，这次让科学蒙蔽了双眼，分辨不清善恶真伪。”我们新中国联邦人追随文贵先生，坚持不懈的传病毒疫苗播真相，做明眼开智人。
 
-过去一周，喜马拉雅币价格稳定在$35一段时间后，回落到$30至$35之间震荡，平均日交易量约22万喜币。喜币上市以来总交易量约2430万枚 ，占今年总发行量的仅约2.43%。目前喜币交易在全球尚未完全开放，大型机构投资者尚未进场，市场交易量较低，价格仍被严重低估。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide6.jpg)
-据郭文贵先生本周直播透露，过去两年全球印发法币260万亿美元，而目前数字货币市场只有2.6万亿美元。数字货币必将成为全球财富躲避金融灾难，政治经济灾难，疫苗灾难，病毒灾难和通货膨胀的M2货币超发的蓄水池和避险池。未来进入数字货币市场的法币可能会达到50%。但未来没有支付系统的数字货币90%会被淘汰。去中心化的、有犯罪历史、没有依法KYC的数字货币一定会被消灭。取而代之的将是中心化负责任，去中心化技术的数字货币，而且绝对不给犯罪机构提供任何机会，百分之百KYC和专业化，有支付系统，被国家主权所接受，而且能进行大宗商品交易。这意味着未来喜币的地位一定会远远超越今天的比特币。
+发布：Jenny
 
-郭先生还透露，日本会成为美国之后第二大喜币流通的重要市场，喜支付的推广将在这个过程中起到关键作用。
-
-参考链接：
-[Europe records over 100 million Covid-19 cases, more than third of entire global tally](https://www.hindustantimes.com/world-news/europe-records-over-100-million-covid-19-cases-more-than-third-of-entire-global-tally-101641099662596.html)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
-
-总编/编辑：飞虹
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
+[【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
 
 
  
