--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,42 +1,57 @@
 ---
-title: “蔚小理”光鲜销量背后注定是这个产业的原形毕露
+title: 全面展望2022日本外交 日中关系仍是焦点
 ---
-`Siena` [轉載自GNews](https://gnews.org/zh-hans/1817102/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1817177/)
 
-撰稿：童媚
-![](https://assets.gnews.org/wp-content/uploads/2022/01/蔚小理.jpg)（图片来自网络）
-今天关于电动车的三则新闻引发联想。
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-128.png)[图片来源](https://tk.ismcdn.jp/mwimgs/0/2/-/img_029c1ad31b4da1b5feede61a62f36cd5132017.jpg)
+2022年日本外交的最大挑战将是如何处理与中共国之间的关系。2022年将迎来双方外交关系正常化50周年。
 
-首先是特斯拉公司周日公布了创纪录的第四季度交付量，总共交付了308,600 辆汽车，远高于华尔街分析师预测的 263,026 辆。
+尽管岸田文雄首相提倡建立“稳定的关系”，但中共国在东海和南海的军事活动却日益频繁。日方将通过加强与美国、澳大利亚和其他盟国的关系来应对的同时，又企图避免日中关系的无可挽回的恶化，着实“进退两难”。
 
-其中特斯拉10 月至 12 月的交付量同比增长约 70%，比上一季度的创纪录交付量高出近 30%。公司已经连续第六个季度实现了创纪录的交付量。
+中共国公船在冲绳县尖阁列岛附近侵入领海已成常态。尤其在去年，中共和俄罗斯军队之间针对日本的联合行动，以及中共对台湾的步步紧逼，令日本政府不得不重视保守派中对中共越来越强硬的立场。
 
-与此同时，中共电动车的三家头部企业–蔚来汽车、理想汽车和小鹏汽车在周六也公布2021年销量，其中蔚来全年交付91,429台，同比增109.1%，连续两年翻番；理想交付90,491辆，增177.4%；小鹏则交付98,155台劲增2.6倍，稳居“蔚小理”销量冠军。
+“日方将在民主、法治和人权等普世价值的基础上坚持发声”。在去年12月底的新闻发布会上，日本首相谈到了对中共国的态度。
 
-作为国产电动车销量冠军的小鹏汽车新闻稿称，12月交付量16,000台，同比增181%；第四季度累计交付量达41,751台，环比增63%，同比增222%。截至2021年底，小鹏汽车历史累计交付量已突破13万台。
+对北京冬奥会和残奥会的“外交抵制”问题，日方已决定不派政府代表团，与美国、英国和其他国家保持一致。然而，由于中共国这个最大贸易伙伴的市场诱惑，日方一直避免在官方层面对新疆和香港的人权问题明确表态。
 
-在中共国，过去这几年对电动车行业的集中补贴，也让这个产业充满了乱像，在目前“缺芯、限电、补贴退坡”等多重困难影响下，中共国的新能源汽车市场是否还会高度“景气”呢？
+习近平主席对日本的国事访问已被推迟。在中美对抗长期化之时，中共有可能利用日中建交50周年的契机，拉拢日本，以在日美两国之间制造隔阂。
 
-中国财政部等四部门上周五发布2022年新能源汽车推广应用财政补贴政策的通知称，2022年新能源汽车补贴标准在2021年基础上退坡30%，然后在2022年底前完全消失。该政策自2022年1月1日起实施。
+然而，目前，日本方面并没有什么庆祝的意愿。一位政府官员说：“尚未就是否举行纪念仪式做出决定。”
 
-那么，没有了补贴的国产电动车行业会如何发展呢？
+**日美关系**
 
-作为销冠的小鹏汽车的销售模式，曾经在网上惹来争议：
+日方希望早日与美国总统拜登举行会谈，以表明双方坚固的同盟关系。但美国方面，随着秋季中期选举的到来，以及变种Omicron毒株的传播，目前尚未确定日方的访问日期。
 
-在2020年12月8日，有短视频博主爆料小鹏汽车的卖法，该博主称，小鹏汽车先将大量的车卖给二手车商，然后利用新能源汽车的名号进行上牌，然后二手车商再发给三四线的城市或者租车公司。以G3为例，落地车价看起来是17万，但是二手车商卖出去的价格只有11万。
+“日美联盟和加强日本的防卫能力是两大支柱，”日本国防部一位高级官员在回应中共霸权主义行径时说道。两国外交和国防高官将在1月初举行安全协商委员会（2+2）的在线会议。
 
-如果这则新闻属实，则说明了几个问题，首先这种操作手法很大程度上解释了小鹏的财报上营业成本支出居高不下的事实；其次，利用这种手法外加国内对于新能源汽车的补贴政策，才能让小鹏汽车维持如此高的销量；第三，这样做对企业无利可图，那动机是什么？只可能是伪饰报表，期望从资本市场上把钱给赚回来。
+**日澳关系**
 
-可想而知，这应该是国内电动车市场的普遍做法，随着中共国经济的渐渐崩塌，金玉其外的产业必然会遭遇灭顶式的打击，那么最终是谁来买单呢？
+澳大利亚和日本正在形成“准联盟”。下一步将是双方签署《互惠准入协定》。
 
-新闻来源：
+同时，日方正在努力促使由日、美、澳、印组成的四国峰会在日本举行。
 
-[中国造车新势力“蔚小理”2021年交付量均倍增 小鹏猛增2.6倍稳居销量冠军 | 路透 (reuters.com)](https://cn.reuters.com/article/chinese-automakers-deliveries-0102-sun-idCNKBS2JD00E?il=0)
+**日韩****关系**
 
-[焦点：特斯拉克服供应链困境 第四季度交付量再创纪录并远超预期 | 路透 (reuters.com)](https://cn.reuters.com/article/wrapup-tesla-q4-deliveries-0102-sun-idCNKBS2JD01C?il=0)
+据称“外交关系正常化以来最糟糕的”日韩关系的未来也是焦点。两国在前义务兵和慰安妇问题上继续僵持不下，而且在文在寅总统的领导下，转机的希望渺茫。
 
+日本方面将密切关注3月份的韩国总统选举结果，期待转机。
 
+**日朝关系**
 
+日本政府对朝鲜核弹技术的改进感到震惊。随着被绑架者在日本的家人日渐高龄，政府解决绑架问题的紧迫感也日益增加，日方将继续呼吁与金正恩进行直接对话。
+
+**日俄关系**
+
+由于俄罗斯采取了强硬的立场，宣布在北方领土建立一个特别免税区，并邀请韩国加入，因此日本和俄罗斯之间缔结和平条约的谈判陷入了困境。双方将继续协调努力以打破僵局。
+
+2022是日中关系正常化50周年，迫在眉睫的困局，日本将如何应对，需持续关注。
+
+信息源：[日中、正常化50年の正念場　米と連携強化で対抗　22年外交展望](https://news.yahoo.co.jp/articles/5cae067bd7f926f29142970f7ec16381ce408191)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
