--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,28 +1,45 @@
 ---
-title: 针下亡魂｜巴西 28 岁著名男歌手接种疫苗六周后死亡
+title: 播客超级明星乔-罗根加入盖特——自由的发声平台
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/1816652/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1816910/)
 
-**撰文/ 疫情关注组｜发布日期/ 3/1/2022**
-![](https://assets.gnews.org/wp-content/uploads/2021/10/2-94.jpg)
-**更多资讯请关注官方盖特（Please follow our Gettr：[https://gettr.com/user/mightygroup）](https://gettr.com/user/mightygroup%EF%BC%89)**
+作者：纽约香草山农场教育部 – 新生
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+随着推特继续禁止用户使用其平台，播客超级明星乔-罗根周日宣布，他已经设立了一个盖特账户。截止发稿之时，乔-罗根在盖特上已经有了八百万粉丝，当前，他在推特仍有七百八十万粉丝。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-118.png)
+乔-罗根是美国一位知名的脱口秀明星，登台表演已有20多年，拥有众多粉丝，罗根的第六个喜剧特辑《乔-罗根：奇怪的时代》于2018年10月在奈飞（Netflix）首播。根据他个人[网站](https://www.joerogan.com/)的自我介绍，他主持一档播客节目《乔-罗根体验》。这是一个长篇对话节目，嘉宾包括喜剧演员、演员、音乐家、综合格斗选手、作家、艺术家，以及其他人士。自2002年以来，罗根曾在福克斯电视台、付费观看（Pay Per View）、以及斯派克有线电视频道（Spike Television）为终极格斗锦标赛(UFC)担任评论员。罗根还还在两部电影中担任角色，在NBC电视台主持过竞争性真人秀节目《恐惧因素》。
 
-巴西一名28岁的男歌手，Cantor Maurílio 在接种完第二剂 COVID-19 疫苗后换上肺栓塞，半个月后因心脏病发而死亡。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/巴西-28-歲著名男歌手接種疫苗六週後死亡.jpg)
-Maurílio 是巴西乐坛知名二人组合“Luiza and Maurílio”的一员，他于 11 月 17 日接种了第二剂疫苗，当时，他还在个人IG上晒图表示“我接种了第二剂疫苗，接种疫苗，是拯救生命！”
+“为了防止推特上的狗屎变得更加愚蠢，我现在也在这里。欢呼吧！” 罗根周日下午在他的盖特账户上写道。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/xSinger.jpg.pagespeed.ic_.kCvqK4dRlp.jpeg)圖片來源：當事人IG
+罗根最近在他的播客中采访了罗伯特-马龙博士，而马龙博士最近也因为对中共病毒疫苗的立场而被禁止使用推特。罗根告诉马龙博士，“只要你不顺从科技界的任何说法，他们（推特）就可以删除你，因为科技界显然有一个审查议程，当涉及到中共病毒的治疗时，无论你是否在宣传他们所谓的疫苗接种迟疑现象，他们可以为此禁止你，他们可以禁止你，因为在他们眼中，他们认为这是一个正当的罪行。”
 
-可惜，不足一个月后，12 月 15 日，他在工作室录制新专辑时忽然倒地不起，送往Jardim América 医院急救后确诊患上肺栓塞，之后就一直重症监护室，尽管医护竭尽全力救治，半个月后，即 12 月 29 日 Maurílio 还是因心脏病发而死亡。
+“我非常努力地给人们提供信息，帮助他们思考，而不是告诉他们该想什么。但问题是，如果我不能参与发言，即使指出了可能不方便的科学事实，那么谁可以被允许（发言）？” 马龙后来在谈话中说。
 
-Maurílio 2017 年和同行Luiza 相识，并组合出歌，2019 年，他们的第一首歌曲“S de Saudade”问世，并迅速登上热门，Youtube 播放量超过 3.8 亿次。翌年，他们的第二首热门歌曲“PODE SUMIR”在 Youtube 的播放量都超过1 亿次。令人痛心的是，他们的第三首歌曲再也没有机会被听到了。
+郭先生在昨天的新年直播上指出，盖特自从2021年7月上线以来，总下载量已经达到3500万。盖特目前的用户包括来自美国、巴西、英国、法国、德国、印度、日本、以及爆料革命追随者，正在逐步成长为国际化的社交平台。
 
-现在，让我们在 PODE SUMIR 的旋律中悼念 Maurílio，这位富有才华，本可以在乐坛继续熠熠生辉的年轻歌手。
+盖特首席执行官杰森-米勒（Jason Miller）表示，该平台将对来自政治任何一端的意见保持开放。“盖特就是思想的自由平台”。米勒在声明中说：“我们不会因为人们的政治观点而噤声他们，盖特提供的功能和技术远远超过其他任何东西”。盖特允许用户选择 “将他们现有的推文导入这个新平台”，此外，还有更长的字符数的帖子，以及更清晰的照片。
 
-来源｜[Globo](https://gshow.globo.com/tudo-mais/tv-e-famosos/noticia/morre-cantor-maurilio-da-dupla-com-luiza-aos-28-anos.ghtml)
+新闻链接：
+1. [https://thepostmillennial.com/breaking-joe-rogan-joins-gettr-as-twitter-censorship-intensifies](Joe%20Rogan%20joins%20GETTR%20as%20Twitter%20censorship%20intensifies)
+2. [https://www.joerogan.com/](https://www.joerogan.com/)
+3. [https://www.gettr.com/user/joerogan](https://www.gettr.com/user/joerogan)
 
-他们的故事：//[泰国59岁教师接种疫苗10日后去世](https://gnews.org/zh-hans/1568655/)//｜//[斯洛文尼亚 20 岁女学生接种疫苗10日后离世](https://gnews.org/zh-hans/1568651/)//｜//[意大利13 岁女孩接种疫苗1日内死亡](https://gnews.org/zh-hans/1570142/)//｜//[泰国 40 岁男救护员接种加强剂12小时内死亡](https://gnews.org/zh-hans/1570178/)//｜//[印度 31 岁孕妇接种疫苗10日后死亡](https://gnews.org/zh-hans/1572214/)//｜//[科索沃 23 岁女子接种疫苗48小时后死亡](https://gnews.org/zh-hans/1572347/)//｜//[美国 66 岁飞行员接种疫苗当晚发生发行事故 机毁人亡](https://gnews.org/zh-hans/1574200/)//｜//[法国 17 岁女学生接种疫苗7日后死亡](https://gnews.org/zh-hans/1574535/)//｜//[巴西 16 岁女学生接种疫苗8日后死亡](https://gnews.org/zh-hans/1576377/)//｜//[希腊 60 岁男检察官接种疫苗后肺栓塞死亡](https://gnews.org/zh-hans/1576437/)//｜//[加拿大 17 岁曲棍球运动员接种疫苗两周后死亡](https://gnews.org/zh-hans/1578774/)//｜//[美国 16 岁少年接种疫苗 5 日后死亡](https://gnews.org/zh-hans/1581220/)//｜//[韩国 20 岁女学生接种疫苗12日后死亡](https://gnews.org/zh-hans/1582698/)//｜//[意大利 14 岁女孩接种疫苗两日后昏迷 现已离世](https://gnews.org/zh-hans/1582909/)//｜//[法国 24 岁男医科生接种疫苗 10 日后死亡](https://gnews.org/zh-hans/1589503/)//｜//[巴西 13 岁男孩接种疫苗 6 周后死亡](https://gnews.org/zh-hans/1593122/)//｜//[美国 21 岁医科生接种疫苗1日后死亡](https://gnews.org/zh-hans/1596153/)//｜//[科威特 48 岁著名男星接种疫苗两周后死亡](https://gnews.org/zh-hans/1597333/)//｜//[新加坡 44 岁指挥家接种疫苗七周后死亡](https://gnews.org/zh-hans/1597702/)//｜//[法国 16 岁少女接种疫苗 5 日后死亡](https://gnews.org/zh-hans/1598913/)//｜//[意大利 18 岁女学生接种疫苗10日后死亡](https://gnews.org/zh-hans/1599033/)//｜//[希腊 32 岁时尚界翘楚接种疫苗 1 日后死亡](https://gnews.org/zh-hans/1601320/)//｜//[中国 12 岁少女接种疫苗 7 日后死亡](https://gnews.org/zh-hans/1601721/)// ｜//[葡萄牙 18 岁女大学生接种疫苗5日后死亡](https://gnews.org/zh-hans/1603945/)//｜//[意大利 18 岁排球运动员接种疫苗27日后死亡](https://gnews.org/zh-hans/1603893/)//｜//[英国 34 岁妈妈接种疫苗 10 日后死亡](https://gnews.org/zh-hans/1605901/)//｜//[美国 36 岁医学博士接种疫苗后一个月死亡](https://gnews.org/zh-hans/1607440/)//｜//[格鲁吉亚 27 岁女护士接种疫苗一日后死亡](https://gnews.org/zh-hans/1612091/)//｜//[美国 45 岁 FBI 探员接种疫苗24小时内死亡](https://gnews.org/zh-hans/1613769/)//｜//[法国 22 岁男子接种疫苗 10 小时后死亡](https://gnews.org/zh-hans/1613864/)//｜//[英国 35 岁女医护接种疫苗三个月后死亡](https://gnews.org/zh-hans/1618330/)//｜//[澳洲 56 岁电台主持人接种疫苗两个月后死亡](https://gnews.org/zh-hans/1622426/)//｜//[美国 39 岁女医护接种疫苗4日后死亡](https://gnews.org/zh-hans/1625214/)//｜//[美国 56 岁男医生接种疫苗两周后死亡](https://gnews.org/zh-hans/1629915/)//｜//[德国 32 岁心理学专家接种疫苗12日后死亡](https://gnews.org/zh-hans/1636096/)//｜//[美国 45 岁知名漫画家接种疫苗后死亡](https://gnews.org/zh-hans/1665474/)//｜//[德国 15 岁少女接种疫苗三周后死亡](https://gnews.org/zh-hans/1687522/)//｜//[英国 40 岁专业音乐家接种疫苗后死亡](https://gnews.org/zh-hans/1713239/)//｜//[阿根廷 3 岁女童接种疫苗 1 日后死亡](https://gnews.org/zh-hans/1793858/)// | // [巴西 32 歲奧運跳水運動員接種疫苗數月後死亡](https://gnews.org/zh-hans/1796957/)// | // [悲痛！又一名足球运动员在接种疫苗后死亡](https://gnews.org/zh-hans/1799912/)//
+![](https://cdn.discordapp.com/attachments/873743101305430037/926527191443972196/2c3ff12a-1aad-413c-bcbf-f68f4a054055.jpg)
 
+**校对/发稿：童谣**
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
