--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,19 +1,26 @@
 ---
-title: 【中日财经爆】中共最大房企恒大香港停止交易
+title: 秘翻在线：韩国1023人针对政府”强制疫苗接种“提起行政诉讼
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1817290/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1817343/)
 
-撰稿：东京樱花团/盐和光
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-129.png)[图片来源](https://news.cnyes.com/news/id/4795611)
-1月3日据港交所披露，中国恒大发布公告称，公司将于今天(2022年1月3日)上午九时正起停止买卖。因此，与该公司有关的所有结构性产品亦将同时停止买卖，恒大的债务危机一发不可收拾，港股市场其他恒大系股票盘中集体下挫。恒大汽车跌超7%，恒腾网络跌4%，恒大物业跌0.76%。
+撰稿:小蝴蝶
+![](https://assets.gnews.org/wp-content/uploads/2022/01/画像1-10.png)图片来源：本文链接
+韩国NEWSIS新闻2022年1月2日报道，包括医生等多数医疗界人士在内的1023名原告提出了反对政府推行中共病毒(冠状病毒)疫苗护照的集体诉讼。
 
-2022元旦假期，一则恒大海花岛被行政处罚的消息传开来：因违法取得的规划许可证已被撤销等，要求恒大海南海花岛2岛的39栋楼在10天内拆除，责令拆除令许家印雪上加霜，另外，在12月31日下午，恒大财富在官网披露公告称，现在公布未来3个月的兑付方案，新兑付方案即日起实施，原兑付方案暂停。对于调整方案的原因，恒大财富表示，自2021年9月13日实施以来，广大投资者提出了很多宝贵意见，特别是原方案中仅兑付已到期投资产品，大多数投资者反映不公平；同时，因恒大财富投资的项目资金回笼不理想，原兑付方案难以实施。房地产商也许没有想象的那么光鲜！
+据韩国法律界2日透露，岭南大学医学院教授赵斗衡等1023人于上月31日以保健福利部长官、疾病管理厅长、首尔特别市市长为对象，向首尔行政法院提出了要求取消疫苗护照行政处分的诉讼和停止执行的诉讼。诉讼代理律师由都太宇、尹龙镇律师担任。
 
-信息来源：[中国恒大在港交所暂停交易](https://me.mbd.baidu.com/r/z3b6TLhghq?f=cp&amp;rs=2321447262&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=7acae39b88a968f6)
+原告方还主张，政府以对未接种者进行饭店、咖啡厅、补习班等社会生活设施的全面利用施加严重制约的方式，事实上强迫未经过临床试验的中共病毒疫苗接种，导致了大量重症患和死亡。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+原告方面指出:”政府在没有合理的理由的情况下歧视未接种疫苗人群，过分侵害了国民的基本权利，以至于他们无法正常生活，而且与由此获得的公益相比，国民所遭受的损失明显更大，因此疫苗护照的执行是脱离和滥用裁量权，属于违法行为。
+
+他们还申请了暂停强制疫苗护照的执行令。特别是针对青少年强推的疫苗护照，要立即采取中断措施。
+
+点评：面对政府的强制措施，有正义感的医护人员和毒疫苗受害者家属决定用法律武器来维护自己的权力，相信他们的声音将会被越来越多的韩国民众聆听和接受。
+
+信息来源: [https://news.v.daum.net/v/20220102142806582](https://news.v.daum.net/v/20220102142806582)
+
+责编:待命(文晓)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
