--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,24 +1,19 @@
 ---
-title: 中共的千人计划过去两年如何运行
+title: 【中日财经爆】中共最大房企恒大香港停止交易
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1817237/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1817290/)
 
-撰稿：葱大白
-![](https://assets.gnews.org/wp-content/uploads/2022/01/302.jpg)图片来自网络
-中共的千人计划在2019年进行了最后一期国内选拔。当时的国际国内政治形势已经明显紧张。2020年开始的新冠病毒大流行，导致了千人计划并没有如期进行公示，进入了地下状态。一些入选的人并没有被省级组织部人才办兑现人才政策，失去了一生中重要的发展机会。也是由于没有公示，地方组织部人员可以完全黑箱操作，换成自己的关系人作为人才领取头衔及千万元的各类补贴。这样办事的人能得到好处才有动力办事。
+撰稿：东京樱花团/盐和光
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-129.png)[图片来源](https://news.cnyes.com/news/id/4795611)
+1月3日据港交所披露，中国恒大发布公告称，公司将于今天(2022年1月3日)上午九时正起停止买卖。因此，与该公司有关的所有结构性产品亦将同时停止买卖，恒大的债务危机一发不可收拾，港股市场其他恒大系股票盘中集体下挫。恒大汽车跌超7%，恒腾网络跌4%，恒大物业跌0.76%。
 
-2020年，千人计划正式取消了这个名字及网站，以存在多年的长江学者头衔代替，长江学者是大陆内地在没有千人计划前，仅次于院士的一个高级人才头衔，可兑现的补贴在八百万元左右，但主要给在体制内高校的人。另外政策兑现必须通过所在单位的组织及领导，对外来人才来讲大幅度增加了不确定性。
+2022元旦假期，一则恒大海花岛被行政处罚的消息传开来：因违法取得的规划许可证已被撤销等，要求恒大海南海花岛2岛的39栋楼在10天内拆除，责令拆除令许家印雪上加霜，另外，在12月31日下午，恒大财富在官网披露公告称，现在公布未来3个月的兑付方案，新兑付方案即日起实施，原兑付方案暂停。对于调整方案的原因，恒大财富表示，自2021年9月13日实施以来，广大投资者提出了很多宝贵意见，特别是原方案中仅兑付已到期投资产品，大多数投资者反映不公平；同时，因恒大财富投资的项目资金回笼不理想，原兑付方案难以实施。房地产商也许没有想象的那么光鲜！
 
-2021年，长江学者仍然对海内外外籍高技术高学历人才开放，但影响力及吸引力似乎没有国家千人计划大，所以又逐步开始了国家级的千人计划，但名称换成了其他名字，外部有不同的称呼，内容基本一致。
+信息来源：[中国恒大在港交所暂停交易](https://me.mbd.baidu.com/r/z3b6TLhghq?f=cp&amp;rs=2321447262&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=7acae39b88a968f6)
 
-目前浙江、江苏、山东省仍然保留了省级的千人计划，名称及内容与以前相同，因为省级千人计划并为被国际上所重视及指责。但省级千人计划补贴也较雄厚，在得到党的认可后，还可以有各种名目的补贴。但省级千人计划明确进行政审，对申请人的政治背景进行比千人计划更十分严格的审核，并且政审是第一位的。另外省级人才项目更注重关系，只有打通了的本地及省级关系才有望得名得利得发展，更类似于体制内部提干。
-
-去年大外宣李毅的一个视频说过，地方政府为什么留不住人才，真正的人才不精于送礼、贿赂及全身心投资建立关系，办事的人得不到直接回报，所以真正的人才很难拿到支持，也很难生存下去，如去年复旦刺杀书记的姜博士。
-
-在全球病毒及疫苗恐怖情况下，国际旅行变得昂贵、困难及危险，加上国内政治形势日趋紧张，揭发、举报在学校和社会中大规模开展。经济萧条，增加税赋，政府人员减工资，人才政策的兑现更加不确定。在这种情况下，没有强大背景的科技人才来回辗转并无获得资助及成功的希望。
-
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
