--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,37 +1,40 @@
 ---
-title: 敲竹杠不成反被怼 马斯克将星链建设到底
+title: 视频&#124; 《新中国联邦宣言》的初衷
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1817124/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1817178/)
 
-撰稿/配图：东京樱花团/Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-127.png)
-看中国2022年1月1日讯，在中共国和欧洲航天局（European Space Agency）的反击下，SpaceX首席执行官马斯克（Elon Musk）对他的“星链”（Starlink）卫星占用太空的说法进行了回击。
+## 摘自2022.1.1郭先生大直播
 
-本周早些时候，这位亿万富翁科技企业家，因其卫星与北京的新空间站天宫的两次“亲密接触”而受到中共国的指责。在接受英国《金融时报》的一次采访中，马斯克对其公司的“星链”卫星占用太空空间的批评进行了回击。马斯克说，“数以百亿计”的航天器可以在靠近地球的轨道上运行，并驳斥了关于他的公司正在“挤压太空中的竞争对手”的说法。
+制作：香草山香港部
 
-马斯克说：“太空是极其巨大的，而卫星是非常微小的。这不是我们应该以任何方式有效地阻止他人的情况。我们没有阻挡任何人做任何事情，我们也不期望这样做。”马斯克拒绝了他正在“挤压”未来卫星竞争者的说法，他将低地球轨道上的卫星数量比作他所说的20亿辆汽车和卡车。他说，地球周围的每个轨道“外壳”都比地球表面大，在更远的太空中，每隔10米就有一个额外的外壳。他说：“这将意味著有几百亿颗卫星的空间。几千颗卫星算不了什么。这就像，嘿，这里有几千辆地球上的汽车，这不算什么。”
 
-一些专家质疑马斯克的说法，即低地球轨道上的卫星可以安全地匹配地球上的汽车和卡车的密度。哈佛大学史密森尼天体物理学中心（Harvard-Smithsonian Center）的天体物理学家麦克道尔（Jonathan McDowell）说，以每小时17000英里的速度飞行的航天器需要比汽车大得多的间隔，以便在似乎有可能发生碰撞时留出时间调整其轨道。根据他的计算，在这种速度下，三秒钟的差距将只为每个轨道外壳中的大约1000颗卫星留下空间。
 
-马斯克通过星链卫星群将宽带互联网带到世界各地
+今天特别是在2022年1月1号第一天,新中国联邦,我们的发起人和创始人,所有的战友们,我们在一起第一次,我们有一个铁血组，铁血组相当于过去的这些流氓组织最早发起的所谓爱国主义，咱们是救国主义，而且他们手里面举的是什么？是家天下、欺骗人的，所谓的黑社会的结社文化的叫结社大纲，咱们这个叫什么？新中国联邦，咱们跟他们完全不同，他们是右手，咱们是左手，咱们是手举着苍天、摸着良心的，从来不会有任何政权、利益、名义之心的，这样的一个新中国联邦的宣言。
 
-马斯克的“星链”的目标，是到2020年在美国北部和加拿大提供服务，到2021年将其服务范围扩大到接近全球。届时在地球上空的预定轨道部署由12000颗卫星组成的巨型卫星星座。这个星座，非正式地称为“星链”，正在SpaceX位于华盛顿州雷德蒙（Redmond）的设施中开发。其目标是将超高速互联网从太空传送到您的家中。
+大家去看一看，第一章第一页倒数第四行，开始就明显的写着：灭共是正义的需要，然后接下来很简单的宣言，从天到地，从人到动物，从动物到植物，从植物到环境，到山到水，没有我们不能包括的，我们不仅说中国人的事，我们还说全人类的事，我们还说全天下的事。
 
-虽然卫星互联网已经存在了一段时间，但它 一直遭受着高延迟和不可靠的连接问题。星链则不同。SpaceX表示，在低地球轨道上放置一个“星座”的卫星，将为全世界提供高速、类似电缆的互联网。
+大家都知道今年发生了体育节最重要的彭帅事件，天天代表爹亲娘亲不如党亲的党，张高丽告诉彭帅同志说，“宇宙无限大，地球是一粒沙”
 
-这位亿万富翁的公司希望创建全球系统。马斯克此前曾表示，该企业可以为目前无法使用互联网的30亿人提供廉价的上网方式。它还可以帮助资助未来在火星上建立城市。帮助人类到达红色星球，是马斯克长期声明的目标之一，也是激发他创办SpaceX的原因。
+它告诉大家，应该像这样对天地对人的敬意和爱意，它叫新中国联邦，这是我们今天大家坐在这里，我们说什么都不要忘了，因这个我们走在了一起，这是我们一切的原因，不是因为七哥。
 
-该公司向联邦通信委员会（FCC）提交了将4425颗卫星发射到地球上空的计划，是目前正在运行的卫星数量的三倍。马斯克将该项目比作“在太空中重建互联网”，因为它将减少对纵横交错的现有海底光缆网络的依赖。
 
-在美国，联邦通信委员会对该计划表示欢迎，认为这是一种为更多人提供互联网连接的方式。但马斯克的星链却让中共忧心忡忡，因为一旦实现全球卫星互联网无死角，中共用于封锁言论、强行洗脑的所谓互联网防火墙将被推倒。
 
-“ 你厉害你不能用绝招”，中共裁军大使反对利用人工智能技术谋求绝对军事优势。捆绑别人的手，自己无所不用其极是中共这么多年来在世界舞台上快速超车的重要原因。星链对中共的威胁绝不是两颗卫星那么简单，中共害怕的是星链全球互联对中共“网络锁国”政策的巨大冲击，这是会要其老命的。中共无赖嘴脸，敲竹杠的混账逻辑把中共这个流氓刻画的栩栩如生。
+发稿：雪梨
 
-消息来源：[将星链建设到底 马斯克怼回北京批评(图)](https://m.secretchina.com/news/gb/2022/01/01/993914.html)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
