--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,21 +1,42 @@
 ---
-title: 拜登表示如果俄罗斯入侵乌克兰他将“果断回应”
+title: 中国人只有在自己国家站起来，才能在世界上被尊重
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1816988/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1817079/)
 
-撰稿：东京樱花团/待命（文暁）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-120.png)[图片来源](https://www.msn.com/ja-jp/news/world/%E3%83%90%E3%82%A4%E3%83%87%E3%83%B3%E6%B0%8F-%E3%83%AD%E3%82%B7%E3%82%A2%E3%81%8C%E4%BE%B5%E6%94%BB%E3%81%AA%E3%82%89-%E6%96%AD%E5%9B%BA%E5%AF%BE%E5%BF%9C-%E3%82%A6%E3%82%AF%E3%83%A9%E3%82%A4%E3%83%8A%E9%A6%96%E8%84%B3%E3%81%A8%E5%8D%94%E8%AD%B0/ar-AASmWKW?ocid=msedgntp)
-每日新闻记者铃木一生1月3日发自华盛顿的消息：2日，美国总统拜登与乌克兰总统维克多-泽伦斯基举行电话会谈，强调如果俄罗斯决定入侵乌克兰，美国及其盟国将“采取果断行动”。乌克兰边境部署大量俄罗斯军队而导致紧张局势加剧的情况下，他重申支持乌克兰的主权和领土完整。
+作者：纽约香草山健身部 – 韵琴
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+我是听到共产党建国以来，残害了近一亿中国人，让我醒悟的。这次听了郭先生的直播，还是让我非常震撼，直击心灵。
 
-美国和俄罗斯将在1月9日至10日举行的战略稳定对话上讨论乌克兰局势。北大西洋公约组织（NATO）也将于1月12日与俄罗斯举行会议，美国、俄罗斯和欧洲国家为成员的全欧洲安全与合作组织（OSCE）也计划于11月13日举行会谈。
+追根溯源，中国人没有顾忌的吃法，最主要还是当时饿死人最多的二广地区、四川、河南……当人在极度饥饿，濒临死亡的时候，是没有人性可言的。中国人的撒谎、不诚实，是中国共产党的一贯作风，在这样的环境中，中国人很难不随波逐流。在这样的体制下的中国人，能有什么尊严可言？！
 
-据白宫称，两位领导人表示支持通过外交努力来平息局势。拜登强调，没有乌克兰参加的会议，不可能做出关于乌克兰的任何决定。
+![打破枷锁| 灵命日粮简体中文网站](https://d626yq9e83zk1.cloudfront.net/files/2018/04/30-770x425.jpg)
 
-信息源：[バイデン氏、ロシアが侵攻なら「断固対応」 ウクライナ首脳と協議 (msn.com)](https://www.msn.com/ja-jp/news/world/%E3%83%90%E3%82%A4%E3%83%87%E3%83%B3%E6%B0%8F-%E3%83%AD%E3%82%B7%E3%82%A2%E3%81%8C%E4%BE%B5%E6%94%BB%E3%81%AA%E3%82%89-%E6%96%AD%E5%9B%BA%E5%AF%BE%E5%BF%9C-%E3%82%A6%E3%82%AF%E3%83%A9%E3%82%A4%E3%83%8A%E9%A6%96%E8%84%B3%E3%81%A8%E5%8D%94%E8%AD%B0/ar-AASmWKW?ocid=msedgntp)
+我认为“富贵思淫欲”的另一种解释是，在人有了一定的经济基础，生活富足，没有生活压力，有更多时间的时候，才会有精神上的升华，对生活品质有更高的追求。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+美国等西方国家就达到了这样的水平。
+
+只有推翻中共这个邪恶的统治，中国人才不会被奴役。中国人只有在自己的国家站起来，才能在世界上被尊重！
+
+期待早日灭共，当新中国联邦的旗帜在中华大地飘扬的时候，中国人在自己的国家，一人一票选出自己的政府。
+
+当中国人真正做到自己当家作主的时候，我相信会有一天，我们新中国联邦人，无论走到世界任何地方，都会骄傲的说—我是新中国联邦人！
+
+![](https://cdn.discordapp.com/attachments/873743101305430037/926527191443972196/2c3ff12a-1aad-413c-bcbf-f68f4a054055.jpg)
+
+**校对/发稿：童谣**
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
