--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,19 +1,25 @@
 ---
-title: 美国国防部长中共病毒检测呈阳性
+title: 山东法院“不能仅以出轨为由请求离婚”民间炸锅”
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1816978/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1817047/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-119.png)[图片来源](https://news.yahoo.co.jp/articles/23767bd5af5ac05be811f1a07011f2f0e3aa3e1e)
-1月3日Q电视新闻消息：美国国防部长约翰-奥斯汀2日宣布，他的中共病毒(新冠病毒)检测结果呈阳性，目前尚属轻微症状。
+撰稿/配图：东京樱花团/Ob
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-124.png)
+看中国2022年1月3日讯，山东省最高法院2日发表文章，称“不能仅以出轨为理由请求离婚”，并指出轨并不是中共国《民法典》离婚的法定条件。文章引发民间争议，律师认为此说法很“荒谬”。
 
-国防部长约翰-奥斯汀是自己亲自发布的这一消息，他说2日在家中出现轻微症状后，做了病毒检测，其结果呈阳性。他还说，他与拜登的最后一次接触是在上个月21日，那天早上他的检测的结果是阴性。
+大陆媒体报导，山东省最高法院2022年1月2日在发表一篇名为《不能仅以“出轨”为理由，请求离婚》的文章，文章指中国最高法院出台《民法典·婚姻家庭编》，根据司法解释，“虽然出轨婚外异性，但是没有长期、稳定的共同居住，就不能认定为同居行为，就不能以此作为起诉离婚的理由，更不能以此作为要求离婚损害赔偿的条件”。
 
-为此，他将开始为期五天的家庭隔离。但可以在网上参加必要的会议，并将保留其作为国防部长的权力。
+文中还续称，“也就是你抓到你的配偶出去和别的异性开房证据，但这不属于长期共同居住，不能以此要求离婚”，又指“你拍到配偶与他人在外租房照片，但是不能是一次两次，必须是长期居住的证据，不然也不属于‘同居’”。例如，宾馆开房的证据就不属于“同居”，因为宾馆是临时性场所，不属于共同居住；拍到配偶与他人牵手逛街也不能证明是“同居”；拍到配偶与他人在外租房照片，必须有长期居住的证据，不然也不属于“同居”。
 
-信息来源：[米・国防長官が新型コロナ陽性　軽い症状（日本テレビ系（NNN）） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/23767bd5af5ac05be811f1a07011f2f0e3aa3e1e)
+相关文章引来民间不小争议，并一度冲上微博热搜话题，但原文目前已遭删除。 对此，北京婚姻家事律师信金国在其微博发文称，“如果按照该作者的说法，那另一方就可以明目张胆地出轨，这不是欺负人吗？对方都出轨了还不能要求离婚？可见这种说法多么荒谬”。信金国指出，中共国《民法典》规定了5种法定离婚情形，包含“重婚或者与他人同居”、“实施家庭暴力或者虐待、遗弃家庭成员”、“有赌博、吸毒等恶习屡教不改”、“因感情不和分居满二年”以及“其他导致夫妻感情破裂的情形”。信金国说，如果配偶只是偶尔通奸，被认定为一般意义上的“出轨”，那初次起诉离婚，法院确实可能不判离；但若配偶出轨情形严重，已经对夫妻感情造成严重伤害，达到感情破裂的程度，法院仍可能依“其他导致夫妻感情破裂的情形”判决离婚。
 
-*校对：东京樱花团/喜马拉雅的微尘
+对于这种说法，中国网友表示不能接受，纷纷质疑“配偶出轨，我甘愿被绿？”、“重新定义‘出轨’，出了轨，还能继续在轨道上行驶？好家伙，合着这是‘双轨’或‘多轨’？”、“出轨了还不够？想离婚还要被对方家暴才批准？”也有网友感叹，“虽然控制了离婚率，但是出轨就是最低防线破了”、“国家对于人口增长的问题很焦虑”、“看来中国法律就是男盗女娼的中共官员们的挡箭牌”、“过几年上头一句话，风向又变了。跟当年的计划生育和现在的只有三胎好，是一个意思”。
+
+法律条纹的制定未必尽善尽美，有所不合理也属正常，但是法律的“异样”解读才最可怕。官员的任性随意，根据自己意图强意解读法律条文，让法律沦为官员统治的工具才是致命伤害，这严重的伤害到法律条文的严肃性和可延续性。法律条文的制定是有严格程序的，法律条文的解释更不能随意更改。中共官员自持“才高八斗”，根据自己需要随意解读，却忽视了法律的“严肃性”才是法律之根本，共产主义“功利主义”法律观对社会的危害不浅。
+
+消息来源：[山东法院“不能仅以出轨为由请求离婚”民间炸锅(图)](https://m.secretchina.com/news/gb/2022/01/03/994023.html)
+
+*校对：东京樱花团/知了知了
 发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
