--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,41 +1,51 @@
 ---
-title: 牙买加银行报告数字货币试点成功
+title: 报告：超过95%的“奥米克戎”病例发生在接种疫苗的人群中
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1816962/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1817031/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+![](https://assets.gnews.org/wp-content/uploads/2022/01/48D3633D-4ED8-4F2E-8628-BDB317D06625_w1023_r1_s17.jpg)资料图
+《国家脉动》12月31日报道,根据联邦政府的一份新的报告，在德国，超过95%的奥米克戎（Omicron）新冠变种病毒感染病例，发生在完全接种疫苗的人身上。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/The-Bank-of-Jamaica.jpg)
+这篇研究报告（由德国机构 “罗伯特·科赫研究所-Robert Koch Institute”于12月30日发表），包括4,206名感染了奥米克戎最新变种病毒者的疫苗接种状况信息。
+
+在这项研究中，报告感染奥米克戎变种病毒的4020人（相当于总病例的95.6%），至少接受了两剂新冠病毒COVID-19疫苗。在奥米克戎阳性群体中，28%的人已接受了第三针或“加强 ”针。
+
+在整个样本中，只有186名感染奥米克戎变种病毒的人没有接种疫苗，这表明接种疫苗的人感染COVID-19病毒变体的可能性是21倍以上。
+
+12月14日，《国家脉动》宣布COVID-19的疫情，在世界范围内成为“接种了疫苗的大流行病”。
+
+罗伯特·科赫研究所的报告还记录了近7000名“米克戎变种病毒检测呈阳性的人的症状，大多数人几乎没有经历任何不良反应。
+
+“对6788个病例，提供了有关症状的信息。其中大部分没有报告症状或症状轻微。124名患者住院治疗，4人死亡”。
+
+这些数据（似乎表明疫苗在防止感染奥米克戎变种病毒方面没有任何优势），是随着制药公司在美国的游说工作，无论在财政还是雇用人员方面达到创纪录高水平的结果。
+
+在批评了包括Facebook在内的社交媒体平台以及路透社等媒体，对COVID-19疫苗的副作用和不良反应的报告者言论进行严厉审查的同时，《国家脉动》还披露了制药巨头辉瑞公司与这些社交媒体有着利益瓜葛。
+
+该报告还跟踪了（包括纽约市和华盛顿特区在内的）许多城市，推出了疫苗强制令，以防止奥米克戎变种病毒的传播。尽管法院阻止了这项措施，但拜登政府仍然在推行联邦疫苗强制令，并曾提出，要求所有乘坐飞机的国内旅行者都要接种疫苗的可能性。
+
+简评：
+
+圣诞节后“奥米克戎”病毒在全球蔓延。在北美的感染病例甚至达到了疫情以来的峰值，而且没有减轻的趋势。
+
+这篇报道有强有力的数据表明，疫苗在防止感染“奥米克戎”变种病毒方面没有任何优势。而且指出疫苗的推进是疫苗公司和政府、媒体之间的利益交换。再一次证实了爆料革命在疫情之初所警示大家的，疫苗没用，注射疫苗将会带来更大灾难的真实性。跟随爆料革命不仅保命保财，更能开智健心。
+
+翻译/简评：Helen
+
+PR：Julia Win
+
+原文链接：[https://thenationalpulse.com/2021/12/31/vaccinated-21-times-more-likely-to-get-omicron/](https://thenationalpulse.com/2021/12/31/vaccinated-21-times-more-likely-to-get-omicron/)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
- 
-图片来源：portal.boj.org.jm
+编辑：【英国伦敦喜庄园编辑部】
 
-
-#### 编译：小红帽
-
-根据The Gleaner1月2日报道， **牙买加央行（BOJ）表示，尽管只有一家金融机构采用央行数字货币(CBDC)，但其推出尚未有品牌的央行数字货币的试运行取得了成功。**
-
-牙买加国家商业银行（NCB）是唯一一家准备在中央银行指定的，以今年年底为期测试数字支付系统的支付服务或钱包提供商。该系统向已获准的金融实体开放中央银行所谓的新的、技术驱动的金融解决方案的沙箱。
-
-牙买加国家商业银行使用其Lynk支付平台测试了该系统。该系统由其新成立的子公司TFOB Limited提供。
-
-“国家商业银行根据其在沙盒方面的经验，与牙买加央行一起测试了使用央行数字货币解决方案提供的服务范围。试点项目的成功取决于央行数字货币以及随之而来的技术解决方案能否在牙买加成功实施，”牙买加央行周五在一份声明中表示。
-
-根据12月31日星期五结束的试点，牙买加央行在8月份铸造了约2.3亿美元的数字货币，目的是向存款机构和授权支付服务提供商发行央行数字货币。央行将其工作人员纳入央行数字货币试点，并于8月在内部发行了价值100万美元的货币。另外价值500万美元的债券于10月发行给牙买加国家商业银行。
-
-央行没有提供有关大规模推出数字货币的时间表的细节，但据信几家较小的金融科技提供商在排队等待牙买加央行批准，以便在今年成为央行数字货币钱包提供商。
-
-新闻来源：[BOJ reports digital currency pilot success | Business | Jamaica Gleaner (jamaica-gleaner.com)](https://jamaica-gleaner.com/article/business/20220102/boj-reports-digital-currency-pilot-success)
-
-***发布：小红帽***
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
