--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,23 +1,23 @@
 ---
-title: “疫情恐慌的持续”与“3年后完工的建厂投资”
+title: 彼得-麦卡洛博士认为VAERS的报告数量应该是现在的4-5倍
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1816944/)
+`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1817026/)
 
-编译：致敬香港！
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-14.png)
-图片来源： 网络图片合成
+这就是VAERS疫苗不良反应报告系统。我们知道在该系统中，这些（数据）是由CDC认证的。因此，报告数据每周更新一次，由CDC认证。这意味着所有这些（不良反应）事件是真实发生的，因为这些报告开始只被当作临时数据，然后被认证核实。
 
-据“美国思想家”网（American Thinker）12月31日文章揭露，滋养于人们对PCR核酸检测法的盲信、及各方对病毒新变种不断的虚夸报告，新冠疫情的恐慌这厢持续延绵；而那厢，政府签署投资1.4亿美元、2024年底完工“新冠检测试纸”材料厂，笔墨未干。
+Meissner博士及其同事在COVID之前的一篇论文中告诉我们，这些（不良反应）报告中约有85%-86% 是由医生、护士或其他医护人员以及制药商完成的。只有约14%-15%是由病人自己提交的。
 
-虚夸的疫情报道长期霸占新闻头条，一方面源于人们对病毒检测的盲信， “PCR核酸检测”至今为止作为主流的新冠病毒检测法，不仅会产生大量的假阳病例，而且无法辨别新冠病毒和普通流感病毒，导致染病数据长期被大幅虚计。另一方面，媒体推波助澜、引发人们对奥米克戎新变种产生恐慌。实际上，奥米克戎不仅引发症状基本非常轻微、和普通感冒很难区分；而且传染性可能也被高估，美国疾控中心（CDC）18日报告显示一周新增的新冠病例中73%为奥米克戎，随即25日大幅纠正该比例成23%。但数据逐渐表明的一个不容忽视的趋势是，奥米克戎更容易感染新冠疫苗接种者。
+他们是如何得出那个漏报比例的？哈佛大学的一项研究表明漏报率很高，报告率仅为1%，也就是说他们只报告了1%，对吗？哈佛大学的研究是针对HPV也就是人乳头瘤病毒疫苗的。
 
-让恐慌持续，政府也许非常明白其必要性。拜登政府刚与德国默克旗下的生命科学业务子公司“密理博·西格玛”（MilliporeSigma）签订了一项价值1.37亿美元的建厂协议，生产硝酸纤维素膜（nitrocellulose membrane）用于新冠自检试剂盒，预计月产量可供应生产8330万套产品，最早可于2024年底在威斯康星州完工。
+这就是全部吗？是的。问题是，大人和孩子们都打了疫苗，所以（漏报）可能是严重的，他们可能严重的报告不足。COVID的人都很紧张，对吗？CMS（医疗保险和医疗补助服务中心）的数据基本上体现了接种疫苗的人数，我们知道CMS服务对象所占美国总人口的比例，所以通过推断可以计算出真正的数字是什么。
 
-**新闻来源：**
+因此，相较于VAERS显示的数据，（疫苗不良反应的）真实数字大约是45000，这就是我们如何能得到实际数据是（VAERS数据）4-5倍的原理。我们认为这是一个合理的数字。即（真实疫苗不良反应数据）是（VAERS数据）的4-5倍。
 
-1. [COVID testing has become ridiculous and even counterproductive](https://www.americanthinker.com/blog/2021/12/covid_testing_has_become_ridiculous_and_even_counterproductive.html)
-2. [Biden inks $137 million contract to boost supply of key material for COVID tests](https://www.yahoo.com/news/biden-inks-137-million-contract-220308052.html)
+素材：文倩
+翻译：Spirit
+字幕：米小乐
 
+编辑/发文：Kent
 
  
 
