--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,30 +1,21 @@
 ---
-title: 斯科特·约翰逊医生：我们必须要回到事情的本质上来，必须真正的为病人服务
+title: 今年日本著名的年度箱根站接力马拉松大赛异常冷清
 ---
-`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1816917/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1817002/)
 
-嗨，我是斯科特·约翰逊医生。我们到底做了什么？我刚刚完成了对一位80多岁患者的上门问诊。他（似乎）做了应该做的一切。他在今年春天接种了两针疫苗，并在今年秋天接种了加强针。大约3-4周前，我在办公室看到他时，他体内的刺突蛋白抗体值大于800。（不幸的是）他现在感染了新冠病毒，他的妻子在上周感染了新冠病毒。他现在的情况很不好。我也不觉得让他来到我的办公室是一个正确的选择。所以，还是我去他那里（问诊）更好一些。我给他开了一些药，之后会密切观察（他的病情）。
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-122.png)[图片来源](https://www.msn.com/ja-jp/sports/tokyogorin-2020/%E6%9C%80%E5%BC%B7%E3%81%AE%E9%9D%92%E5%AD%A6%E5%A4%A7-%EF%BC%92%E5%B9%B4%E3%81%B6%E3%82%8A%EF%BC%96%E5%BA%A6%E7%9B%AE%E7%B7%8F%E5%90%88%EF%BD%96-%E7%B7%8F%E5%90%88%E3%81%A7%E5%A4%A7%E4%BC%9A%E6%96%B0-%E5%BE%A9%E8%B7%AF-%EF%BC%91%EF%BC%90%E5%8C%BA%E3%82%82%E6%96%B0-%E5%8E%9F%E7%9B%A3%E7%9D%A3%E9%9B%84%E3%81%9F%E3%81%91%E3%81%B3/ar-AASn9Iv?ocid=msedgntp)视频系笔者录制
+日本每年都会在新年2日～3日举办箱根站接力马拉松大赛，今年是第98次。这个赛事，在日本已经深入人心，成为日本国民过年气氛中不可缺少的一项。
 
-昨天我做了一个上门服务，一位50岁左右的女性患者对一些情况很生气。在她需要帮助的时候，那些原本应该帮助她的医生和工作人员却不在她身边。所以，（还是）我去她家更容易，因为她想远离（医院）急诊室。
+笔者有幸住在日本各大马拉松赛事的必经线路旁，每年可以站在阳台上观看诸如举世闻名的东京马拉松等马拉松大赛。居高临下，放眼望去，马拉松选手们奋力驰骋，路边站满助威的人群，马拉松经过的地方，还会组织当地啦啦队为马拉松选手们助威。
 
-在过去的72小时里，有很多议员和护士打电话给我，请求我参与明尼苏达州的医院运作和相关的政策（实施或拟定）。很多时候，患者们感到是被囚禁在医院，他们的家人也觉得无能为力。他们（对此）很抓狂，因为在医院里，即使你愿意（接受），可供患者们的选择仍然是非常有限的。患者们真的惊慌失措，因为没有医生在真正为他们服务。医患关系在这次中共病毒大流行期间，并没有经受住时间的考验。
+可是今年，笔者站在阳台上看到的是冷冷清清的马路，稀稀两两跑过的选手，路旁观看的人也远远少于往年。
 
-昨晚，我接诊了一个病人，他23 岁的侄子上吊自杀。这个23岁年轻人的两个好朋友也在（他自杀前）前几个月自杀了。
+中共病毒(新冠病毒Covid-19)改变了人们的工作和生活，夺走了人们的快乐，不知这样的日子还会持续多久?期待有更多人醒来，奋起，像新中国联邦人那样传递真相，唤醒世界，早日推翻CCP，还世界一片阳光！期待站在自家阳台看马拉松的日子早日回来！
 
-我们现在看到CDC的表述完全不合逻辑，是的，这就是我们看到的。（比如）隔离期限从10天减少到5天。这是基于什么科学？我们看到NFL的球员（即使感染了新冠病毒）如果没有症状就可以回去比赛。我们看到，如果你和（病毒感染者）接触过，如果你在第五天没有症状，你就可以去工作，只是要戴五天的口罩。
-
-我们是不是到了该反思一下我们到底做了什么的时候了？我们是否经过深思熟虑？我们真的让医生和病人尽其所能（做专业的事情）了吗？我们是不是疯了，让官僚们依据他们的喜好为所欲？
-
-我刚看完的这个病人体内有强大的抗体，非常强大的抗体，但他在接种加强剂后不到两个月就感染了新冠病毒。我们必须要回到事情的本质上来，这就是医患关系。我们必须真正的为我们的病人服务。我们到底做了什么？
-
-素材：文倩
-
-翻译：维京商人
-
-字幕：文雅
-
-编辑/发文：Kent
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
