--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,102 +1,38 @@
 ---
-title: “最差媒体年终评点”
+title: 秘翻在线 :CDC撤回对 PCR 测试协议的紧急使用授权
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1817301/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1817352/)
 
-编译：The world
+撰稿:牛小妹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/AZ-1.jpg)
+图片来源：网路
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-03-100411.jpg)图片来源：youtube.com
+**CDC不再建议PCR检测做为隔离的依据**
 
-欢迎来到第一届“年度媒体年终回顾”，包括2021年主流媒体——最愚蠢、最糟糕、最尴尬和最政治正确的颁奖晚会。
+根据《零对冲》的报导，12月29日，美国疾病预防控制中心(CDC)负责人罗谢尔·瓦伦斯基（Rochelle Walensky）承认，无法相信PCR测试是完全可靠的，并宣布将在 2022 年撤回 PCR 测试协议的紧急使用授权。”CDC 鼓励实验室考虑采用多路复用方法，以促进冠状病毒(中共病毒)和流感病毒的检测和区分，”CDC强调。
 
-我们今天从第一个奖项开始。
+根据瓦伦斯基的说法，PCR测试通常会产生大量的假阳性，甚至可以在感染后长达12周内仍维持假阳性，他警告说：”如果我们依赖PCR，我们将让人们隔离很长时间。”
 
-科莫兄弟中最傻的是哪一个？
+正如评论员约西·盖斯特纳(Yossi Gestetner)所指出的那样，”这意味着在过去将近两年的时间，人们因为他们的检测结果呈现假阳性而被迫在家隔离，丧失工作或者就学的机会，原因都是因为过度敏感的PCR的假阳性数据。”
 
-我会告诉你是前纽约州长安德鲁-科莫，在这些困难时期，这是多么大的荣誉和惊喜啊。我之所以要把奖颁给安德鲁-科莫，这是因为一年半前，安德鲁-科莫差点被当成美国总统了。现在安德鲁-科莫将或许能够成为他所在牢房的总统。也许吧。
+《纽约时报》在 2020 年 8 月强调了PCR 检测的敏感性问题，在对来自马萨诸塞州、纽约州和内华达州的循环阈值 (CT) 检测数据进行审查时，发现”多达 90% 的检测呈阳性的人几乎没有携带任何病毒。”
 
-下一个奖项是“最佳谎言奖”，今年的赢家是，NBC的凯利-斯塔维斯，这位记者在听到人们拼命呐喊“fuck 乔-拜登”的时候，不知为何把它变成了“我们走吧，布兰登（let’s go, Brandon.）”。
+根据新的 CDC 指南，冠状病毒(中共病毒)检测呈阳性但无症状的人可以在五天取消隔离，无需再次检测，并在接下来的五天内戴口罩。
 
-今年为了纪念获奖者，这个奖项被重新命名为“let’s Go Brandon奖”。因为这非常令人印象深刻。
+实际上CDC 早在 2021 年 7 月就知道PCR测试无效，在经过 22 次的政治民意调查结果不佳之后，CDC开始做政策改变，企图与冠状病毒(中共病毒)错误的政策保持距离
 
-对于深夜脱口秀的失败者们，我们将公布最难堪、最猥琐的深夜主持人。哦，这里的竞争很激烈，这个类别的候选人，今年也是堆积如山。
+**PCR 测试不准确、不科学、不便宜**
 
-我们有试图和乔-拜登一起笑着度过痛苦的吉米-法伦。
+PCR 测试完全无法区分冠状病毒(中共病毒COVID-19) 和流感，意味着中共病毒(COVID-19)大流行病例被大大高估，这也解释料流感病例为什么创纪录的低下。
 
-比如吉米-法伦就曾在自己的节目中发言说：“我想说的是，我打了疫苗。我打了疫苗加强剂。你想让我干什么我就干什么。如果你想让我穿红裤子，我就穿红裤子。”
+由于PCR 测试”高灵敏度和特异性”，导致大量的假阳性，检测到的可能是已死亡的病毒或者其他不明颗粒，绝大多数COVID-19测试都没有作用，因为不能准确地确定任何东西。大多数的PCR测试（包括美国和国外绝大多数的测试方法）都以太高的灵敏度（称为具有太高的周期阈值CT）进行校准，并且识别出惊人的高误报数量。
 
-我们还有斯蒂芬-科尔伯特，他把他的节目变成了为了美国民主党社会主义而遭受各种嘲讽。
+FDA 告诉《纽约时报》，”PCR制造商和实验室设定了自己认定的CT 水平。 “在FDA网站上提供有关PCR的相关说明提到，”该测试是否获得 FDA 批准或批准？”FDA否定批准，并称此测试尚未获得美国FDA批准，只是紧急使用通知，以满足某些标准的授权 (EUA)。
 
-萨曼莎-B，我想也算在这一类。她仍然被认为是一个深夜主持人，尽管从来没有人看过她的节目。
+至于是甚么样的标准? FDA让人民自己猜想。
 
-无法活在现实世界的特雷弗-诺亚，我相信也是属于这一类的。
+新闻来源：[FDA Maintains PCR Tests Are “Gold Standard” Despite CDC Dropping Over Positive Results ‘Up To 12 Weeks’](http://FDA%20Maintains%20PCR%20Tests%20Are%20&quot;Gold%20Standard&quot;%20Despite%20CDC%20Dropping%20Over%20Positive%20Results%20'Up%20To%2012%20Weeks')
 
-吉米-基梅尔我怎么能忘记他呢？吉米-基梅尔，深夜电视的“白左教皇”。
-
-我必须要把这个大奖交给科尔伯特，这在这个奖项中是一个遗憾，因为吉米-基梅尔每年都能在这个类别中获得提名。
-
-最失败奖将发给在网上发布了最失败言论的公司和记者。
-
-Nicole-Hanjones今年在推特上发帖说，美国在第二次世界大战期间用核武器轰炸了日本，因为我们想向世界上的其他国家证明，我们在曼哈顿项目上的花费是明智的。
-
-这是今年任何人所能提出的最愚蠢的历史论点，他说美国在长崎和广岛投下了原子弹的原因是因为沉没成本谬论，他的意思是，“哦，我们有这个炸弹在身边。我想你必须用它做一些事情，否则就浪费了。所以无缘无故地用核弹炸死5万日本人吧”。
-
-下一个奖项是“最明目张胆奖”。我想把它交给，试图把凯尔-瑞特豪斯的审判变成一个关于种族主义的人。他们的目的很明显。只不过凯尔-瑞特豪斯是白人。他射杀的人也都是白人。（所以这根本不是种族矛盾）
-
-最具破坏力的假新闻。在过去的四年，肯定是“通俄门”。
-
-但今年我认为它是，媒体对COVID的虚假宣传。比如他们每天的头条新闻都是关于“Omicron有多危险”。而同时，数据显示，到目前为止，在英国，只有一个人，明确的死于Omicron，这意味着OJ-辛普森谋杀的人比Omicron还要多。
-
-媒体对COVID的报道必须成为最具破坏力的新闻，而它不仅仅是今年最具破坏性的报道。这是我一生中媒体对国家损害最大的报道，远远超过其他事情。
-
-下一个类别是“2021年栽赃嫁祸终身成就奖”。这又是一个竞争激烈的类别。我将选择一个对于终身成就奖来说有点年轻，但在这一点上确实表现出真正的栽赃嫁祸的精神，超过了电视上的任何其他人。
-
-当然，他就是在CNN的布莱恩-斯特尔特。他的节目名称是“负责任信息来源”。
-
-他的整个节目应该是致力于诚实的媒体报道。而他所做的一切只是在表明，他只想去重复民主党的谈话要点，掩盖发生在自己单位中的丑闻，同时对福克斯发牢骚。他在这方面所做的工作令人震惊，所以真的要向他致敬，为布莱恩-斯泰尔顿起立鼓掌，并向即将退休的布莱恩-威廉姆斯表示敬意。为了纪念他之前的表现，我们将给他一架不存在的直升飞机。（布莱恩-威廉姆斯撒谎说自己在2003年伊拉克战争中乘坐的直升机被击落后不得不紧急迫降）。
-
-下一个类别——价格最贵的电视节目主持人。乔治-斯特凡诺普洛斯的年薪大约为1500万美元，这对于一个从未表现出任何做事能力的人来说是不可思议的。
-
-在黑暗中死去，最堕落的新闻品牌。
-
-我认为是CNN。我之所以说CNN是最堕落的新闻品牌，是因为我不认为CNN有任何原创报道了，他们以前在现场做新闻报道和原创报道方面是他们成名的原因。
-
-时代变了。现在他们基本上就只是MSNBC。伪装成客观新闻发表评论。
-
-纽约时报是一份垃圾报纸，但他们确实有优秀的记者，有时会为他们创作，而且他们确实花了非常多的钱来爆出非常多的新闻。尽管他们会把重要的新闻都隐藏在报纸的第12页。因此，你必须深入寻找这些故事，以发现真正的大标题应该是什么。但我不认为他们以与CNN相当的方式贬低了自己的品牌。你现在很难找到认为CNN是诚实报道新闻的人。但我认为你仍然可以找到认为《纽约时报》做了一些体面的报道的人。
-
-下一个是“饥饿的北极熊奖”，表彰气候报道方面的成就。我将把这个奖颁给《纽约时报》。
-
-《纽约时报》做了一个简编，说世界在燃烧。世界上所有的地区都在燃烧。《纽约时报》告诉我事情会有多艰难，情况会有多糟，而我确信《纽约时报》的所有的富有的顾客都投资了海滩上的棕榈滩豪宅。所以他们显然不那么担心全球变暖，
-
-好了，现在我们进入“年终大奖”，因为我们已经到了节目的尾声。
-
-最差的主持人——这个类别的竞争实在是太激烈了。我们不得不扩大这个类别。它曾经是五个。现在是十个。而我认为，只有一个主持人真正适合这个最差的主持人奖，因为事实证明，她是最差的主持人。她根本就不适合当主持人。令人无法观看的无法直视的萨曼莎-比。
-
-萨曼莎-B没有任何值得称道的品质。如果你是CNN的真正的信徒，也许你会发现唐-莱蒙斯向你推销种族问题在某种程度上是有意思的。对于乔伊-里德，我想，如果你站在她的立场上，你会发现她有点狂野、疯狂，在某种程度上有品牌的娱乐性。
-
-而萨曼莎-B是一个可怕的、没有天赋的白人女士，她已经很多年没有说过一件有趣的事情了，她的幽默品牌显然只是照抄“艾米丽名单网站”上的东西，然后用枪口逼着她的观众发笑。她就是一个恐怖分子。
-
-接下来是最糟糕的节目。
-
-它是《周六晚间直播现场》，《周六晚间直播现场》已经变得绝对无法直视。他们就像你在当地联合大学的大学室友，他们嗑药后只看雅虎新闻的头条。于是他们就以最明显、最可笑的方式互相参考，《周六晚间直播现场》毁掉了自己，比如那段一位女士打扮成小丑的片段。
-
-那个发牢骚的小丑，说小丑有权力堕胎，流产是很重要的。她的原话是“我在23岁生日的前一天做了流产”。
-
-最有可能在未来一年里哭泣的，是所有的主流媒体。
-
-2022年的选举之夜将血洗民主党人。那将是《落水狗》的结局。这将是《电梯门打开时的闪耀》，将是到处都是鲜血。2022年将会很壮观。那将是美妙的。
-
-这就是媒体机构中绝对最差者的名单。在下面评论中，让我们知道你最喜欢的奖项。让我们知道我们错过的任何奖项。
-
-新闻来源：[youtube.com][Ben Shapiro Breaks Down the Top Mainstream Media Fails of 2021](https://www.youtube.com/watch?v=3T5De2S2luw)
-
-* * *
-
-*审核：Aries的星
-校对：阿伯塔
-发布：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
