--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,25 +1,17 @@
 ---
-title: 中共公布与拉美国家的合作计划以扩大其影响力
+title: 29岁年轻人接种两剂新冠疫苗后仍染新冠去世
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1817277/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/1817318/)
 
-#### 翻译/撰稿：zzballack
+#### 翻译         意大利达芬奇农场                小白鸽
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Schermata-2022-01-02-alle-22.09.26.png)图片来源：今日新闻
+一位叫阿德利亚诺•伊尔皮诺的意大利年轻人，经历了数小时的痛苦之后， 死在了他的卧室。他母亲走进卧室查看儿子情况时，发现了他毫无生命迹象的尸体，而仅在几小时之前儿子曾向她抱怨不舒服，发低烧。救护车到达之后，核实了年轻人的死因， 发现他死于心脏骤停。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-3-1.jpg)图片来源：中新网
-据《华盛顿观察家报》（Washington Examiner）1月2日报道，在与美国最近的邻国进行了新一轮的峰会后，中共官员公布了与拉美国家的“合作行动计划”，这相当于一个影响该地区并威胁美国利益的“全面”计划。
+法医也随宪兵到达现场，进行了检测，发现年轻人死于新冠。这位年轻人已经打了两剂疫苗，最后一剂疫苗是去年七月注射的， 他正准备预定第三剂疫苗。
 
-去年12月3日举行的中国—拉美和加勒比国家共同体（CELAC）论坛最终通过了一项计划，不仅要增强经济联系，而且要加强“政治和安全合作”，同时深化中共在高科技领域的参与度—从网络空间和人工智能到“空间科学、卫星数据共享、卫星应用、地面基础设施建设”，甚至包括核能。CELAC于 2011年在已故委内瑞拉总统乌戈·查韦斯 (Hugo Chávez) 的主持下成立。查韦斯当时希望有一个与美洲国家组织（OAS）相抗衡的场所，并挑战美国在拉丁美洲的影响力。现在它为中共总书记习近平提供了一个平台，以组建一个符合北京利益的、由左派和独裁领导人组成的联盟。
+原文链接：https://www.today.it/citta/morto-ariano-irpino-tampone-positivo.html
 
-前美国国务院政策规划人员、美国陆军战争学院（U.S. Army War College）的研究教授埃文·埃利斯（Evan Ellis）说：“尽管中共没有说‘我们想接管拉丁美洲’，但他们明确地提出了一个多维度的参与战略。如果成功，这将大大扩大他们的影响力，并对美国造成巨大的情报隐患。”
-
-参议员马尔科·鲁比奥 (Marco Rubio)说：“中共政府正在积极寻求加强其在整个西半球的关系，特别是与反美成员的关系。北京正在寻求在各个领域超越美国，我们必须认真对待这一威胁。”
-
-美洲国家尼加拉瓜去年12月9日宣布与台湾断交，转而与中共建立外交关系。鲁比奥12月20日在一篇专栏文章中对此评论说：“奥尔特加-穆里略（Ortega-Murillo）政权认为中共是比美国更好的意识形态盟友，北京的种族灭绝政权也不在乎其一长串的罪行和侵犯人权行为。奥尔特加还希望中共继续提供资金，在尼加拉瓜修建一条从大西洋到太平洋的运河，然后中共解放军的军舰可以通过这条运河进入加勒比地区。”
-
-美国传统基金会 (The Heritage Foundation) 的研究助理马特奥·海达尔（Mateo Haydar）说：“中共绝对有成为拉丁美洲主导力量的野心。挑战是全面的，而且那里绝对有安全和军事利益。这种威胁正在增长，它是一种与我们曾看到的苏联威胁截然不同的威胁。”
-
-新闻来源：[China unveils plan to ‘take over’ Latin America](https://www.washingtonexaminer.com/restoring-america/patriotism-unity/defense-national-security/china-unveils-plan-to-take-over-latin-america)
+编辑、上传                  Xiao  baige
 
  
 
