--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,15 +1,19 @@
 ---
-title: 容忍共产党在中华大地肆虐是每个中国人的原罪,必须自救
+title: 西安疫苗灾难将在石家庄廊坊张家口承德江浙广州武汉重演
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1821041/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1821124/)
 
-**郭文贵先生**：就像中国人14亿人，人家美国真正的美国人都在问一句话：你为啥你中国人那么聪明，那么多什么Jack马、马化腾、王健林，是吧？郭文贵，你们那么多精英，怎么就被共产党蹂躏了七、八十年？这话很伤人心，我百分之一百地我认为，这是接受的。
+**郭文贵先生**：我再跟你说西安的疫情不是任何新的病毒，就是疫苗！就是疫苗！西安呐，西安这个城市很有邪的！西安和东部和中部的人，文化完全不一样。你但凡在西安、在这些地方，陕西这地方地过的人你能有感觉的。就是陕西这个地方和这个咱们山东、河南、河北人，包括江浙人是很不一样的文化，他们有那种所谓的当年卫都之后的那种“混不吝”（指：什么都不在乎），大秦的那什么“混不吝”啊。
 
-我们每个人，就现在，我们的每个人，都为今天中国发生的事情要感到可耻、悲哀。我们的家人和我们每个人，包括你们每个人，包括小王子，你说你这多年轻都算上，我们都是中国的罪人。我们怎么能容忍共产党在我们这块呆那么多年？邪恶到这么多年还继续让他邪恶。阿富汗的答案是一样的。
+而且敢吃、敢喝、敢做，听说西安所有的打的疫苗都属于特定的疫苗，山西的（口误，应为“陕西”，下同）的书记找的药厂特定的，最强的！大家记住疫苗里边有什么？有50克（疑口误：5微克，下面成分为10微克和25微克，按新闻报道西安当地接种疫苗为智飞疫苗，其抗原含量为25微克，为所有疫苗中最高）、100克、250克，记住啊，含量的。听说只有山西（陕西）定了是600万只第一期全是250克，第二次又订了1000万只全是250克。也就是山西（陕西）人和这个河南人，河南人嘛就是啥都可以糊弄，连艾滋病都可以糊弄，是吧！50克的打了两针。
 
-你不要指望着别人来救你，而且救你救一次还不行，得救一辈子！救得不好还不行，还得继续救。这就是非洲、巴基斯坦、阿富汗，是吧？这些国家的一个结果。我们中国人也基本都是这样，人家美国不给你搞贸易吧？不行。你就是，美国必须得跟我搞贸易，必须奴隶我、必须虐待我，人家美国欠你的吗？
+山西（陕西）人打了两针是500克，等于河南人打十针，这十针下去这人几乎就是、就所谓的热血症，而且是眼睛流血、鼻流血、耳朵流血，女性大流血，血流不止，男的肛门流血，可不是疽血热啊，大家记住啊！西安是七窍流血。很多孩子是耳朵往外流血，因为孩子的耳朵是最敏感的神经系统，耳朵流血，这是百分之百的！
 
-所以回答这个问题很简单，美国的安全和战略、经济的基本需要，和阿富汗现在即将触发的巨大的问题。阿富汗的就是干掉的这个总统叫什么来着？什么伊了？这哥们儿你没见过他，他家族腐败到什么程度？阿富汗百分之百的通信，被他女婿和他给控制着，百分之百的银行被他控制。他家里养着狮子、养着豹子，在美国、在迪拜、在欧洲，无数高级房产。你知道这个国家腐败到这个程度，你觉得要让美国大兵拿着钱、拿着枪保护你，腐败你，你在开什么玩笑？你的人民呢？
+现在肯定的确定，由此诞生的、它会造成病毒的变化，死亡将是不可想象了啊，不可想象了！现在整个山西（陕西）的医疗系统，山西三大医院系统啊，一个是我朋友，两个是我很好的朋友。我有绝对的信息，他们说医院里边这些天辞职的、走人的、病倒的，（百分之）40到50的人没了。而且整个山西（陕西）所有的像对待集中营式的管理，很有可能会延伸到中国的各部。
+
+你们知道下一个爆发地方在哪，知道吗？现在说到这里，我告诉大家，河北，河北。会从石家庄、廊坊、张家口冬奥会，然后到承德，再爆发又是江浙。就是春节啊，这个春节春运又是，又是那么，然后就是广州，武汉可能再次面临着重大的传染。
+
+这是共产党给人家放毒，这就是小时候给人家家——小时候我们跟人家打架，给人家房子点着一样，是吧。我有一天跟人家打架的时候，点人家房子去，喊“七哥加油，七哥加油”，点着了，拿那个玉米芯还蘸了油缠着，冲啊，一点着扔过去了，结果发现，还转着扔，一扔，扔我家来了，把我们家房子给烧了，让我爹把我揍一顿是吧。共产党现在就这样，喊呐，加油，扔到美帝国主义去，结果扔西安去，是吧。这火直接把自己家房子烧半拉，就这么简单的概念。
 
 字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
 
