--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,70 +1,26 @@
 ---
-title: 中共官员在新疆西藏玩奸小孩延长寿命扶持塔利班饿死百姓
+title: 中共公开宣布将在美国制造新的疫情风暴
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1820931/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1820956/)
 
-[https://gtv.org/video/id=61d2bf33dffab035958a31c9](https://gtv.org/video/id=61d2bf33dffab035958a31c9)
+央视新闻2022年1月2日报道：美国专家：未来几周美恐将刮起“疫情风暴”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-192.png)图片来源：新闻原文![](https://assets.gnews.org/wp-content/uploads/2022/01/image-193.png)
+**短评**：
 
-**郭文贵
-Miles Guo**
+新闻开头便是中国共产党的惯用混淆视听伎俩：“据美国媒体报道”、“美国多名医学专家警告称”。请问国际黑帮中国共产党：是哪家美国媒体报道的？完整报道的新闻视频在哪？为什么不敢直接把原视频放出来？为什么永远只是含糊其辞地凭空捏造“据外媒报道”、“据专家表示”？所谓美国多名医学专家具体叫什么名字？是根本不存在还是怕说出来被指认出被中国共产党收买并为中国共产党放毒杀人打掩护的罪行和证据？
 
-在新疆里边强奸、轮奸的那是多少孩子
-How many children were raped and gang-raped in Xinjiang at that time
+如果中国共产党的党媒央视新闻所说的“美国多名医学专家”确有其人，那么自然这几位“美国多名医学专家”是被中国共产党收买的。厉害呀，中国工产党。在自由民主的美国，用美国的美金，收买美国的所谓医学专家，在美国这片土地上，乱带美国人的节奏，为在美国放毒打毒疫苗打掩护，从而杀美国人，而且是成片成片地杀。厉害呀，中国共产党！美金可是全世界大部分国家认可流通的钱币，作为世界最强的美利坚合众国，都被中国共产党残害至此。那么，世界上还有哪个国家不会是美国的下场？其他国家的下场又会比美国惨多少个等级？
 
-都是小孩
-They were all children
+“美国过去7天平均日增中国共产党病毒的确诊病例超过38.6万例”！每条都是你我这样鲜活无价的生命，难道真的只会被当成一个统计数字？每条鲜活无价的生命背后也都是一个多彩无价的家庭。指数级传染的威胁下，你我谁能保证自己不被感染上？不论感染的几率是多少，对每个感染的人来说，那都是百分之百。人类啊，还要麻木地坐等中国共产党来谋杀吗？还要等多久呢？人类啊，不要问丧钟为谁而鸣，丧钟——为你而鸣。
 
-共产党在西藏、在新疆
-The CCP in Tibet and Xinjiang,
+文章观点仅代表作者，与Gnews 平台无关
 
-多少当官的到西藏到新疆叫什么..去干什么呀？
-what’s that called when most of the officials go there? What are they doing there?
+新闻链接：**[http://k.sina.com.cn/article\_3057540037\_b63e5bc502001cwth.html](http://k.sina.com.cn/article_3057540037_b63e5bc502001cwth.html)**
 
-叫修炼自己
-That’s called self-cultivate (in the evil way)
-
-专找当地的处女玩，处男玩，（目的是）让自己延长寿命
-They hunt for the local virgins and boys and rape them in order to extend themselves’ life
-
-那杀了多少人
-How many people have been killed for that
-
-你觉得现在阿富汗每时每刻在直播当中饿死的人
-The Afghanistan people are starve to death every second during our live broadcasts right now
-
-你觉得关键是谁（造成的）？
-Who do you think the key person is (for causing)?
-
-不就是共产党扶持的塔利班吗？
-No doubt, that’s the Taliban who supported by the CCP
-
-将近5000万人呢
-Nearly 50 million people
-
-2300到2500万人没饭
-23-25 million people have no food
-
-此时此刻5000万人98%的没饭吃
-At this moment, 98% of this 50 million people have no food
-
-就是（因为）共产党一念之差要给美国人要制造动乱
-because of a wrong decision that the CCP made which was creating turmoil for Americans
-
-* * *
-
-Date: 12/29/2021
-原视频标题: 中共官员在新疆西藏玩奸小孩延长寿命扶持塔利班饿死百姓
-The CCP officials rape Tibetan children in Xinjiang to prolong their lives and support the Taliban to starve people to death
-原视频日期：2021/12/29
-原视频链接: [**https://gettr.com/post/pl2zeh7633**](https://gettr.com/post/pl2zeh7633)
-任务编号：3373
-视频时间段 : 0:00-00:56
-英听校：洛杉矶盘古农场 – 郭班之樱
-翻译：洛杉矶盘古农场 – 郭班之樱
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场 – 天涯行
-审片：洛杉矶盘古农场 – 银龙
-发布：洛杉矶盘古农场 – 恩典
+素材：洛杉矶盘古农场 — 归去来兮
+评论：洛杉矶盘古农场 — 归去来兮
+编审：洛杉矶盘古农场 — 心照
+发布：洛杉矶盘古农场 — 恩典
 [![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
 洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
