--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,40 +1,46 @@
 ---
-title: 澳大利亚与东北亚日益紧密的联系
+title: 中国外交部表示：将继续推进核武库“现代化”
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820859/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1820913/)
 
-编译：七叶之芒
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-04-103453.jpg)图片来源：thediplomat.com
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/中国核武库.jpg)
 
-在过去的两年里，由于COVID-19大流行病，国家和官方访问显然受到限制。除了6月在英国举行的20国集团这样的重要峰会外，总统和总理们发现他们大多被关在家里。然而，随着世界进入一个与COVID-19共存的阶段，而不是寻求消除它，这些访问的正常化正在恢复。随着这种正常化，关注谁去哪里可以揭示一个国家的优先事项。
 
-12月中旬，韩国总统文在寅前往澳大利亚与总理斯科特-莫里森会面，而在1月的第一周，日本首相岸田文雄也将这样做。鉴于东北亚地区是澳大利亚大部分贸易的所在地，而且堪培拉对中共国在更广泛的印度-太平洋地区的强硬态度仍然感到不安，很明显，对澳大利亚来说，该地区是首要关注的。
+ 
+图片来源：路透社
 
-文在寅和岸田的访问也表明，这两个国家都将澳大利亚视为重要的战略伙伴。它们与澳大利亚的贸易关系非常重要，尤其是它们各自与澳大利亚的安全伙伴关系受到高度重视，并被置于主要优先地位。
 
-在过去的十年中，澳大利亚与日本的安全伙伴关系稳步发展。很明显，除了各自与美国的联盟之外，两者现在都将对方视为主要的安全伙伴。在岸田即将进行的访问中，他和莫里森预计将签署2020年11月原则上同意的《互惠准入协议》。该协议将深化两国军队的协调和互操作性，允许在对方的领土上驻扎军事人员。日本目前只与美国有这种安排。
+#### 编译：小红帽
 
-文在寅的访问还涉及一项重大防务协议的签署，即韩国防务制造商韩华公司为澳大利亚军方建造30门自行榴弹炮和15辆装甲弹药补给车的7.26亿美元合同。这是澳大利亚与一个亚洲国家达成的最大的军事装备交易，也是两国防务合作的一个重要步骤。
+根据《马尼拉时报》1月4日报道，中国政府周二表示，**将继续使其核武库 “现代化”，并在全球大国承诺防止此类武器扩散的第二天，呼吁美国和俄罗斯削减其库存。**
 
-近年来，韩国已经将其国防结构从只关注与朝鲜的潜在冲突，转向对更广泛的印度-太平洋地区的安全进行更多投资。这包括大大加强与澳大利亚的安全伙伴关系。
+在一份罕见的联合声明中，美国、中国、俄罗斯、英国和法国抛开不断加剧的东西方紧张局势，重申要建立一个没有原子武器的世界和避免核冲突的目标。
 
-堪培拉和首尔正越来越多地以类似的方式看待它们的战略环境。这两个国家都是美国的坚定盟友，它们对华盛顿目前的内部困难感到担忧，并表现出增强自身防御能力的意愿以示回应。这种回应也是出于对中共国强硬态度的担忧，因为澳大利亚和韩国都曾遭受过中共政府的经济胁迫企图，并对其在南海和对台湾的意图保持警惕。
+这五个核大国还承诺在未来全面解除原子武器。这些武器只在第二次世界大战结束时美国对日本的轰炸中被使用过。
 
-虽然韩国在批评中共国的行为方面总是比澳大利亚更加克制，但这并不意味着首尔不认同澳大利亚的担忧。首尔与北京的关系更为复杂，这不仅是因为首尔在地理上接近中国，而且还因为它仍然需要中共国在朝鲜问题上的外交影响力，这使得首尔更难承诺加入像由澳大利亚、美国、印度和日本组成的四方安全联盟。
+但是，在这些全球大国之间的紧张局势加剧的时候，将这种言辞与现实对调并不容易。
 
-韩国与日本的关系也使问题进一步复杂化。首尔和东京之间持续的紧张关系使澳大利亚自己在东北亚的盘算更加复杂。韩国和日本之间共同的战略利益并没有能够制服两国之间的历史紧张关系，这使得澳大利亚在该地区协调三边伙伴关系的能力更加困难。
+全球对中国政府军事现代化的担忧日益加剧，特别是在中国武装部队去年宣布他们已经开发了一种超高音速导弹后，其飞行速度是声音传播的五倍。
 
-由于澳大利亚的经济利益与东北亚息息相关，其安全重点显然也是以该地区为中心。保持本国与东北亚之间的贸易畅通无阻是国家的首要任务，而日本和韩国的高科技产业都对澳大利亚的稀土矿产感兴趣，这意味着这两个国家在与澳大利亚的贸易中也将有很大的投入。正是在商业利益和硬安全利益的交汇点上，澳大利亚与日本和韩国的关系找到了其日益健康的发展方向。
+美国还表示，中国政府正在扩大其核武库，到2027年将有多达700枚弹头，到2030年可能达到1000枚。
 
-新闻来源：[thediplomat.com] [Australia’s Growing Ties With Northeast Asia](https://thediplomat.com/2022/01/australias-growing-ties-with-northeast-asia/)
+周二，中国政府为其核武器政策辩护，并表示俄罗斯和美国，作为迄今为止世界上最大的核大国，应该采取裁军行动。
 
-* * *
+中国外交部军控司司长傅聪对记者表示：“中国一贯奉行不首先使用的政策，我们将核能力维持在国家安全所需的最低水平。为了可靠性和安全问题，中国将继续对其核武库进行现代化改造。”
 
-*审核：蚂蚁兄弟
-校对：信心满满
-发布：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
+新闻来源： [China will continue to ‘modernize’ nuclear arsenal – foreign ministry | The Manila Times](https://www.manilatimes.net/2022/01/04/news/china-will-continue-to-modernize-nuclear-arsenal-foreign-ministry/1828136)
+
+***发布：小红帽***
+
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
