--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,35 +1,40 @@
 ---
-title: 推背图壬寅-中共2022一朝听得金鸡叫
+title: 澳大利亚与东北亚日益紧密的联系
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1820813/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820859/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/CCP3839.png)
-**第三十八象　辛丑 震下离上 噬嗑
-谶曰：门外一鹿　群雄争逐 劫及鸢鱼　水深火热
-颂曰：火运开时祸蔓延　万人后死万人先
-海波能使江河浊　境外何殊在目前**
+编译：七叶之芒
 
-**第三十九象 壬寅 震下艮上 颐
-谶曰:鸟无足　山有月 旭初升　人都哭
-颂曰:十二月中气不和　南山有雀北山罗
-一朝听得金鸡叫　大海沉沉日已过**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-04-103453.jpg)图片来源：thediplomat.com
 
-**1921年辛酉中共建党，金鸡，泽水困，遇金箔金的壬寅**
+在过去的两年里，由于COVID-19大流行病，国家和官方访问显然受到限制。除了6月在英国举行的20国集团这样的重要峰会外，总统和总理们发现他们大多被关在家里。然而，随着世界进入一个与COVID-19共存的阶段，而不是寻求消除它，这些访问的正常化正在恢复。随着这种正常化，关注谁去哪里可以揭示一个国家的优先事项。
 
-历史上推背图的辛丑年发生一战，壬寅年发生二战，从2020庚子年、2021辛丑年和2022壬寅年的现在，全世界都因中共释放新冠状病毒的生化武器，和疫苗的次生灾难，造成了人类浩劫的生化战争，2021年辛丑，壁上土，火雷噬嗑，推背图上的死门和死人加上剥落毁损的墙角，死门不仅仅是世界各地的内外墙，甚至很多是在家死亡没有人知道，几千万人都是因为中共新冠状病毒而死去。** (死门在卦象上也代表着医护人员)，**我们可以推背图巽卦的火雷噬嗑和山雷颐看出不同的视角。
+12月中旬，韩国总统文在寅前往澳大利亚与总理斯科特-莫里森会面，而在1月的第一周，日本首相岸田文雄也将这样做。鉴于东北亚地区是澳大利亚大部分贸易的所在地，而且堪培拉对中共国在更广泛的印度-太平洋地区的强硬态度仍然感到不安，很明显，对澳大利亚来说，该地区是首要关注的。
 
-2022年，金箔金，按推背图的第三十九象壬寅，山雷颐，外实内虚，透露了中共国不择手段贪图捷径，算尽阴谋，导致中共**身败名裂、养不活人民的现况，谶曰:鸟无足，山有月，旭初升，人都哭。而其中，鸟无足︰暗喻因贪嗔痴的人祸造成浩劫，使所有鸟类都在飞行走避；山有月︰暗喻人祸造成天崩地裂的崩；旭初升︰东方红，太阳升，中国出了个毛泽东，旭初升是指习太阳，习近平效仿毛泽东开启文化大革命2.0；人都哭︰全人类都因中共释放新冠状病毒的生化武器，和引诱人类接种mRNA的疫苗，将使人类因病毒、疫苗、自杀、意外死亡急遽攀升，墙内湖北武汉初期病毒爆发、石家庄、西安各地封城、长江沿岸和河南水患、缺电缺粮缺医疗等灾情、外交政治经济民生金融都到了爆裂的状况。**
+文在寅和岸田的访问也表明，这两个国家都将澳大利亚视为重要的战略伙伴。它们与澳大利亚的贸易关系非常重要，尤其是它们各自与澳大利亚的安全伙伴关系受到高度重视，并被置于主要优先地位。
 
-按推背图的第三十九象壬寅，颂曰:十二月中气不和，南山有雀北山罗，一朝听得金鸡叫，大海沉沉日已过。而其中**十二月中气不和︰表示人类将迎来最坏的一年12个月24节气都不太顺利，有各种大的动荡；南山有雀北山罗︰鸟儿在南山，却到北山去张网捕捉。暗喻舍近求远，方法错误；一朝听得金鸡叫︰1921年中共建党，1921辛酉金鸡，泽水困，遇金箔金的壬水寅木，暗喻中共灭亡前辛酉金鸡的最后一鸣；大海沉沉日已过︰表示世界将面对中共病毒疫情、疫苗后的各种变化。**
+在过去的十年中，澳大利亚与日本的安全伙伴关系稳步发展。很明显，除了各自与美国的联盟之外，两者现在都将对方视为主要的安全伙伴。在岸田即将进行的访问中，他和莫里森预计将签署2020年11月原则上同意的《互惠准入协议》。该协议将深化两国军队的协调和互操作性，允许在对方的领土上驻扎军事人员。日本目前只与美国有这种安排。
 
-中共在2022壬寅年，山雷颐，最大的问题是对世界各国和共产党派系、党员、人民出现严重的诚信问题，自行撕毁契约，不论是房地产还是股市的各种假信托、骗贷、一带一路等骗取西方财富，**共产党的淫溺惑乱、积弊腐败到了完全腐坏的阶段**，对内偷假骗老百姓70年，也都超出了极限，不消灭中共世界没有未来。**对墙内的老百姓而言，安分守己，忏悔业障，保命保家保财之余，尽自己能力广种福田阴德，方能消灾解厄，切勿贪婪、落井下石。有德之人遇大凶，观一切因果，毫发无伤。笔者想写的很多，能写的有限，上天自然加持新中国联邦来消灭中共，共产党内忧外患、大势已去，众人围剿，共产党你完了! X3**
+文在寅的访问还涉及一项重大防务协议的签署，即韩国防务制造商韩华公司为澳大利亚军方建造30门自行榴弹炮和15辆装甲弹药补给车的7.26亿美元合同。这是澳大利亚与一个亚洲国家达成的最大的军事装备交易，也是两国防务合作的一个重要步骤。
 
-**纵经千百劫所作业不亡，因缘会遇时果报还自受。万般带不去，唯有业随身。断恶修善，行善积德。**
+近年来，韩国已经将其国防结构从只关注与朝鲜的潜在冲突，转向对更广泛的印度-太平洋地区的安全进行更多投资。这包括大大加强与澳大利亚的安全伙伴关系。
 
-本文仅代表个人立场
-**祈祷万佛万神加持文贵先生与新中国联邦战友**
-审核:Athena雅典娜 发布:Amitofu
+堪培拉和首尔正越来越多地以类似的方式看待它们的战略环境。这两个国家都是美国的坚定盟友，它们对华盛顿目前的内部困难感到担忧，并表现出增强自身防御能力的意愿以示回应。这种回应也是出于对中共国强硬态度的担忧，因为澳大利亚和韩国都曾遭受过中共政府的经济胁迫企图，并对其在南海和对台湾的意图保持警惕。
 
+虽然韩国在批评中共国的行为方面总是比澳大利亚更加克制，但这并不意味着首尔不认同澳大利亚的担忧。首尔与北京的关系更为复杂，这不仅是因为首尔在地理上接近中国，而且还因为它仍然需要中共国在朝鲜问题上的外交影响力，这使得首尔更难承诺加入像由澳大利亚、美国、印度和日本组成的四方安全联盟。
+
+韩国与日本的关系也使问题进一步复杂化。首尔和东京之间持续的紧张关系使澳大利亚自己在东北亚的盘算更加复杂。韩国和日本之间共同的战略利益并没有能够制服两国之间的历史紧张关系，这使得澳大利亚在该地区协调三边伙伴关系的能力更加困难。
+
+由于澳大利亚的经济利益与东北亚息息相关，其安全重点显然也是以该地区为中心。保持本国与东北亚之间的贸易畅通无阻是国家的首要任务，而日本和韩国的高科技产业都对澳大利亚的稀土矿产感兴趣，这意味着这两个国家在与澳大利亚的贸易中也将有很大的投入。正是在商业利益和硬安全利益的交汇点上，澳大利亚与日本和韩国的关系找到了其日益健康的发展方向。
+
+新闻来源：[thediplomat.com] [Australia’s Growing Ties With Northeast Asia](https://thediplomat.com/2022/01/australias-growing-ties-with-northeast-asia/)
+
+* * *
+
+*审核：蚂蚁兄弟
+校对：信心满满
+发布：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
