--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,9 +1,9 @@
 ---
-title: 西安发布会中共满嘴谎言，挨饿的老百姓发弹幕怒骂
+title: 郭文贵谈中共严格严肃管理失控的音乐文化市场内幕
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820954/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1821010/)
 
-12/28/2021 西安疫情发布会中共满嘴谎言，老百姓挨饿发弹幕怒骂
+1/1/2022 文贵先生新年直播：中共意欲严格严肃管理失控中国音乐文化市场背后的故事
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
