--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,21 +1,11 @@
 ---
-title: 川普称推特和脸书是美国的耻辱，并敦促美国人放弃它们
+title: 女军人指出强制军队疫苗接种非法
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820906/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820937/)
 
-#### 翻译/撰稿：zzballack
+12/23/2021 女军人指出强制军队疫苗接种非法。人们也未被告知实验性疫苗的潜在风险和副作用。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-8.jpg)图片来源：商业内幕
-据《真正美国之声》（Real America’s Voice）1月4日报道，前美国总统川普1月3日晚上称，推特和脸书对保守派声音的持续审查是“我们国家的耻辱”，并恳请美国人放弃这些平台。
-
-在川普发表此声明之前的24小时里，推特永久冻结了共和党众议员马乔丽·泰勒·格林(Marjorie Taylor Greene)的账户，脸书暂时暂停其账户24小时，原因是格林议员发布的有关新冠病毒的信息违法了平台政策。
-
-川普对此评论说：“推特是民主的耻辱，他们不应被允许在这个国家做生意。马乔丽·泰勒·格林有一个由诚实、爱国和努力工作的人组成的庞大选区，他们不应该被推特和脸书等低级别平台这样对待！每个人都应该放弃推特和脸书！它们很无趣，只有激进左派的观点，而且被所有人厌恶。继续战斗下去，马乔丽！”
-
-川普不久前推出了自己的社交媒体平台Truth Social。该平台将于今年晚些时候亮相，并承诺成为一个没有审查制度的论坛。
-
-新闻来源：[Trump calls Twitter, Facebook ‘disgrace to our Nation,’ urges Americans to abandon platforms](https://americasvoice.news/justthenews/trump-calls-twitter-facebook-disgrace-our-nation-urges-americans/)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
