--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,22 +1,30 @@
 ---
-title: 中共互联网信息办公室修订发布《网络安全审查办法》
+title: 01/04每日播报｜Omicron变种感染潮正在摧毁美国教育系统
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/1820897/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1820932/)
 
-作者：意大利达芬奇农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/01/网络安全审查办法.jpeg)封面来源：网络图片
-近日，中共国家互联网信息办公室、国家发展和改革委员会、工业和信息化部、公安部、国家安全部、财政部、商务部、中国人民银行、国家市场监督管理总局、国家广播电视总局、中国证券监督管理委员会、国家保密局、国家密码管理局等十三部门联合修订发布《网络安全审查办法》，自2022年2月15日起施行。
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/61d40c0d31a71619b5747c96)**
 
-中共不但举全国之力建立“网络监狱”，中共还建立了严厉的“网络监狱审查办法”，这些参与部门还都是寄生在这些被“网络监狱”监禁的人身上，而被网络监禁起来的人还得支持和感谢中共，不管是真心还是假意，这都是人间最悲惨的境况。中共之所以这么不遗余力的进行网络审查，是因为恐惧，是因为害怕老百姓知道真相、是害怕自己的罪行被世界老百姓知道。
+**2022-01-04**
 
-中共《网络安全审查办法》将**网络平台运营者开展数据处理活动影响**或者**可能影响国家安全等情形纳入网络安全审查**，**并明确掌握超过100万用户个人信息的网络平台运营者赴国外上市必须向网络安全审查办公室申报网络安全审查**。根据审查实际需要，增加证监会作为网络安全审查工作机制成员单位，同时完善了国家安全风险评估因素等内容。
+纽约时报1月3日报道，由于中共病毒的爆发以及相应的人员短缺问题，美国越来越多的公立学校决定推迟元旦、新年假期后的返校时间或直接采用远程教学方式。
 
-中共网络审查已达疯狂程度，完全要把中共国变成铁桶一块，外边的信息只有被加工编辑过的才能进入，里边的信息只有洗脑骗人信息才能被允许流传和被允许传到外边去。总之就是，中共不仅把整个中共国用“防火墙”圈起来，还要在被圈起来的区域内再进行网格化管控，而生活在这些网格里的老百姓只是棋子、只是傀儡、只是奴隶，随时都在被利用、随时都可以被牺牲。中共《网络安全审查办法》的修订发布，是吹响了“网络文革“运动的“号角”，人头滚滚、血流成河，是可以预见的。
+据了解，美国的克利夫兰、底特律、 密尔沃基、纽瓦克等地区已相继宣布，辖区内的各所学校将在未来的几天至几周内专用远程教学的方式。
 
-新闻来源：🔗[国家互联网信息办公室等十三部门修订发布《网络安全审查办法》](http://www.news.cn/politics/2022-01/04/c_1128229954.htm)
+当地时间的上周日晚，拥有 75,000 名学生的密尔沃基公立学校系统也发出公告表示，将从周二开始暂时转向远程教学，理由是“学区工作人员中报告的中共病毒阳性病例大量涌入”。此前，伊利诺伊州东圣路易斯的学校负责人亚瑟也于上周五在 Facebook 中发帖表示，学校课程将于周二通过网络远程授课。而拥有 35,000 名学生的纽瓦克学校则在上周宣布，他们将在至少未来两周内转向网络远程学习。本周内一些开放线下教学的学校系统将由于缺乏教职员工而不得不关闭一些校区，其中包括俄亥俄州哥伦布市的 8 所学校和匹兹堡的 12 所学校。
 
-*编辑/校对/发稿：意大利达芬奇农场-儒为*
+时隔一年，中共病毒病例在美国寒假的前一周再次出现激增，目前已导致 11 所学校和 400 多间教室关闭，城市学校的密接者追踪系统在此情况下已经面临崩溃。
 
+与此同时，美国的青年群体也因长期肆虐的中共疫情而面临着“毁灭性”的心理健康影响。 相关报告显示，在疫情期间，抑郁、焦虑和因心理健康挑战而到急诊室就诊的自我报告数量显著增加。与 2019 年同期相比，2021 年初美国少女因自杀未遂而到急诊室就诊的次数也增加了 51%之多。 种种数据表明，中共病毒、疫情灾难会为这一代青年人带来不可磨灭的影响。
+
+（秘翻新闻主编 清风先生编译报道）
+
+发布:星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
