--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,42 +1,75 @@
 ---
-title: 澳大利亚男子咆哮反对Covid疫苗后自焚
+title: 中共官员在新疆西藏玩奸小孩延长寿命扶持塔利班饿死百姓
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820884/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1820931/)
 
-翻译：七叶之芒
+[https://gtv.org/video/id=61d2bf33dffab035958a31c9](https://gtv.org/video/id=61d2bf33dffab035958a31c9)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-190.png)图片来源：nypost.com
+**郭文贵
+Miles Guo**
 
-（推特地址：[twitter.com](https://twitter.com/5NewsAustralia/status/1477414800518889472?s=20) ）
+在新疆里边强奸、轮奸的那是多少孩子
+How many children were raped and gang-raped in Xinjiang at that time
 
-据当地报道，一名澳大利亚男子在元旦当众浇上汽油并点燃了自己，在咆哮着反对疫苗之后，他受了重伤。
+都是小孩
+They were all children
 
-据《先驱太阳报》报道，这一可怕的自焚行为发生在当地时间晚上8点之后，当时这名男子将汽油倒在自己和他的车上，同时对维多利亚州新的COVID-19疫苗规定大喊口号。
+共产党在西藏、在新疆
+The CCP in Tibet and Xinjiang,
 
-目击者说，当这名男子离开车辆时，警察和消防员试图用水将其闷死，但他仍然大喊大叫。在五名旁观者的帮助下，官员们将该男子制服，并将其送上救护车，送往阿尔弗雷德医院。
+多少当官的到西藏到新疆叫什么..去干什么呀？
+what’s that called when most of the officials go there? What are they doing there?
 
-“他的皮肤在燃烧,他着火了。”一位不愿意透露身份的妇女告诉《先驱太阳报》，“他的皮肤粘在我的衬衫上，他只是脱口大骂疫苗规定。”
+叫修炼自己
+That’s called self-cultivate (in the evil way)
 
-医院的一位发言人告诉该报，这名男子情况危急但稳定。
+专找当地的处女玩，处男玩，（目的是）让自己延长寿命
+They hunt for the local virgins and boys and rape them in order to extend themselves’ life
 
-一位目击者莉迪亚-奥康纳(Lydia O’Connor)正在附近的一家餐馆用餐，她说她听到了这名男子的尖叫声。
+那杀了多少人
+How many people have been killed for that
 
-“他把汽油倒在自己身上，也倒在他的车上，这是故意的。”她说。
+你觉得现在阿富汗每时每刻在直播当中饿死的人
+The Afghanistan people are starve to death every second during our live broadcasts right now
 
-她说：“他在叫嚣着任务，接种任务，他尖叫着‘没有疫苗接种证’。还扔书。”
+你觉得关键是谁（造成的）？
+Who do you think the key person is (for causing)?
 
-事件发生后，执法部门封锁了现场，当地商店和餐馆的顾客被要求留在室内。该男子的身份尚未被执法部门确认。
+不就是共产党扶持的塔利班吗？
+No doubt, that’s the Taliban who supported by the CCP
 
-维多利亚州政府要求个人出示疫苗接种证明才能进入酒吧、餐馆和电影院。工人们也被要求全面接种疫苗。
+将近5000万人呢
+Nearly 50 million people
 
-新闻来源：[nypost.com] [Australian man self-immolates after ranting against COVID vaccines](https://nypost.com/2022/01/02/australian-man-self-immolates-after-ranting-against-covid-vaccines/)
+2300到2500万人没饭
+23-25 million people have no food
+
+此时此刻5000万人98%的没饭吃
+At this moment, 98% of this 50 million people have no food
+
+就是（因为）共产党一念之差要给美国人要制造动乱
+because of a wrong decision that the CCP made which was creating turmoil for Americans
 
 * * *
 
-*审核：蚂蚁兄弟
-校对：信心满满
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
+Date: 12/29/2021
+原视频标题: 中共官员在新疆西藏玩奸小孩延长寿命扶持塔利班饿死百姓
+The CCP officials rape Tibetan children in Xinjiang to prolong their lives and support the Taliban to starve people to death
+原视频日期：2021/12/29
+原视频链接: [**https://gettr.com/post/pl2zeh7633**](https://gettr.com/post/pl2zeh7633)
+任务编号：3373
+视频时间段 : 0:00-00:56
+英听校：洛杉矶盘古农场 – 郭班之樱
+翻译：洛杉矶盘古农场 – 郭班之樱
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场 – 天涯行
+审片：洛杉矶盘古农场 – 银龙
+发布：洛杉矶盘古农场 – 恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
