--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,19 +1,41 @@
 ---
-title: 日本将对面部识别技术进行出口管制
+title: 台湾政府假借疫苗悄悄实施极权政策
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820877/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1820927/)
 
-#### 翻译/撰稿：zzballack
+撰稿:牛小妹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/biden.jpg)
+**台湾政府逐渐成为警察国家**
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-4-3.jpg)图片来源：BBC
-据《台湾英文新闻网》（Taiwan News）1月3日报道，日本政府将对使用人工智能的相机与人脸识别设备进行出口管制，以防止被用于监视或迫害人权，特别是被中共享于监视和迫害少数民族。
+据《GTV NEWS TALK》1月3日的报导，台湾政府假借疫苗政策，破坏台湾人民好不容易建立的民主体制，逐步走向集权统治。无论是月子中心，到医院陪伴病患，民众都被要求出示疫苗证明，形同实施疫苗护照政策。
 
-据 《中新社》报道，一些国家对中共侵犯人权和持续镇压维吾尔族及其他群体的行为越来越关注。中共一直在使用人工智能和其他先进技术，并在新疆维吾尔自治区和其他地区部署大规模监控系统，限制人们的行动。
+各县市民选市长的做法更是天怒人怨，据台湾《工商时报》报导，台北市长柯文哲认为即便打满2剂还是会被感染，提醒市民把疫苗打好打满，必须再打第三针加强针。柯将锚头指向旅馆工作人员，要求防疫旅馆人员再打第三针加强针，威胁以抽查方式给业者压力，企图将防疫责任推给旅馆业者。
 
-为防范先进技术被用于侵害人权，日本政府判断有必要采取新的措施，并与美国和其他志同道合的国家合作，在各国间引进新的相关规定。
+而据《华视》报导，高雄市长陈其迈胆敢以民选市长的立场，建议全国一律将居家隔离者送到集中检疫所，表面上看似为了降低传染风险，实际上是要进一步控制人民的行动，成为名副其实极权统治的警察国家。
 
-新闻来源：[Japan bans facial recognition tech exports due to China’s human rights abuses](https://www.taiwannews.com.tw/en/news/4396710)
+**台湾政府及相关医疗机构图利业者严重渎职**
+
+台湾政府号称医疗体系完整，医疗能力傲视全球，医疗人员素质完整，然而从此次冠状病毒(中共病毒)疫情来看，台湾政府及相关医疗机构严重渎职。他们用价格高昂却对冠状病毒(中共病毒)疫情毫无助益的实验性疫苗，破坏人体免疫系统副作用遍及人体各部位，从头部到内脏，无一倖免!
+
+台湾总统蔡英文认为台湾是民主体制，与中共国的独裁极权统治完全不同。然而在此次的冠状病毒(中共病毒)疫情之下，无论民选总统或者市长，全部原形毕露展现集权中央的独裁狰狞嘴脸。
+
+他们将人民的生命福祉弃之不顾，利用已失去灵魂的媒体给民众洗脑，甚至连专业的医护人员都无法轻易得到冠状病毒(中共病毒)的相关真实讯息。台湾政府及医疗机构将因此次重大严重渎职，付出巨额代价。
+
+除了有形世界的刑责，在因果轮回下，所有渎职人员都将永世无法超生!
+
+消息来源:
+
+1.
+
+[https://tw.news.yahoo.com/amphtml/%E6%86%82%E7%96%AB%E6%83%85%E7%A0%B4%E5%8F%A3-%E9%99%B3%E5%85%B6%E9%82%81%E7%B1%B2%E5%B1%85%E9%9A%94%E8%80%85%E7%A7%BB%E8%87%B3%E9%9B%86%E6%AA%A2%E6%89%80-102400040.html](https://tw.news.yahoo.com/amphtml/%E6%86%82%E7%96%AB%E6%83%85%E7%A0%B4%E5%8F%A3-%E9%99%B3%E5%85%B6%E9%82%81%E7%B1%B2%E5%B1%85%E9%9A%94%E8%80%85%E7%A7%BB%E8%87%B3%E9%9B%86%E6%AA%A2%E6%89%80-102400040.html)
+
+2.
+
+[https://gtv.org/video/id=61d2fa3131a71619b5740b94](https://gtv.org/video/id=61d2fa3131a71619b5740b94)
+
+3.
+
+[https://gtv.org/video/id=6190c57d1827025081051e6f](https://gtv.org/video/id=6190c57d1827025081051e6f)
 
  
 
