--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,33 +1,21 @@
 ---
-title: 人权组织敦促国际奥委会主席巴赫辞职
+title: 川普称推特和脸书是美国的耻辱，并敦促美国人放弃它们
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1820857/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820906/)
 
-#### 撰稿：日本东京方舟农场  幽蘭自得
+#### 翻译/撰稿：zzballack
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/241EDE01-0B06-48C0-9DBC-24E6DD04B49E.jpeg)（图片来自德国之声）
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-8.jpg)图片来源：商业内幕
+据《真正美国之声》（Real America’s Voice）1月4日报道，前美国总统川普1月3日晚上称，推特和脸书对保守派声音的持续审查是“我们国家的耻辱”，并恳请美国人放弃这些平台。
 
-据《德国之声》1月3日报道，人权组织《人权观察》德国分部主席米歇尔斯基（Wenzel Michalski）敦促巴赫辞去国际奥委会主席一职。他表示，不注重人权、只注重金钱利益的国际奥委会已经不合时宜。
+在川普发表此声明之前的24小时里，推特永久冻结了共和党众议员马乔丽·泰勒·格林(Marjorie Taylor Greene)的账户，脸书暂时暂停其账户24小时，原因是格林议员发布的有关新冠病毒的信息违法了平台政策。
 
-据报道，距离北京冬奥会开幕只剩四周时间，国际人权组织《人权观察》德国分部主席米歇尔斯基在接受德意志电台采访时表示，2008年北京奥运会已经过去了14年，而中共国的人权状况正在变得越来越糟糕。他以新疆和香港的现状为例，强调中共国的情况恰恰说明，体育并没有起到促进社会进步的作用。
+川普对此评论说：“推特是民主的耻辱，他们不应被允许在这个国家做生意。马乔丽·泰勒·格林有一个由诚实、爱国和努力工作的人组成的庞大选区，他们不应该被推特和脸书等低级别平台这样对待！每个人都应该放弃推特和脸书！它们很无趣，只有激进左派的观点，而且被所有人厌恶。继续战斗下去，马乔丽！”
 
-米歇尔斯基表示，全面抵制北京冬奥会，并不属于人权组织的职责范围，但如果国际奥委会和国际足联等重要国际体育协会继续同专制政权合作，人权组织将不得不采取行动。他表示：“我可以明确地说，上述国际体育协会的信誉已经丧失殆尽。2022年是一个分水岭，它将决定国际奥委会和国际足联是否还有存在下去的必要。”
+川普不久前推出了自己的社交媒体平台Truth Social。该平台将于今年晚些时候亮相，并承诺成为一个没有审查制度的论坛。
 
-米歇尔斯基还表示，国际奥委会的高管们已经无法认清当今的形势。”经济界都在要求企业对新疆的人权践踏表明立场，这也意味着巴赫及其他高管们的时代已经结束了。他们必须辞职，必须让位于更具人权意识的新一代。必须打破国际奥委会和国际足联的无上权威，因为他们的种种行为都说明，他们没有责任感，一切都以金钱至上。”
-
-由于中共政府在新疆和西藏践踏人权，对香港民主运动进行打压，并不断加强对台湾的武力威胁，目前美国、澳大利亚、英国和加拿大等国已正式宣布，将对北京冬奥会进行”外交抵制”。德国方面则有外交部长贝尔博克以及内政部长费泽尔宣布，她们不会出席北京冬奥会的开幕式。
-
-尽管一些国家宣布不派遣政府官员出席北京冬奥会开幕式，但国际奥委会主席巴赫仍在重申国际社会对北京冬奥的支持。巴赫还在其新年讲话中强调：”国际社会对冬奥会的支持非常明显，我们对此表示高度欢迎。”此外，巴赫对中共国人权状况保持沉默以及在彭帅事件上的表现，一段时间来引起了广泛的争议。
-
-*参考链接：[人权组织敦促国际奥委会主席巴赫辞职](https://www.dw.com/zh/%E4%BA%BA%E6%9D%83%E7%BB%84%E7%BB%87%E6%95%A6%E4%BF%83%E5%9B%BD%E9%99%85%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E5%B7%B4%E8%B5%AB%E8%BE%9E%E8%81%8C/a-60315835)*
-
-* * *
-
-*素材采编：幽蘭自得*
-
-*编辑：文顺*
-
-*发布：miumiu*
+新闻来源：[Trump calls Twitter, Facebook ‘disgrace to our Nation,’ urges Americans to abandon platforms](https://americasvoice.news/justthenews/trump-calls-twitter-facebook-disgrace-our-nation-urges-americans/)
 
  
 
