--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,47 +1,21 @@
 ---
-title: 中国央行推出安卓和iOS版数字人民币钱包应用程序
+title: 中共互联网信息办公室修订发布《网络安全审查办法》
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1820854/)
+`儒为` [轉載自GNews](https://gnews.org/zh-hans/1820897/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+作者：意大利达芬奇农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/01/网络安全审查办法.jpeg)封面来源：网络图片
+近日，中共国家互联网信息办公室、国家发展和改革委员会、工业和信息化部、公安部、国家安全部、财政部、商务部、中国人民银行、国家市场监督管理总局、国家广播电视总局、中国证券监督管理委员会、国家保密局、国家密码管理局等十三部门联合修订发布《网络安全审查办法》，自2022年2月15日起施行。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/digital-yuan.jpg)
+中共不但举全国之力建立“网络监狱”，中共还建立了严厉的“网络监狱审查办法”，这些参与部门还都是寄生在这些被“网络监狱”监禁的人身上，而被网络监禁起来的人还得支持和感谢中共，不管是真心还是假意，这都是人间最悲惨的境况。中共之所以这么不遗余力的进行网络审查，是因为恐惧，是因为害怕老百姓知道真相、是害怕自己的罪行被世界老百姓知道。
 
+中共《网络安全审查办法》将**网络平台运营者开展数据处理活动影响**或者**可能影响国家安全等情形纳入网络安全审查**，**并明确掌握超过100万用户个人信息的网络平台运营者赴国外上市必须向网络安全审查办公室申报网络安全审查**。根据审查实际需要，增加证监会作为网络安全审查工作机制成员单位，同时完善了国家安全风险评估因素等内容。
 
- 
-图片来源：asia.nikkei.com
+中共网络审查已达疯狂程度，完全要把中共国变成铁桶一块，外边的信息只有被加工编辑过的才能进入，里边的信息只有洗脑骗人信息才能被允许流传和被允许传到外边去。总之就是，中共不仅把整个中共国用“防火墙”圈起来，还要在被圈起来的区域内再进行网格化管控，而生活在这些网格里的老百姓只是棋子、只是傀儡、只是奴隶，随时都在被利用、随时都可以被牺牲。中共《网络安全审查办法》的修订发布，是吹响了“网络文革“运动的“号角”，人头滚滚、血流成河，是可以预见的。
 
+新闻来源：🔗[国家互联网信息办公室等十三部门修订发布《网络安全审查办法》](http://www.news.cn/politics/2022-01/04/c_1128229954.htm)
 
-#### 整理/编辑：小红帽
-
-根据《频道新闻亚洲网》1月4日报道， **随着中国央行加紧开发自己的数字货币，中国已在手机应用商店上发布了数字人民币钱包应用程序的试点版本。**
-
-由中国人民银行（PBOC）数字货币研究所开发的“e-CNY（试点版）”应用程序于周二在上海在中国安卓和苹果应用程序商店开放下载。
-
-该应用程序中的一条通知称，程序处于研发试点阶段，仅通过提供电子人民币服务的支持机构（包括国内主要银行）向特定用户提供。
-
-中国人民银行行长易纲在 11 月表示，中国将继续推进央行数字货币的发展并改进其设计和使用，包括提高其与现有支付工具的互操作性。
-
-在年终会议上，中国人民银行表示将继续推进数字人民币的研发。
-
-阿登纳基金会（Konrad Adenauer Stiftung）高级项目经理巴登海姆（Alexander Badenheim）曾于2020年10月份对《德国之声》驻北京记者说，**发行数字主权货币可能是中国政府重新控制国内金融的一种手段。**中国可能希望创建自己的国际支付机制，类似于SWIFT，帮助金融机构处理交易的代码。**新的数字货币国际支付机制将不由美元主导，而是由中国的数字人民币主导。**
-
-通过成为第一个主导数字货币领域的大国，中国有可能在全球经济中占据更强势位置，再也不担心受到美国制裁。**这是中国挑战美国全球主导地位的又一大步。**
-
-新闻来源：
-
-1、[China central bank launches digital yuan wallet apps for Android, iOS – CNA (channelnewsasia.com)](https://www.channelnewsasia.com/business/china-central-bank-launches-digital-yuan-wallet-apps-android-ios-2414061)
-
-2、[中国在数字货币领域领先一步，但谁会跟着走？ | 经济纵横 | DW | 11.10.2020](https://www.dw.com/zh/%E4%B8%AD%E5%9B%BD%E5%9C%A8%E6%95%B0%E5%AD%97%E8%B4%A7%E5%B8%81%E9%A2%86%E5%9F%9F%E9%A2%86%E5%85%88%E4%B8%80%E6%AD%A5%E4%BD%86%E8%B0%81%E4%BC%9A%E8%B7%9F%E7%9D%80%E8%B5%B0/a-55184812)
-
-***发布：小红帽***
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+*编辑/校对/发稿：意大利达芬奇农场-儒为*
 
  
 
