--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,44 +1,42 @@
 ---
-title: 五千万的阿富汗人被30万塔利班蹂躏唯有自救绝无他法
+title: 澳大利亚男子咆哮反对Covid疫苗后自焚
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1820843/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820884/)
 
-**郭文贵先生**：阿富汗将近从过去的1000多万到2000万人口，到最后美国在那块儿驻军，每年花了几千亿进去，是吧？到变成了将近5000万人口，人口的增长。塔利班才多少人？号称所谓80万大军，实际上就30几万人。
+翻译：七叶之芒
 
-一个5000万人的国家被30万人给蹂躏着，要饿死一半人。就像我们中国人，14亿人被所谓的3000多个人民代表和中央政治局，被七个常委，就给全国人民“宇宙无限大、地球是一粒沙“全给强奸了。一睡就睡了70年，同样的悲哀的结果。凭啥美国人要让你，为阿富汗强大我拿钱？美国再在阿富汗呆下去，你知道什么结果？你觉得会有什么结果？从这个道德上讲，绝对是不对的，从任何角度讲，阿富汗撤出，美国撤出是符合美国利益的。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-190.png)图片来源：nypost.com
 
-更重要的事情，美国除了经济问题、除了战略问题，美国是真的是，再往下弄下去，美国知道在阿富汗这个地方，美国会深陷其中。而且美国是，绝对是就是20年的计划，就是要对付要把伊朗中国共产党这个彻底改掉，把整个中东的整个局势彻底改变。它没有那么多精力和金钱，不可能的。美国这已经搞了30年，就准备好打赢，绝对打赢一场战争。准备同时打两场战争，在阿富汗，你就同时在一场战争中，你怎么可能？
+（推特地址：[twitter.com](https://twitter.com/5NewsAustralia/status/1477414800518889472?s=20) ）
 
-你5000万的阿富汗人干不掉30万的这个小破——加一起不过10万人的那些所谓人，都不会打的，吃都能把它吃了，甭说打了。
+据当地报道，一名澳大利亚男子在元旦当众浇上汽油并点燃了自己，在咆哮着反对疫苗之后，他受了重伤。
 
-字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
+据《先驱太阳报》报道，这一可怕的自焚行为发生在当地时间晚上8点之后，当时这名男子将汽油倒在自己和他的车上，同时对维多利亚州新的COVID-19疫苗规定大喊口号。
 
-编辑整理：Jacques；
+目击者说，当这名男子离开车辆时，警察和消防员试图用水将其闷死，但他仍然大喊大叫。在五名旁观者的帮助下，官员们将该男子制服，并将其送上救护车，送往阿尔弗雷德医院。
 
-字幕文件制作：小满；
+“他的皮肤在燃烧,他着火了。”一位不愿意透露身份的妇女告诉《先驱太阳报》，“他的皮肤粘在我的衬衫上，他只是脱口大骂疫苗规定。”
 
-视频制作及上传：Cindy；
+医院的一位发言人告诉该报，这名男子情况危急但稳定。
 
-G-News发布：小满；
+一位目击者莉迪亚-奥康纳(Lydia O’Connor)正在附近的一家餐馆用餐，她说她听到了这名男子的尖叫声。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+“他把汽油倒在自己身上，也倒在他的车上，这是故意的。”她说。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+她说：“他在叫嚣着任务，接种任务，他尖叫着‘没有疫苗接种证’。还扔书。”
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+事件发生后，执法部门封锁了现场，当地商店和餐馆的顾客被要求留在室内。该男子的身份尚未被执法部门确认。
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+维多利亚州政府要求个人出示疫苗接种证明才能进入酒吧、餐馆和电影院。工人们也被要求全面接种疫苗。
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+新闻来源：[nypost.com] [Australian man self-immolates after ranting against COVID vaccines](https://nypost.com/2022/01/02/australian-man-self-immolates-after-ranting-against-covid-vaccines/)
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+* * *
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*审核：蚂蚁兄弟
+校对：信心满满
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
