--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,75 +1,33 @@
 ---
-title: 中共社交媒体目标以获取西方的数据
+title: 人权组织敦促国际奥委会主席巴赫辞职
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820809/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1820857/)
 
-编译： Jenny Ball
+#### 撰稿：日本东京方舟农场  幽蘭自得
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-189.png)图片来源**：**republicbrief.com
+![](https://assets.gnews.org/wp-content/uploads/2022/01/241EDE01-0B06-48C0-9DBC-24E6DD04B49E.jpeg)（图片来自德国之声）
 
-中共政府和军队正在挖掘 Facebook 和 Twitter 等社交媒体平台，以便其在中国的军队、警察和政府实体收集有关西方目标的敏感信息。
+据《德国之声》1月3日报道，人权组织《人权观察》德国分部主席米歇尔斯基（Wenzel Michalski）敦促巴赫辞去国际奥委会主席一职。他表示，不注重人权、只注重金钱利益的国际奥委会已经不合时宜。
 
-据《华盛顿邮报》报道，自 2020 年代初以来，审查了 300 多个中共政府项目的招标文件和合同，**中共政府购买了更新的、更先进的数据监控系统，以收集有关外国实体的信息。**
+据报道，距离北京冬奥会开幕只剩四周时间，国际人权组织《人权观察》德国分部主席米歇尔斯基在接受德意志电台采访时表示，2008年北京奥运会已经过去了14年，而中共国的人权状况正在变得越来越糟糕。他以新疆和香港的现状为例，强调中共国的情况恰恰说明，体育并没有起到促进社会进步的作用。
 
-公共领域的文件显示，为中国官方媒体购买软件的花费是 32 万美元，**其目的是通过社交媒体的挖掘，创建一个外国记者和学者的数据库。**
+米歇尔斯基表示，全面抵制北京冬奥会，并不属于人权组织的职责范围，但如果国际奥委会和国际足联等重要国际体育协会继续同专制政权合作，人权组织将不得不采取行动。他表示：“我可以明确地说，上述国际体育协会的信誉已经丧失殆尽。2022年是一个分水岭，它将决定国际奥委会和国际足联是否还有存在下去的必要。”
 
-此外，中共政府还购买了价值 216,000 美元的北京警务情报系统，该系统针对香港，台湾，以及一个新疆网络中心，该中心对海外的维吾尔语内容进行分类。中共新闻部中宣部透露，该软件将使中共“更好地了解反华人员的地下网络”。
+米歇尔斯基还表示，国际奥委会的高管们已经无法认清当今的形势。”经济界都在要求企业对新疆的人权践踏表明立场，这也意味着巴赫及其他高管们的时代已经结束了。他们必须辞职，必须让位于更具人权意识的新一代。必须打破国际奥委会和国际足联的无上权威，因为他们的种种行为都说明，他们没有责任感，一切都以金钱至上。”
 
-中共还有一些活动正在进行中，以建立一个实时信号系统网络，该网络将提醒国家领导人，注意可能破坏或威胁国家利益的趋势。
+由于中共政府在新疆和西藏践踏人权，对香港民主运动进行打压，并不断加强对台湾的武力威胁，目前美国、澳大利亚、英国和加拿大等国已正式宣布，将对北京冬奥会进行”外交抵制”。德国方面则有外交部长贝尔博克以及内政部长费泽尔宣布，她们不会出席北京冬奥会的开幕式。
 
-为了实现完善其对外宣传工作的更广泛目标，中共一直在使用其内部监视系统来收集有关某些西方目标的信息。
+尽管一些国家宣布不派遣政府官员出席北京冬奥会开幕式，但国际奥委会主席巴赫仍在重申国际社会对北京冬奥的支持。巴赫还在其新年讲话中强调：”国际社会对冬奥会的支持非常明显，我们对此表示高度欢迎。”此外，巴赫对中共国人权状况保持沉默以及在彭帅事件上的表现，一段时间来引起了广泛的争议。
 
-该报获得的中共政府文件显示，警方和宣传部门将代表中共政府购买和维护在海外注册的在线账户。
-
-此外，还进行了各种采购，从小型自动化软件应用程序，到大型昂贵项目。作为预算的一部分，该州还将为 24 小时工作人员编制预算，包括讲英语的人和外交政策专家。
-
-在高度可定制的程序中，有一些用于从使用社交媒体的个人收集实时数据，有一些则用来跟踪广泛的趋势，例如过去几年美国大选的趋势。
-
-《中国日报》在一份招标文件中称，在中美贸易谈判和香港事件的背景下，平台舆论战的艰巨性和必要性日益凸显。” 《中国日报》在一份“外籍人事分析平台”的招标文件中表示，这家国家支持的报纸为该平台出价 30 万美元。文件继续写道：“我们正在与美国和西方媒体竞争，**争取话语权**的斗争已经开始。”
-
-规范中还包含一个程序的信息，该程序将挖掘 Twitter、Facebook 和 YouTube，**以获取来自西方国家的所谓知名媒体记者，以及属于政治、商业和媒体圈的其他公众人物的数据。**
-
-为了分析结果，程序会自动收集并存储来自中国服务器的实时数据。
-
-除非事先获得许可，否则 Twitter 和 Facebook 都在其隐私政策中禁止此类数据收集。
-
-“我们的 API 仅提供对公共数据和推文的实时访问，不提供对私人信息的实时访问。 根据我们的开发者政策和条款，我们禁止将我们的 API 用于监视目的，”一位来自 Twitter 的官员向邮报表示。
-
-熟悉该软件以及中共国内舆论网络的人士都将中共的努力描述为“可怕”，在他们看来，这表明：**政府对与舆论作斗争的态度有多么强烈。**
-
-德国无党派公共政策智囊团，马歇尔基金的高级研究员马雷克·奥尔伯格（Mareike Ohlberg）说，他们现在正在将部分努力转向外部，坦率地说，我认为这太可怕了，看看在中共国内部造成的庞大数量和规模。
-
-“这确实表明，**他们现在觉得在海外保卫中共、在海外打舆论战是他们的责任**。”
-
-值得注意的是，中共的网络舆论分析系统，是习近平倡议现代化国家“宣传机器并保持对互联网的控制”的关键要素。
-
-政府官员将可以访问收集和监控的大量数据，这将有助于他们了解民意，并为国家的审查机构提供支持和监督。
-
-**北京认为，监测和分析对其“舆论引导工作”至关重要，该工作旨在通过针对特定受众的审查和宣传，来塑造有利于北京的舆论。**
-
-中共于 1989 年开始了舆论运动，以回应在天安门广场举行的民主示威活动。
-
-尽管全国舆论监测网络的具体范围不得而知，但一份政府资助的论文在 2014 年报道称，全国有超过 200 万人担任舆论分析员。
-
-一家政府支持的媒体在 2018 年发表了一篇文章，称该行业价值“**数百亿元**”，约为数十亿美元。此外，该官员声称，**该行业正以每年 ****50% ****的速度增长**。
-
-Twitter 宣布，截至 2020 年 6 月，已有 23,000 个与中共有关的账户被暂停。
-
-据该平台称，这些账户显然是在使用秘密策略来破坏在香港发生的民主抗议活动。
-
-Twitter 报道称，截至 2021 年 12 月底，它又删除了 2,048 个与北京及其宣传工作有关的账户。
-
-在许多专家看来，这些账户只是中共经营账户的一小部分。
-
-**评论：这就是为什么文贵先生说：媒体比原子弹的作用更大。由于中共和邪恶势力对世界主流媒体和社交媒体的控制，两年的病毒肆虐和强制注射mRNA “疫苗”毒药，已经无声的杀害了相当于一战和二战战场上死亡的人口的总和。而疫苗的灾难还远没有到来……**
-
-新闻来源**：**[republicbrief.com] [China mining social media to harvest data on western targets](http://republicbrief.com/china-mining-social-media-to-harvest-data-on-western-targets/)
+*参考链接：[人权组织敦促国际奥委会主席巴赫辞职](https://www.dw.com/zh/%E4%BA%BA%E6%9D%83%E7%BB%84%E7%BB%87%E6%95%A6%E4%BF%83%E5%9B%BD%E9%99%85%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E5%B7%B4%E8%B5%AB%E8%BE%9E%E8%81%8C/a-60315835)*
 
 * * *
 
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
+*素材采编：幽蘭自得*
+
+*编辑：文顺*
+
+*发布：miumiu*
 
  
 
