--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,61 +1,47 @@
 ---
-title: 胡春华要当总理或人大主任丁薛祥接郭声琨陈全国进核心
+title: 中国央行推出安卓和iOS版数字人民币钱包应用程序
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1820802/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1820854/)
 
-**郭文贵先生**：对面陈全国跟我是特别好的，你刚才问到陈全国新疆的事情，我们俩太熟在河南。陈全国一去，“哎呀老弟，你整这么多菜干什么？太贵了，我这是村长出身，你看你这是忒贵忒贵，整得太豪华”。“全国老哥，知道你简朴、知道你为人正直、知道你廉洁，平常不吃。七弟不是搞餐厅的吗？所以弄来你尝尝嘛“。“是吗？是吗？这个不错，这个不错”。他净拣好吃的吃，不好的一样都不吃。
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-陈全国到北京去送那个虫草，一麻袋一麻袋地送。到我那儿去的时候说，“老弟，给你的比给家宝的还多，给锦涛跟你的一样。但是，我这还有一包，不给他都给你”。你看陈全国给我这一大包，跟温家宝同样的级别，25公斤虫草，每根上都有编号。你们没见过虫草，每根儿。现在你买的最好的虫草，有的虫草里边它断了，他拿那个牙签儿那个棍儿给你串上，你都会吃到。但是你从没见过给共产党的特供上，每一根都编号了，为什么？在那曲山上，每个山坡共产党的特工都是有编号的。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/digital-yuan.jpg)
 
-所以虫草有编号，你们谁吃过？谁举手在下面战友说说。那一根儿当时多少钱呢？我告诉大家，在真正买到手，一根儿150美金。给我送一袋子，20几公斤都带编号的。说是给温家宝常委的级别，然后再拿出一袋是什么？统一编号的。那曲山顶的。听说吃了以后，吃十根，大概一星期“金枪”不倒。但是我吃了以后真没发现，反而变成3秒了。
 
-这是给你特别的，你一说当时的陈全国，谁说过？陈全国在河南已经要退休了，他管组织的。陈全国在河南，能给当年的搞纸箱厂的厂长，每年几次在他的常委院儿里喝酒，把常委都叫来，陪着他那些儿时的在老家里的糊纸盒的人一起喝酒。大年初二慰问完的当天，一定回到他那个村里边去，和当时儿时的人一起喝酒，活着的老师。
+ 
+图片来源：asia.nikkei.com
 
-陈全国这个为人，叫做对人心之掠夺，你想到了啥程度？对我这号人，你说河南有多少个“郭文贵”？当年的河南有个叫政协副主席，后来当了政协主席，叫王什么平这个家伙？支书平，组织部长。他接的他，支书平，支书平的后边，给他掂着东西，他在前面走。他一看到那些老领导，那腰就弓下去，东西一递，“首长，你怎么出来了？我这是来看你的，你怎么能出来呀？赶快进屋，别冻着了”。支书平这，“你有啥事，老领导”？老领导给他写写，“张德江，你看这安排安排谁。马上办，马上办”。
 
-陈全国就这样。没有人骂陈全国的，河南省对陈全国的好简直到了家了。当时他给习的姐姐桥桥送东西，就在我们盘古交接，在楼下。这王八蛋刚给我说了我这待遇，比胡耀邦的好、比温家宝的好，还有特殊。结果是给桥桥就两袋子。那两袋子，那肯定比，你想想，当时的习刚到北京，他就弄俩布袋，再加上四袋子给桥桥。你想想那事了得了吗？你想想。这小子多会玩，是不是？
+#### 整理/编辑：小红帽
 
-然后，晚上都拜访完了，都凌晨了，都两点了我等他，到我那儿去。“兄弟，跑了一下午了没吃饭，整点儿小菜喝两口，是吧”？然后他自己带了酒，人家带出来一个玻璃瓶子，沱牌大曲的瓶子。我这一喝一打开，那酒好得，“这是什么酒”？“老弟，只管喝，不要说，尽管喝”。
+根据《频道新闻亚洲网》1月4日报道， **随着中国央行加紧开发自己的数字货币，中国已在手机应用商店上发布了数字人民币钱包应用程序的试点版本。**
 
-三瓶茅台喝完，我就觉得那个精神头就不一样，它是真是，这样喝 “吱吱”。那时候还有谁？那时候就河南的另外的组织部长陪着，我们仨人。最后告诉我，“兄弟，这是茅台酒厂的原酿。这一瓶都兑10吨出来，你喝了一瓶，就10吨茅台就没了”。那真好喝！喝下去就浑身发热，真跟吃伟哥似的，你知道吗？陈全国都玩到这程度。
+由中国人民银行（PBOC）数字货币研究所开发的“e-CNY（试点版）”应用程序于周二在上海在中国安卓和苹果应用程序商店开放下载。
 
-贾庆林说过话，说陈全国这人，可以绝对可以当党和国家领导人。现在他接着啥？胡春华，全国农村工作组副组长。文耀你只是看表面，胡春华要升了。胡春华是要当总理的，或者是当人大主任，甚至是接中办主任，接丁薛祥，一定是的。现在习让他去接，当政法委书记，要接郭声琨。现在就是，政法委书记、总理、人大主任、中办主任，这几个职务，你想干啥**？**
+该应用程序中的一条通知称，程序处于研发试点阶段，仅通过提供电子人民币服务的支持机构（包括国内主要银行）向特定用户提供。
 
-海峰同志，几次要进中南海。如果是春华不接，海峰同志中办副主任都可能，甚至让海峰去新疆锻炼锻炼去。习这人这个脑子会玩，习说了算。你看看，我对锦涛同志够意思吧？你把衣钵传给了我，我千秋万代了，我把你儿子，要么中办副主任，那就未来中办主任，你看看。我抓令计划，但我也能让胡海峰当中办主任，共青派全都服了吧？服了吧？我让你到新疆，你爹长在西藏，我让你长在新疆，然后跟全国同志谈了。七哥这个掌握的信息: 全国同志你回来吧，先接政法，甚至你去干政法委书记，我们接着调整。
+中国人民银行行长易纲在 11 月表示，中国将继续推进央行数字货币的发展并改进其设计和使用，包括提高其与现有支付工具的互操作性。
 
-陈全国可不是降了，你们搞错了，陈全国是升了。陈全国给北京每年就送这东西，跟当年的周永康一样。周永康原话说，“什么？他们要查我？我一年一年的那黄金的，金矿一车一车地送，一年都几十卡车。谁敢查我？我弄死他们”。当时安全部的许永跃也这么说过，“谁敢查老周？那不找死呢吗”？江家、邓家那都一车一车地收。
+在年终会议上，中国人民银行表示将继续推进数字人民币的研发。
 
-陈全国在新疆往回送那些翠和玉，每年，送回新疆特产，每年30大卡车进京，同时再到上海、到广东，再几十大卡车，每年。陈全国会降下来？你太天真了。头两天我们的战友在新疆的，叫特派员，就不能再多说了。他说七哥，陈全国要整大的啦，要进，真正地要进核心了。
+阿登纳基金会（Konrad Adenauer Stiftung）高级项目经理巴登海姆（Alexander Badenheim）曾于2020年10月份对《德国之声》驻北京记者说，**发行数字主权货币可能是中国政府重新控制国内金融的一种手段。**中国可能希望创建自己的国际支付机制，类似于SWIFT，帮助金融机构处理交易的代码。**新的数字货币国际支付机制将不由美元主导，而是由中国的数字人民币主导。**
 
-政法委大变、中办大变、国安委大变。所以说兄弟姐妹们，不要看表面。你们要能看到七哥给你爆的料，是美国情报部门CIA、FBI他永远都不知道的，他得晚好几年才能知道。我给你爆的料，你肯定不知道。
+通过成为第一个主导数字货币领域的大国，中国有可能在全球经济中占据更强势位置，再也不担心受到美国制裁。**这是中国挑战美国全球主导地位的又一大步。**
 
-字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
+新闻来源：
 
-编辑整理：Jacques；
+1、[China central bank launches digital yuan wallet apps for Android, iOS – CNA (channelnewsasia.com)](https://www.channelnewsasia.com/business/china-central-bank-launches-digital-yuan-wallet-apps-android-ios-2414061)
 
-字幕文件制作：小满；
+2、[中国在数字货币领域领先一步，但谁会跟着走？ | 经济纵横 | DW | 11.10.2020](https://www.dw.com/zh/%E4%B8%AD%E5%9B%BD%E5%9C%A8%E6%95%B0%E5%AD%97%E8%B4%A7%E5%B8%81%E9%A2%86%E5%9F%9F%E9%A2%86%E5%85%88%E4%B8%80%E6%AD%A5%E4%BD%86%E8%B0%81%E4%BC%9A%E8%B7%9F%E7%9D%80%E8%B5%B0/a-55184812)
 
-视频制作及上传：Cindy；
+***发布：小红帽***
 
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
