--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,30 +1,36 @@
 ---
-title: 01/04每日播报｜印尼禁止煤炭出口 中共用电危机恐加剧
+title: 美国议员反对接种疫苗 遭推特永久封锁
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1820781/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1820828/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61d40c0d31a71619b5747c96)**
+#### 撰稿：日本东京方舟农场  海星
 
-**2022-01-04**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/8B32409B-1B41-493A-86A7-454FBC29102F.jpeg)（图片来源：路透社）
 
-据法新社1月2日报道，近期印度尼西亚因担忧国内电力供应不足，宣布将于2022年1月1日至1月31日间停止煤炭出口。此消息一出立时就被各大中文媒体争相报道，随后登上了中共国的墙内新闻热搜。据了解，印度尼西亚一直是中共国最大的煤炭进口国，此禁令一出无疑会让中共国的用电危机再度加剧。
+1月1日，美国议员葛林（Marjorie Taylor Greene）在推特上发文表示美国有很多人因接种疫苗而死亡，随后其推特账号被永久封锁。
 
-据公开数据显示，印尼是全球最大的动力煤出口国，仅2020年的煤炭出口量就高达4亿吨，其中，最主要的出口大户就是中共国。与此同时，印尼也是中共国最主要的煤炭进口来源国。据中共海关数据显示，中共国在2021年1月至11月期间共计进口煤炭2.9亿吨，其中印尼对华进口煤炭量就达到了1.78亿吨，占中共全年煤炭进口量的61%。
+据《自由时报》报导，美国乔治亚州众议员葛林于1月1日在大型社交媒体平台推特上发文表示，美国有非常多的人因接种疫苗而死亡。隔日，推特便宣布永久封锁该议员的个人账号，其账号有465000人关注。
 
-此前，中共国就曾因与澳洲关系交恶从而导致了去年的大面积限电现象。之后，中共便只好从印尼进口大量煤炭。而今在印尼煤炭也被禁止的情况下，中共国却正值寒冬，面临着巨大的供电、取暖压力。对于当下的中共国而言，缺电危机迫在眉睫。
+该报导指出，葛林曾4次在推特上发文表示疫苗政策是失败的，呼吁监管机构停止批准新疫苗，都遭到推特禁言。
 
-中共电网官方数据显示，自今年元旦起国内多省市电价再出新高，部分地区尖峰时段最高涨价七成。据了解，中共国内目前已有江苏、山东、陕西、山西、云南等二十余个省市都再次调整了当地的燃煤电价。其中，部分化工大省如江苏、山东等地已接连调整区间电价，尖峰时段电价最高涨幅达到了70%。这些被调整地区大多是化工行业重镇，在精细化工、煤化工、燐化工等细分领域，对数万间化工企业都会带来直接的冲击。
+对此，葛林在另一社交媒体上批评推特掩盖真相，是美国的敌人。她坚信，大型社交媒体平台无法阻止真相的广泛传播，共产主义无法掩盖真相。
 
-新年伊始，中共国的电价上涨却扑面而来。然而，电力紧缺与涨价都将推升中小企业的营运成本，使开工率下滑，而众多化工大省同步调涨电价，也牵连多个细分产业链的开工率、市场库存、采购销售等。中共国的用电危机将促使国内的供应链、金融等问题进一步加剧。
+事实上，美国哥伦比亚大学的研究人员日前发现，美国至少有 40 万人死于接种疫苗，远超美国CDC官方公布的数据。
 
-（ 秘翻新闻主编  Noemi编译报道 ）
+*参考链接：*
 
-发布:星星
+1. [*https://news.ltn.com.tw/news/world/breakingnews/3788084*](https://news.ltn.com.tw/news/world/breakingnews/3788084)
+2. [*https://gnews.org/zh-hans/1801028/*](https://gnews.org/zh-hans/1801028/)
+
 
 * * *
 
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+*素材采编：海星*
+
+*编辑：文顺*
+
+*发布：miumiu*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
