--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,50 +1,76 @@
 ---
-title: 参议员兰德·保罗因言论审查弃用Youtube
+title: 中共社交媒体目标以获取西方的数据
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820718/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820809/)
 
-**翻译：Lulumi**
+编译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-187.png)2021年10月7日星期四，在华盛顿，参议员兰德·保罗在国会山散步时与记者交谈。(AP Photo/Alex Brandon)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-189.png)图片来源**：**republicbrief.com
 
-参议员兰德·保罗周一表示，他将停止使用大科技平台，由于担心网上的言论审查，他首先抛弃了谷歌旗下的YouTube。
+中共政府和军队正在挖掘 Facebook 和 Twitter 等社交媒体平台，以便其在中国的军队、警察和政府实体收集有关西方目标的敏感信息。
 
-这位肯塔基州的共和党人在一份声明中说：“今天，我开始从大科技公司出走，从最糟糕的审查员YouTube开始。作为一个倾向自由主义的参议员，我认为私营公司有权禁止我，如果他们想的话。然而，我们这些相信真理来自于争论和思想市场是创新的先决条件的人应该避开那些思想封闭的审查员，把我们的想法带到其他地方，这正是我正在做的。”
+据《华盛顿邮报》报道，自 2020 年代初以来，审查了 300 多个中共政府项目的招标文件和合同，**中共政府购买了更新的、更先进的数据监控系统，以收集有关外国实体的信息。**
 
-保罗先生的办公室说，他只有在批评YouTube平台，或将人们引向YouTube的竞争对手Rumble的例外情况下，才会在YouTube上发布视频。
+公共领域的文件显示，为中国官方媒体购买软件的花费是 32 万美元，**其目的是通过社交媒体的挖掘，创建一个外国记者和学者的数据库。**
 
-科技平台的规则和执行做法已经使一些知名的政治家和保守派的热门人物陷入困境。最近几天，Twitter禁止了佐治亚州共和党人玛乔丽·泰勒·格林的个人账户，司法观察组织主席汤姆·菲顿说，他也在TikTok遭遇了类似的禁令，这个流行的视频平台的所有者在中共国。
+此外，中共政府还购买了价值 216,000 美元的北京警务情报系统，该系统针对香港，台湾，以及一个新疆网络中心，该中心对海外的维吾尔语内容进行分类。中共新闻部中宣部透露，该软件将使中共“更好地了解反华人员的地下网络”。
 
-格林女士周一宣布，Facebook也暂停了她的账号，并在Gettr上发布了一张图片，显示Facebook在24小时内阻止她发帖或发表评论。脸书表示，它没有消除她的账户。
+中共还有一些活动正在进行中，以建立一个实时信号系统网络，该网络将提醒国家领导人，注意可能破坏或威胁国家利益的趋势。
 
-政治家和公众人物并不是唯一被公司盯上的人。例如，YouTube此前曾暂停了保守的 “一个美国新闻网”(OneAmerica)，因为它被指控违反了该平台的COVID-19错误信息政策。
+为了实现完善其对外宣传工作的更广泛目标，中共一直在使用其内部监视系统来收集有关某些西方目标的信息。
 
-科技公司有各种各样的工具来审查和塑造其平台上的内容。这些工具包括禁言、删除内容以及使个人的帖子和视频的观众人数远远少于其他情况。
+该报获得的中共政府文件显示，警方和宣传部门将代表中共政府购买和维护在海外注册的在线账户。
 
-对右派公众人物的积极打压形成热点，当2021年前总统唐纳德·川普在任时，一些平台也将他封杀过。
+此外，还进行了各种采购，从小型自动化软件应用程序，到大型昂贵项目。作为预算的一部分，该州还将为 24 小时工作人员编制预算，包括讲英语的人和外交政策专家。
 
-8月，YouTube禁止保罗先生发布视频一周，因为该公司称参议员违反了其关于口罩对
+在高度可定制的程序中，有一些用于从使用社交媒体的个人收集实时数据，有一些则用来跟踪广泛的趋势，例如过去几年美国大选的趋势。
 
-阻止中共病毒COVID-19的有效性的错误信息政策。保罗先生在他的Twitter上回应称YouTube的禁令是“荣誉勋章”，并在Rumble上分享了被禁视频。
+《中国日报》在一份招标文件中称，在中美贸易谈判和香港事件的背景下，平台舆论战的艰巨性和必要性日益凸显。” 《中国日报》在一份“外籍人事分析平台”的招标文件中表示，这家国家支持的报纸为该平台出价 30 万美元。文件继续写道：“我们正在与美国和西方媒体竞争，**争取话语权**的斗争已经开始。”
 
-保罗先生与YouTube的争议导致他决定在周一公开他与该视频平台的分裂。
+规范中还包含一个程序的信息，该程序将挖掘 Twitter、Facebook 和 YouTube，**以获取来自西方国家的所谓知名媒体记者，以及属于政治、商业和媒体圈的其他公众人物的数据。**
 
-“在过去的一年里，YouTube继续发动其危险的、反科学进步的、反对言论自由的战争，选择与政府步调一致，禁止保罗博士发布的敢于违背政府立场的视频，”这位参议员的办公室在一份声明中说道。“这些视频包括与记者的对话，他在对话中讨论了口罩的功效，特别是布质口罩，还有一段视频解释了布质口罩不起作用的科学原因。”
+为了分析结果，程序会自动收集并存储来自中国服务器的实时数据。
 
-YouTube没有立即回应评论请求。
+除非事先获得许可，否则 Twitter 和 Facebook 都在其隐私政策中禁止此类数据收集。
 
-保罗先生还宣布他正在创建一个名为libertytree.com的新闻聚合网站，他在那里发表了一篇文章，说他的目标是“最终完全退出大科技公司平台”。
+“我们的 API 仅提供对公共数据和推文的实时访问，不提供对私人信息的实时访问。 根据我们的开发者政策和条款，我们禁止将我们的 API 用于监视目的，”一位来自 Twitter 的官员向邮报表示。
 
-在寻求创建新的信息共享场所的政治家中，保罗先生并不是唯一一个。川普先生已经宣布，他正在开发一个新的社交平台TRUTH Social，由川普媒体和技术集团主持。加州共和党人德文·努内斯(Devin Nunes)议员将于今年作为首席执行官负责该平台。
+熟悉该软件以及中共国内舆论网络的人士都将中共的努力描述为“可怕”，在他们看来，这表明：**政府对与舆论作斗争的态度有多么强烈。**
 
-新闻来源: [washingtontimes.com] [Rand Paul says he’s leaving Big Tech platforms, starting with YouTube](https://www.washingtontimes.com/news/2022/jan/3/rand-paul-says-hes-leaving-big-tech-platforms-star/)
+德国无党派公共政策智囊团，马歇尔基金的高级研究员马雷克·奥尔伯格（Mareike Ohlberg）说，他们现在正在将部分努力转向外部，坦率地说，我认为这太可怕了，看看在中共国内部造成的庞大数量和规模。
+
+“这确实表明，**他们现在觉得在海外保卫中共、在海外打舆论战是他们的责任**。”
+
+值得注意的是，中共的网络舆论分析系统，是习近平倡议现代化国家“宣传机器并保持对互联网的控制”的关键要素。
+
+政府官员将可以访问收集和监控的大量数据，这将有助于他们了解民意，并为国家的审查机构提供支持和监督。
+
+**北京认为，监测和分析对其“舆论引导工作”至关重要，该工作旨在通过针对特定受众的审查和宣传，来塑造有利于北京的舆论。**
+
+中共于 1989 年开始了舆论运动，以回应在天安门广场举行的民主示威活动。
+
+尽管全国舆论监测网络的具体范围不得而知，但一份政府资助的论文在 2014 年报道称，全国有超过 200 万人担任舆论分析员。
+
+一家政府支持的媒体在 2018 年发表了一篇文章，称该行业价值“**数百亿元**”，约为数十亿美元。此外，该官员声称，**该行业正以每年 ****50% ****的速度增长**。
+
+Twitter 宣布，截至 2020 年 6 月，已有 23,000 个与中共有关的账户被暂停。
+
+据该平台称，这些账户显然是在使用秘密策略来破坏在香港发生的民主抗议活动。
+
+Twitter 报道称，截至 2021 年 12 月底，它又删除了 2,048 个与北京及其宣传工作有关的账户。
+
+在许多专家看来，这些账户只是中共经营账户的一小部分。
+
+**评论：这就是为什么文贵先生说：媒体比原子弹的作用更大。由于中共和邪恶势力对世界主流媒体和社交媒体的控制，两年的病毒肆虐和强制注射mRNA “疫苗”毒药，已经无声的杀害了相当于一战和二战战场上死亡的人口的总和。而疫苗的灾难还远没有到来……**
+
+新闻来源**：**[republicbrief.com] [China mining social media to harvest data on western targets](http://republicbrief.com/china-mining-social-media-to-harvest-data-on-western-targets/)
 
 * * *
 
 *审核：文乐
 校对：阿伯塔
 发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
