--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,34 +1,26 @@
 ---
-title: 人寿保险公司 CEO 称 18-64 岁人群的死亡率上升了 40%
+title: 参议员克鲁兹：2023年共和党可能会弹劾拜登总统
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1820697/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820713/)
 
-翻译报道：Elli
-![](https://assets.gnews.org/wp-content/uploads/2022/01/829a0081-edited.jpg)图片来源：[ZeroHedge](https://www.zerohedge.com/medical/life-insurance-ceo-says-deaths-40-among-those-aged-18-64-and-not-because-covid)
-美国人寿保险公司OneAmerica市值1000 亿美元，这家保险公司自 1877 年开始运营，拥有大约 2400 名员工。
+#### 撰稿：彩虹   
 
-上周，也就是2021年12月底，其CEO戴维森在一次在线新闻发布会上说“我们现在看到了人寿保险业务历史上最高的死亡率——而且不仅仅是在 OneAmerica出现。2021年第三季度持续到第四季度数据显示，人口死亡率比新冠大流行前上升了 40%。为了让大家可以有参照物，以往 200 年难得一遇的大灾难也仅仅只造成整体人口10%的死亡率的上升。这将直接导致One Aemrica 人寿保险业务额外1 亿美元成本，这项成本会转嫁给雇主购买团体人寿保险单。”
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-7.jpg)图片来源：达拉斯新闻
+1月3日，《新闻极限》报道泰德·克鲁兹参议员预测，共和党在今年晚些时候举行的中期选举中将接管众议院，并可能在2023年采取行动弹劾总统乔·拜登（Joe Biden）。
 
-同一新闻发布会上，印第安纳州医院协会主席布赖恩·塔博尔说：“全州的医院都充斥着“病情各异”的患者。”他没有详细说明背后原因，到底是何种疾病 。但他表示，戴维森引用的极高死亡率与该州医院的情况相符。
+克鲁兹有一个播客“Verdict with Ted Cruz”，在其最新一期节目中，他说，他“对2022年（中期选举）非常乐观。我认为共和党赢得众议院的几率为百分之九十，甚至比这还要高”。
 
-印第安纳州首席医疗官林赛·韦弗 (Lindsay Weaver) 博士表示，现在印第安纳州的住院人数比一年前推出 Covid-19 疫苗之前要高，实际上比过去五年中的任何时候都多。
+他指出，如果共和党拿下了众议院，明年有可能发生对总统的弹劾，“如果我们（共和党）拿下了众议院，我说过这种可能性是极大的，那么我们认为将看到对拜登政府的严肃追责调查”。
 
-2021年5月份Zerohedge记者曾经问询人寿保险业务人员，是否在承保过程因为covid新冠疫情有所变化？当时回复是 covid刚刚升温时，保险公司暂时收紧了承保并减少承保范围。但随着时间的流逝，保险公司又完全恢复照常营业了。
+关于弹劾（拜登总统），他说存在这样的机会，指出“无论公平与否，民主党将弹劾作为了武器，他们用弹劾来达到党派的目的，用来对付与他们达不成一致的川普。这样做的弊端之一就是，你越将其武器化，将其作为党派的工具，那么也会导致对方以其人之道还施彼身”。
 
-**评：**
+关于弹劾的理由，他说：“我认为共和党的众议院将面临巨大的压力要开始弹劾程序。我认为考虑进行弹劾有潜在的多种理由,最有说服力的可能是拜登总统在边境执法上的完全无法无天。这可能是现在最有力的弹劾理由，但可能还有其他理由”。
 
-对比保险公司从2021年5月-12月，Covid作为几十年来最致命的流行病降临全球，夺走了数百万无辜的生命，人寿保险公司5月竟然毫不在乎，保费也没有升高。注意人口整体死亡率数据在新冠大流行后没有明显变化，反而是在大规模covid 新冠疫苗接种半年以后不同寻常的上升40%。那么按照正常逻辑，covid疫苗是造成40%死亡率上升的唯一原因。Covid 疫苗灾难不过刚刚显露冰山一角，全球人寿保险公司在人口死亡率继续上升情况下会不会陆续破产？作为金融基石的保险业破产后，给整个社会带来的震动无法想象。这是不是也是为何这篇文章在英国竟然被屏蔽呢？
+**新闻来源**
 
-参考资料：
+[Sen. Ted Cruz: GOP May Impeach Biden if They Win House](https://www.newsmax.com/politics/tedcruz-gop-joebiden-impeachment/2022/01/03/id/1050874/)
 
-[ZeroHedge: Life Insurance CEO Says Deaths Up 40% Among Those Aged 18-64](https://www.zerohedge.com/medical/life-insurance-ceo-says-deaths-40-among-those-aged-18-64-and-not-because-covid)
-
-[ZeroHedge: Life Insurance & COVID-19; Something Doesn’t Make Sense](https://www.zerohedge.com/covid-19/life-insurance-covid-19-something-doesnt-make-sense)
-
-[2022-01-03晚 GTV新闻访谈](https://gtv.org/video/id=61d3a29831a71619b5744168)
-
-校对发布：MQ
-![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
