--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,38 +1,49 @@
 ---
-title: 有声&#124;中国人只有在自己国家站起来，才能在世界上被尊重
+title: 2022年将是国内民众最穷困的一年
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1820385/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1820396/)
 
-配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-我是听到共产党建国以来，残害了近一亿中国人，让我醒悟的。这次听了郭先生的直播，还是让我非常震撼，直击心灵。
+作者：纽约香草山 – 侠肝义胆
 
-追根溯源，中国人没有顾忌的吃法，最主要还是当时饿死人最多的二广地区、四川、河南……当人在极度饥饿，濒临死亡的时候，是没有人性可言的。中国人的撒谎、不诚实，是中国共产党的一贯作风，在这样的环境中，中国人很难不随波逐流。在这样的体制下的中国人，能有什么尊严可言？！
 
-我认为“富贵思淫欲”的另一种解释是，在人有了一定的经济基础，生活富足，没有生活压力，有更多时间的时候，才会有精神上的升华，对生活品质有更高的追求。
 
-美国等西方国家就达到了这样的水平。
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
-只有推翻中共这个邪恶的统治，中国人才不会被奴役。中国人只有在自己的国家站起来，才能在世界上被尊重！
 
-期待早日灭共，当新中国联邦的旗帜在中华大地飘扬的时候，中国人在自己的国家，一人一票选出自己的政府。
 
-当中国人真正做到自己当家作主的时候，我相信会有一天，我们新中国联邦人，无论走到世界任何地方，都会骄傲的说—我是新中国联邦人！
+据墙内媒体1月2日报道，由于债务压力加上无收入来源，2022年墙内民众将是穷困的一年。
 
-文字版原文：[中国人只有在自己国家站起来，才能在世界上被尊重](https://gnews.org/zh-hans/1817079/)
+报道提示，中共国内很多人都处于负债状态，多数人承担着巨额贷款，网贷、信用卡、房贷、车贷之类债务很常见。综合各种债务，保守估计国内债务人数现在超过6亿，这意味着有42%的居民有债务需要偿还，而实际债务人数还可能高于这一数字。负债人数的增加，导致了老百姓近几年整体消费能力急剧下降，各种消费行为受到巨大影响。
 
-音频处理：喜山必胜Maverick
-发稿：呼吸的雾霾（文小呼吸）
+在中共病毒肆虐以及西方国家对中共的制裁之下，中共经济处于崩溃边缘，墙内许多企业纷纷倒闭、破产。相关数据显示，中共国总体失业人数已高达1.2亿，接下来，会有更多人没有工作和收入来源。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide8.jpg)
+参考链接：
+[2022年可能将是最穷的一年，从现在开始好好珍惜手里的现金](https://3g.163.com/dy/article/GSMPB89Q0545MJC6.html?spss=adap_pc)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-3.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
+
+总编：DM
+编辑：飞虹
+校对/发稿：为真不破20
 
 **更多资讯，更多关注**
+
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
 [**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
 [**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
 [**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
 [**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
