--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,28 +1,54 @@
 ---
-title: 澳洲新南威尔士CCP病毒新增确诊今日再度打破记录
+title: 盘古裕达物归原主后将全素餐厅、恢复原貌、惩罚背叛者
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1820963/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1821050/)
 
-撰稿：Gradient Boost
-![](https://assets.gnews.org/wp-content/uploads/2022/01/404.jpg)图片来源：Pexels免费照片资料库；摄影：Belle Co
-当地时间1月4日，澳大利亚悉尼市所在州新南威尔士再度创下了新的 CCP病毒每日确诊记录，在过去24小时内发现了 23,131 例CCP病毒新增感染病例。
+**郭文贵先生**：但是盘古和裕达的故事过去七哥有两个挣扎，盘古、裕达从过去2015年在这我肯定没拿走一分钱专案组知道，在过去我也没拿出一分钱，所有的维持着是一个企业和员工的生存还有七哥的爱好，但是你说七哥这几年我真的是说实话，我最不想干的事情就是盘古、裕达的两个餐厅。
 
-同时该州因CCP病毒的住院人数也在继续增长，有 1344 人接受治疗——比昨天增加了 140 例，其中有超过100名患者处于重症监护状态。令人遗憾的是，又有两名患者不幸因CCP病毒离世，再此之前二人均已完成了两剂CCP病毒疫苗的注射。
+我在2009年时候，我说我最不喜欢，你看我来最少的，我从2009年以后最少来的是餐厅，厨房我已经不来了。我觉得我一辈子都不会搞这什么有肉食的餐厅，就是我看到杀生和大量的肉食我已经心里不舒服了，就是七哥的修行是真到这个境界了，所以我不想做餐厅。而且我看到无数个当屠夫的、开肉食餐厅的癌症、家庭被灭、着火烧死、一车一车的车祸，我真的很在乎这件事儿。但是呢我由于企业得经营、员工得吃饭，我又不要钱。
 
-同时我们不能忽视，23,131 例的最新记录是在近日检测人数大幅下降，许多检测诊所关闭的情况下创下的。昨日的CCP病毒检验人数为83000人左右，这相比年底高峰时期的157000人几乎可以说是拦腰减半。
+裕达是在2010年后我们又投进了十几个亿现金进行装修，我们没有拿一分钱，里边儿现在没有几乎没有一家我家的（人），公司员工在里边儿。我们裕达是整个盘古、裕达文化的创始摇篮，六、七万个员工在里面进进出出，绝大多数员工都是30年左右。我们在盘古、裕达在2015年只有一个人背叛了我，陈晓龙是当年我小时候的化学老师，山东莘县老家的，当时也是裕达的老总。
 
-Jeremy McAnulty 博士敦促新南威尔士州居民尽可能在家工作。他表示：“我们鼓励人们在可行的情况下在家工作，这将有助于最大限度地减少处于上下班过程和在办公室逗留的人数。”
+现在裕达这件事情李友、万达王健林和共产党的特务，就李友永远是用“蓝金黄”的招儿，用他老婆、用他女儿、用他娘、用他弟媳妇儿全上，他说没有搞不定的官儿，钱加上性和肖建华一样没有搞不定的。结果他同样“蓝金黄”就搞定了我们的老员工，最后在前天就是平安夜那天收走了裕达，所谓给了十天交接期诱骗员工签署了一个不能补偿的合同，绝大多数孩子都很天真嘛，都是我们老员工干的。我们有五个老员工都是30年和28年老员工，在一年前已经和李友和万达和共产党合作。
 
-人们也越来越担心新南威尔士州的医院系统会在该州第四次CCP病毒爆发浪潮的压力下开始崩溃。新南威尔士州卫生局已恳请居民除非绝对必要，否则不要拨打000急救电话。该部门在推特上呼吁：“我们都需要发挥自己的作用，不要给卫生系统带来任何不必要的负担。”
+这五个员工把所有裕达酒店多年贵重的，我们买虫草都是一买3、5年的虫草，以前最好的虫草，红酒上亿的红酒，茅台都是几千万、上亿的茅台，这都是最好的当时，全部自己偷偷地捋走了。公司大的一个大楼已经几十年了，你像七哥那时候的好东西多了去了，你从老家具呀，艺术品呐，咱没有拿走一样，像瓦沙吉的沙发呀、真实的瓦沙吉地毯、那块毯呢、还有那些艺术品呐都捋出去了。
 
-全澳大利亚昨日一共有超过47000名CCP病毒确诊病例，除新南威尔士新增确诊突破两万以外，维多利亚州过去24小时的新增确诊也突然出现急剧增长，达到14000人左右。在维多利亚州首府墨尔本，已经有三家医院请求若无紧急医疗情况请勿前往医院就诊。
+捋出去他知道有一天会犯法的，他是会犯罪的，他跟李友达成了默契，跟专案组达成了默契，你拿走点儿、我拿走点儿，每年现金最起码5000万，这5000万~8000万的现金他们就跟这些人就全分了。这五个老员工背叛战友我已经一年前就知道，我不说出来，这账是一定会跟他算的，裕达和盘古从来员工之间没放过一个背叛者。
 
-上述两个地区此前的两剂疫苗接种率均已在93%左右。
+那么裕达已经被李友等“蓝金黄”，和共产党的从过去的腐败要拿走裕达，曾经曾庆红的侄女宝宝，曾宝宝也想拿，到最后是李友、万达和我们的老员工买通拿走。到今天裕达拿走说实在话我心里真地放下了，我不用担心万一一天它不能营业发不出工资的时候我还得解决工资的问题；
 
-新闻参考链接：[9 News](https://www.9news.com.au/national/coronavirus-update-nsw-concern-mounts-for-hospital-system-as-nsw-health-issues-warning/1dfa9bc9-8fe6-474d-911a-139408825938)
+第二，我没有那个杀生的那个孽缘对我的，对我造成的这个孽，我觉得我没有这个压力了。更重要的事情让我，我们现在是总加到一起150万个员工，这整个集团出现了六个可确定的背叛者，就未来清算的时候才六个人，一定会清算的。盘古和裕达走向就是两个地方：一个被火烧了我们再重建它；第二个，等咱新中国联邦干掉共产党以后，盘古和裕达一定会回到新中国联邦人手里，到那时候我告诉所有的餐厅一定是不会卖肉食的，一定是全素的；
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+还有一个，所有的都恢复到原样，而且所有的背叛盘古、裕达的都会被惩罚，然后盘古和裕达会成为外星人和咱们地球人接轨的两个地点、两根天线“咔、咔”。
+
+字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
+
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
