--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,9 +1,9 @@
 ---
-title: 女军人指出强制军队疫苗接种非法
+title: 郭文贵：读新中国联邦宣言、联系农场、远离城市是解决之道
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820937/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820967/)
 
-12/23/2021 女军人指出强制军队疫苗接种非法。人们也未被告知实验性疫苗的潜在风险和副作用。
+1/1/2022 文贵先生新年大直播：读新中国联邦宣言、联系喜马拉雅农场、远离城市是战友们抱团取暖、渡过难关的解决之道。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
