--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,76 +1,30 @@
 ---
-title: 中共社交媒体目标以获取西方的数据
+title: 01/04每日播报｜印尼禁止煤炭出口 中共用电危机恐加剧
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1820809/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1820781/)
 
-编译： Jenny Ball
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/61d40c0d31a71619b5747c96)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-189.png)图片来源**：**republicbrief.com
+**2022-01-04**
 
-中共政府和军队正在挖掘 Facebook 和 Twitter 等社交媒体平台，以便其在中国的军队、警察和政府实体收集有关西方目标的敏感信息。
+据法新社1月2日报道，近期印度尼西亚因担忧国内电力供应不足，宣布将于2022年1月1日至1月31日间停止煤炭出口。此消息一出立时就被各大中文媒体争相报道，随后登上了中共国的墙内新闻热搜。据了解，印度尼西亚一直是中共国最大的煤炭进口国，此禁令一出无疑会让中共国的用电危机再度加剧。
 
-据《华盛顿邮报》报道，自 2020 年代初以来，审查了 300 多个中共政府项目的招标文件和合同，**中共政府购买了更新的、更先进的数据监控系统，以收集有关外国实体的信息。**
+据公开数据显示，印尼是全球最大的动力煤出口国，仅2020年的煤炭出口量就高达4亿吨，其中，最主要的出口大户就是中共国。与此同时，印尼也是中共国最主要的煤炭进口来源国。据中共海关数据显示，中共国在2021年1月至11月期间共计进口煤炭2.9亿吨，其中印尼对华进口煤炭量就达到了1.78亿吨，占中共全年煤炭进口量的61%。
 
-公共领域的文件显示，为中国官方媒体购买软件的花费是 32 万美元，**其目的是通过社交媒体的挖掘，创建一个外国记者和学者的数据库。**
+此前，中共国就曾因与澳洲关系交恶从而导致了去年的大面积限电现象。之后，中共便只好从印尼进口大量煤炭。而今在印尼煤炭也被禁止的情况下，中共国却正值寒冬，面临着巨大的供电、取暖压力。对于当下的中共国而言，缺电危机迫在眉睫。
 
-此外，中共政府还购买了价值 216,000 美元的北京警务情报系统，该系统针对香港，台湾，以及一个新疆网络中心，该中心对海外的维吾尔语内容进行分类。中共新闻部中宣部透露，该软件将使中共“更好地了解反华人员的地下网络”。
+中共电网官方数据显示，自今年元旦起国内多省市电价再出新高，部分地区尖峰时段最高涨价七成。据了解，中共国内目前已有江苏、山东、陕西、山西、云南等二十余个省市都再次调整了当地的燃煤电价。其中，部分化工大省如江苏、山东等地已接连调整区间电价，尖峰时段电价最高涨幅达到了70%。这些被调整地区大多是化工行业重镇，在精细化工、煤化工、燐化工等细分领域，对数万间化工企业都会带来直接的冲击。
 
-中共还有一些活动正在进行中，以建立一个实时信号系统网络，该网络将提醒国家领导人，注意可能破坏或威胁国家利益的趋势。
+新年伊始，中共国的电价上涨却扑面而来。然而，电力紧缺与涨价都将推升中小企业的营运成本，使开工率下滑，而众多化工大省同步调涨电价，也牵连多个细分产业链的开工率、市场库存、采购销售等。中共国的用电危机将促使国内的供应链、金融等问题进一步加剧。
 
-为了实现完善其对外宣传工作的更广泛目标，中共一直在使用其内部监视系统来收集有关某些西方目标的信息。
+（ 秘翻新闻主编  Noemi编译报道 ）
 
-该报获得的中共政府文件显示，警方和宣传部门将代表中共政府购买和维护在海外注册的在线账户。
-
-此外，还进行了各种采购，从小型自动化软件应用程序，到大型昂贵项目。作为预算的一部分，该州还将为 24 小时工作人员编制预算，包括讲英语的人和外交政策专家。
-
-在高度可定制的程序中，有一些用于从使用社交媒体的个人收集实时数据，有一些则用来跟踪广泛的趋势，例如过去几年美国大选的趋势。
-
-《中国日报》在一份招标文件中称，在中美贸易谈判和香港事件的背景下，平台舆论战的艰巨性和必要性日益凸显。” 《中国日报》在一份“外籍人事分析平台”的招标文件中表示，这家国家支持的报纸为该平台出价 30 万美元。文件继续写道：“我们正在与美国和西方媒体竞争，**争取话语权**的斗争已经开始。”
-
-规范中还包含一个程序的信息，该程序将挖掘 Twitter、Facebook 和 YouTube，**以获取来自西方国家的所谓知名媒体记者，以及属于政治、商业和媒体圈的其他公众人物的数据。**
-
-为了分析结果，程序会自动收集并存储来自中国服务器的实时数据。
-
-除非事先获得许可，否则 Twitter 和 Facebook 都在其隐私政策中禁止此类数据收集。
-
-“我们的 API 仅提供对公共数据和推文的实时访问，不提供对私人信息的实时访问。 根据我们的开发者政策和条款，我们禁止将我们的 API 用于监视目的，”一位来自 Twitter 的官员向邮报表示。
-
-熟悉该软件以及中共国内舆论网络的人士都将中共的努力描述为“可怕”，在他们看来，这表明：**政府对与舆论作斗争的态度有多么强烈。**
-
-德国无党派公共政策智囊团，马歇尔基金的高级研究员马雷克·奥尔伯格（Mareike Ohlberg）说，他们现在正在将部分努力转向外部，坦率地说，我认为这太可怕了，看看在中共国内部造成的庞大数量和规模。
-
-“这确实表明，**他们现在觉得在海外保卫中共、在海外打舆论战是他们的责任**。”
-
-值得注意的是，中共的网络舆论分析系统，是习近平倡议现代化国家“宣传机器并保持对互联网的控制”的关键要素。
-
-政府官员将可以访问收集和监控的大量数据，这将有助于他们了解民意，并为国家的审查机构提供支持和监督。
-
-**北京认为，监测和分析对其“舆论引导工作”至关重要，该工作旨在通过针对特定受众的审查和宣传，来塑造有利于北京的舆论。**
-
-中共于 1989 年开始了舆论运动，以回应在天安门广场举行的民主示威活动。
-
-尽管全国舆论监测网络的具体范围不得而知，但一份政府资助的论文在 2014 年报道称，全国有超过 200 万人担任舆论分析员。
-
-一家政府支持的媒体在 2018 年发表了一篇文章，称该行业价值“**数百亿元**”，约为数十亿美元。此外，该官员声称，**该行业正以每年 ****50% ****的速度增长**。
-
-Twitter 宣布，截至 2020 年 6 月，已有 23,000 个与中共有关的账户被暂停。
-
-据该平台称，这些账户显然是在使用秘密策略来破坏在香港发生的民主抗议活动。
-
-Twitter 报道称，截至 2021 年 12 月底，它又删除了 2,048 个与北京及其宣传工作有关的账户。
-
-在许多专家看来，这些账户只是中共经营账户的一小部分。
-
-**评论：这就是为什么文贵先生说：媒体比原子弹的作用更大。由于中共和邪恶势力对世界主流媒体和社交媒体的控制，两年的病毒肆虐和强制注射mRNA “疫苗”毒药，已经无声的杀害了相当于一战和二战战场上死亡的人口的总和。而疫苗的灾难还远没有到来……**
-
-新闻来源**：**[republicbrief.com] [China mining social media to harvest data on western targets](http://republicbrief.com/china-mining-social-media-to-harvest-data-on-western-targets/)
+发布:星星
 
 * * *
 
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
