--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,25 +1,11 @@
 ---
-title: 法国科学家发现新的中共病毒变体IHU
+title: 麦卡洛：由于死亡人数过高，早在二月疫苗接种就该叫停
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820606/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820741/)
 
-#### 撰稿：彩虹
+12/15/2021 麦卡洛博士：事实证明，美国领导和负责疫苗项目的机构是错误的。疾控中心和食品药品管理局不应该负责诸如疫苗项目之类的临床项目。我们没有设立相关的独立安全委员会，因此没有人在 2 月份叫停疫苗接种项目。截止1月 22 日，美国已经有 182 人死于该疫苗，超过了美国每年接种 2.78 亿次疫苗中的平均 150 人致死人数。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-23.png)图片来源：每日邮报
-1月3日，《新闻极限》引用《每日邮报》周一的报道，指法国科学家发现了一个新的中共病毒（COVID-19）变体。
-
-法国马赛地中海感染研究中心（IHU Mediterranee Infection）的研究学者于12月10日发现了该毒株。负责发现该毒株的菲利普·科尔森（Philippe Colson）教授说：“在马赛地理区域，我们确实有几个这种新（中共病毒）变体的病例。我们将其命名为‘变体IHU’，刚刚提交了两个新的基因组”。
-
-根据报道，该变体IHU一共带有46种突变，更具有疫苗抗性。但是，目前在传播性方面还没有显示出超过中共病毒变体奥米炕（Omicron）。
-
-到目前为止，在马赛已经发现了12个病例，据信第一个病例来自喀麦隆。该中共病毒变体被称为B.1.640.2，携带E484K突变，这使其更具有疫苗抗性。
-
-根据一篇尚未发表的论文，“这些观察再次显示了新的SARS-CoC-2（中共病毒）变体的出现以及从国外输入的不可预测性，而且也验证了控制这种输入和后续传播的难度”。
-
-**新闻来源**
-
-[French Scientists Discover New ‘IHU’ COVID-19 Variant](https://www.newsmax.com/scitech/covid-19-ihu-variant-delta/2022/01/03/id/1050852/)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
