--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,48 +1,29 @@
 ---
-title: 西安疫苗灾难将在石家庄廊坊张家口承德江浙广州武汉重演
+title: 上野动物园即将向公众公开双胞胎大熊猫
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1821124/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1821214/)
 
-**郭文贵先生**：我再跟你说西安的疫情不是任何新的病毒，就是疫苗！就是疫苗！西安呐，西安这个城市很有邪的！西安和东部和中部的人，文化完全不一样。你但凡在西安、在这些地方，陕西这地方地过的人你能有感觉的。就是陕西这个地方和这个咱们山东、河南、河北人，包括江浙人是很不一样的文化，他们有那种所谓的当年卫都之后的那种“混不吝”（指：什么都不在乎），大秦的那什么“混不吝”啊。
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-198.png)[图片来源](https://news.yahoo.co.jp/articles/9054ce6d5165e41c712f3c70eb8b15bcaf715e9d#:~:text=%E5%8F%8C)
+2021年6月在东京上野动物园出生的双胞胎大熊猫晓晓（雄性）和磊磊（雌性）将于6月12日向公众开放。
 
-而且敢吃、敢喝、敢做，听说西安所有的打的疫苗都属于特定的疫苗，山西的（口误，应为“陕西”，下同）的书记找的药厂特定的，最强的！大家记住疫苗里边有什么？有50克（疑口误：5微克，下面成分为10微克和25微克，按新闻报道西安当地接种疫苗为智飞疫苗，其抗原含量为25微克，为所有疫苗中最高）、100克、250克，记住啊，含量的。听说只有山西（陕西）定了是600万只第一期全是250克，第二次又订了1000万只全是250克。也就是山西（陕西）人和这个河南人，河南人嘛就是啥都可以糊弄，连艾滋病都可以糊弄，是吧！50克的打了两针。
+双胞胎的姐姐姗姗（4岁）返回中（共）国时间推迟到了6月，一段时间内人们可以看到在一起的5头熊猫，当地人和粉丝都很期待。
 
-山西（陕西）人打了两针是500克，等于河南人打十针，这十针下去这人几乎就是、就所谓的热血症，而且是眼睛流血、鼻流血、耳朵流血，女性大流血，血流不止，男的肛门流血，可不是疽血热啊，大家记住啊！西安是七窍流血。很多孩子是耳朵往外流血，因为孩子的耳朵是最敏感的神经系统，耳朵流血，这是百分之百的！
+目前，通过抽签，每天的观看的人数将限制在1000人左右，需要提前登记。双胞胎和他们的母亲欣欣（16岁）将出现在西园的熊猫森林室内展览区。在东园的熊猫馆里，不需要抽签就可以看到16岁的父亲力力和姐姐姗姗，但是进入公园需要预约。
 
-现在肯定的确定，由此诞生的、它会造成病毒的变化，死亡将是不可想象了啊，不可想象了！现在整个山西（陕西）的医疗系统，山西三大医院系统啊，一个是我朋友，两个是我很好的朋友。我有绝对的信息，他们说医院里边这些天辞职的、走人的、病倒的，（百分之）40到50的人没了。而且整个山西（陕西）所有的像对待集中营式的管理，很有可能会延伸到中国的各部。
+据动物园称，出生时只有100多克的晓晓和磊磊已经迅速长大，体重都超过了12公斤，看上去都很健康。为了让他们能够习惯于人和事物的声音，白天一直在训练他们听收音机。
 
-你们知道下一个爆发地方在哪，知道吗？现在说到这里，我告诉大家，河北，河北。会从石家庄、廊坊、张家口冬奥会，然后到承德，再爆发又是江浙。就是春节啊，这个春节春运又是，又是那么，然后就是广州，武汉可能再次面临着重大的传染。
+据报道说，因中共病毒（新冠病毒covid-19）受重创的上野当地气氛非常热烈，松坂屋上野百货店将从1月12日起在店内悬挂横幅，还会制作一些带有照片的贴纸，相关人士说他们希望这是一个给当地带来活力的机会。
 
-这是共产党给人家放毒，这就是小时候给人家家——小时候我们跟人家打架，给人家房子点着一样，是吧。我有一天跟人家打架的时候，点人家房子去，喊“七哥加油，七哥加油”，点着了，拿那个玉米芯还蘸了油缠着，冲啊，一点着扔过去了，结果发现，还转着扔，一扔，扔我家来了，把我们家房子给烧了，让我爹把我揍一顿是吧。共产党现在就这样，喊呐，加油，扔到美帝国主义去，结果扔西安去，是吧。这火直接把自己家房子烧半拉，就这么简单的概念。
+在商业街做包装材料销售的平井直销店，自从双胞胎大熊猫出生后，店内销售的熊猫商品越来越多。店员须贺邦明希望整个城市有更多的顾客。上野旅游协会主席二木忠男说：熊猫对上野来说就像神一样，熊猫展览的开放，将是一个催化剂，希望游客的数量能够恢复。
 
-字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
+高氏贵博是博客“每日熊猫”的管理人，自从2011年夏天在上野动物园看到大熊猫以来，他已经拍摄了10多年的照片，他说，到时候会尽力做到能够尽快把双胞胎的照片分享给大家。
 
-编辑整理：Jacques；
+信息源：[双子パンダ、もうすぐ会えるよ　公開間近、地元やファン期待　上野動物園](https://news.yahoo.co.jp/articles/9054ce6d5165e41c712f3c70eb8b15bcaf715e9d#:~:text=%E5%8F%8C)
 
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
