--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,54 +1,25 @@
 ---
-title: 99.999%数字货币会消失，取代它们的是有支付系统的喜币
+title: 游街示众——文革又复活了
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1821100/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1821195/)
 
-**郭文贵先生**：大家可以看到，所有的，所有的大家能看到一个，法币从过去的1000到达40000仅仅是20多个月，这是人类上前所未有的。官方说法是这个法币在过去一年多两年时间里边，印货币印发法币226万亿美元，是全球GDP的一倍，事实上是260万亿。
+撰稿：菜园子112～尕虎
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide1-6.jpg)
+社交媒体图片
+2021年12月28日，广西靖西开展了一场普法宣传，目的是为了打击边境违法犯罪行为。
 
-兄弟姐妹们，你知道这是有多么得恐惧吗？他印了260万亿美元，它到了这个数字货币才2.6万亿美元，才哪到哪呀？听懂我意思吗？兄弟姐妹们，260万亿美元才零头都没有才到了数字货币，安平妹妹听懂我意思了吗？就有人在你家的羊肉丸子汤里边，兑了一倍的水，他把你一倍的水才舀了这么一小杯，还是用那个小挖耳勺放到一个小盘里边。
+看了这场普法宣传, 这哪里是我们认知里的普法宣传，这分明就是文革时期的游街示众。因为有疫情，所以游街示众的犯罪嫌疑人身穿白色防护服，身旁押解的人员也穿着防护服。如此封得严严实实，认不出来，为了达到游街示众的效果，犯罪嫌疑人胸口挂个头像，再写个名字，看着真是可笑。就这个架势游街示众，刹那间仿佛梦回60年代。在头像上划个X，再戴个尖尖帽就更像了。新生代可能不知道这玩意儿的可怕之处，老一代一看就知道：运动了，运动了。
 
-你决定这未来这放到一边的耳勺挖的水会多大，雅阁你听懂你七哥的意思吗，小王子。所有他兑的水的这些东西，10%到达数字货币就是16万亿，就是现在的5倍，吓人不吓人，你觉得要不要人命。如果是严格讲法币除了战争，重新人类货币会再重组外，一定是50%会烂在金融里，或者这些所谓烂账里。另外的50%就会在全球的经济会逐渐地被消失掉，干什么？第一大市场一定是数字货币市场。
+这样的惩戒会，看着太魔幻了，让人觉得：历史总在押韵。
 
-我想告诉大家的，你能坚持最后20秒，刚才你看到的那一个，你就不知道你能坚持20秒接下来会发生啥事你知道吗？你被对方要求马上进行第二次，你下次就可能坚持40秒，数字货币你从去年的2000亿的总数值坚持到今天的时候，你就是10倍总市值。
+不管游街示众的人犯了什么法，自然会有法律制裁，不知道哪一条法律规定可以这样游街示众？执法者不可用违法的手段来执法。执法犯法，这样的普法就是一个笑话。真不明白作出游街示众这种决定的人是怎么想的？
 
-你把这个20秒能看过去，下次你就是起步不是过去的起步你的郭三秒，你起步就是郭半小时，郭三十分钟，你起步就可能是几万亿美元。如果你要是冷静别得病，中间别被对方说休息下这种事发生，是吧，别这种事发生，别受过刺激，你就可能到达50万亿。
+新闻参考链接：
 
-50亿和刚出的郭三秒，就相比的2000亿的多少倍。如果你在这个当中被平均数算的话，你站在最高端的话，就像比特币一样，从过去的800块钱，到达60000美金，他不是平均的，有的是这个概念，有的可能是几块几倍，谁能挡得住数字货币成为全世界躲避金融灾难，政治经济灾难，疫苗灾难，病毒灾难和通货膨胀的M2货币通发的蓄水池，避险池，谁能停止这个，没有任何人。
+[大纪元](https://www.epochtimes.com/gb/21/12/29/n13465460.htm)
 
-当你们看这个数字货币，你们看喜币也好，什么币也好，再看这个拜登币，他们根本不懂什么叫数字货币，我不是说他们，没有支付的系统数字货币，你们会看到刚才列表当中90%会被消灭，比特币会变成0，一夜之间，一分钟之间，去中心化的币一定会变成0，那么不去中心化的币，像币安赵长鹏这个小兔崽子这个烂仔他一定会被清算，因为他是洗钱的平台，就是有犯罪历史的，有没有依法KYC的，一定会被灭。
-
-最近大家看到，喜币的价格的稳定，多少战友加入，每天很多战友国内的说，七哥我特别感谢，我刚买了1000个喜币，我刚买了500个喜币，我是真的最开心的，现在很多人准备好要在元旦的阳历年大直播的时候，七哥我要在那天买币，千万别涨，我也希望求上天，我们说了不算，是吧，元旦一定会降下来，我深信不疑，元旦一定会降，我相信元旦一定会降下来，会降很多，我相信。
-
-那么未来会是多少，我再说一遍，未来一定会超过比特币，是超过什么时候的比特币我不好说，但一定会超过比特币，而且我相信世界上99.999的数字货币你看到的今天都会消失。所有代之的就是像今天我们看到的，必须中心化负责任，和去中心化技术的数字货币，而且绝对不给犯罪机构提供任何机会，百分之百KYC和专业化的，而且有支付系统的，被国家主权所接受的，而且能成为大宗交易的。
-
-字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
-
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+编辑：云彩
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
