--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,35 +1,19 @@
 ---
-title: 美国议员反对接种疫苗 遭推特永久封锁
+title: 日本将对面部识别技术进行出口管制
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1820828/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820877/)
 
-#### 撰稿：日本东京方舟农场  海星
+#### 翻译/撰稿：zzballack
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/8B32409B-1B41-493A-86A7-454FBC29102F.jpeg)（图片来源：路透社）
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-4-3.jpg)图片来源：BBC
+据《台湾英文新闻网》（Taiwan News）1月3日报道，日本政府将对使用人工智能的相机与人脸识别设备进行出口管制，以防止被用于监视或迫害人权，特别是被中共享于监视和迫害少数民族。
 
-1月1日，美国议员葛林（Marjorie Taylor Greene）在推特上发文表示美国有很多人因接种疫苗而死亡，随后其推特账号被永久封锁。
+据 《中新社》报道，一些国家对中共侵犯人权和持续镇压维吾尔族及其他群体的行为越来越关注。中共一直在使用人工智能和其他先进技术，并在新疆维吾尔自治区和其他地区部署大规模监控系统，限制人们的行动。
 
-据《自由时报》报导，美国乔治亚州众议员葛林于1月1日在大型社交媒体平台推特上发文表示，美国有非常多的人因接种疫苗而死亡。隔日，推特便宣布永久封锁该议员的个人账号，其账号有465000人关注。
+为防范先进技术被用于侵害人权，日本政府判断有必要采取新的措施，并与美国和其他志同道合的国家合作，在各国间引进新的相关规定。
 
-该报导指出，葛林曾4次在推特上发文表示疫苗政策是失败的，呼吁监管机构停止批准新疫苗，都遭到推特禁言。
-
-对此，葛林在另一社交媒体上批评推特掩盖真相，是美国的敌人。她坚信，大型社交媒体平台无法阻止真相的广泛传播，共产主义无法掩盖真相。
-
-事实上，美国哥伦比亚大学的研究人员日前发现，美国至少有 40 万人死于接种疫苗，远超美国CDC官方公布的数据。
-
-*参考链接：*
-
-1. [*https://news.ltn.com.tw/news/world/breakingnews/3788084*](https://news.ltn.com.tw/news/world/breakingnews/3788084)
-2. [*https://gnews.org/zh-hans/1801028/*](https://gnews.org/zh-hans/1801028/)
-
-
-* * *
-
-*素材采编：海星*
-
-*编辑：文顺*
-
-*发布：miumiu*
+新闻来源：[Japan bans facial recognition tech exports due to China’s human rights abuses](https://www.taiwannews.com.tw/en/news/4396710)
 
  
 
