--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,34 +1,47 @@
 ---
-title: 推背图壬寅-中共2022一朝听得金鸡叫
+title: 中国央行推出安卓和iOS版数字人民币钱包应用程序
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1820813/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1820854/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/CCP3839.png)
-**第三十八象　辛丑 震下离上 噬嗑
-谶曰：门外一鹿　群雄争逐 劫及鸢鱼　水深火热
-颂曰：火运开时祸蔓延　万人后死万人先
-海波能使江河浊　境外何殊在目前**
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-**第三十九象 壬寅 震下艮上 颐
-谶曰:鸟无足　山有月 旭初升　人都哭
-颂曰:十二月中气不和　南山有雀北山罗
-一朝听得金鸡叫　大海沉沉日已过**
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/digital-yuan.jpg)
 
-**1921年辛酉中共建党，金鸡，泽水困，遇金箔金的壬寅**
 
-历史上推背图的辛丑年发生一战，壬寅年发生二战，从2020庚子年、2021辛丑年和2022壬寅年的现在，全世界都因中共释放新冠状病毒的生化武器，和疫苗的次生灾难，造成了人类浩劫的生化战争，2021年辛丑，壁上土，火雷噬嗑，推背图上的死门和死人加上剥落毁损的墙角，死门不仅仅是世界各地的内外墙，甚至很多是在家死亡没有人知道，几千万人都是因为中共新冠状病毒而死去。** (死门在卦象上也代表着医护人员)，**我们可以推背图巽卦的火雷噬嗑和山雷颐看出不同的视角。
+ 
+图片来源：asia.nikkei.com
 
-2022年，金箔金，按推背图的第三十九象壬寅，山雷颐，外实内虚，透露了中共国不择手段贪图捷径，算尽阴谋，导致中共**身败名裂、养不活人民的现况，谶曰:鸟无足，山有月，旭初升，人都哭。而其中，鸟无足︰暗喻因贪嗔痴的人祸造成浩劫，使所有鸟类都在飞行走避；山有月︰暗喻人祸造成天崩地裂的崩；旭初升︰东方红，太阳升，中国出了个毛泽东，旭初升是指习太阳，习近平效仿毛泽东开启文化大革命2.0；人都哭︰全人类都因中共释放新冠状病毒的生化武器，和引诱人类接种mRNA的疫苗，将使人类因病毒、疫苗、自杀、意外死亡急遽攀升，墙内湖北武汉初期病毒爆发、石家庄、西安各地封城、长江沿岸和河南水患、缺电缺粮缺医疗等灾情、外交政治经济民生金融都到了爆裂的状况。**
 
-按推背图的第三十九象壬寅，颂曰:十二月中气不和，南山有雀北山罗，一朝听得金鸡叫，大海沉沉日已过。而其中**十二月中气不和︰表示人类将迎来最坏的一年12个月24节气都不太顺利，有各种大的动荡；南山有雀北山罗︰鸟儿在南山，却到北山去张网捕捉。暗喻舍近求远，方法错误；一朝听得金鸡叫︰1921年中共建党，1921辛酉金鸡，泽水困，遇金箔金的壬水寅木，暗喻中共灭亡前辛酉金鸡的最后一鸣；大海沉沉日已过︰表示世界将面对中共病毒疫情、疫苗后的各种变化。**
+#### 整理/编辑：小红帽
 
-中共在2022壬寅年，山雷颐，最大的问题是对世界各国和共产党派系、党员、人民出现严重的诚信问题，自行撕毁契约，不论是房地产还是股市的各种假信托、骗贷、一带一路等骗取西方财富，**共产党的淫溺惑乱、积弊腐败到了完全腐坏的阶段**，对内偷假骗老百姓70年，也都超出了极限，不消灭中共世界没有未来。**对墙内的老百姓而言，安分守己，忏悔业障，保命保家保财之余，尽自己能力广种福田阴德，方能消灾解厄，切勿贪婪、落井下石。有德之人遇大凶，观一切因果，毫发无伤。笔者想写的很多，能写的有限，上天自然加持新中国联邦来消灭中共，共产党内忧外患、大势已去，众人围剿，共产党你完了! X3**
+根据《频道新闻亚洲网》1月4日报道， **随着中国央行加紧开发自己的数字货币，中国已在手机应用商店上发布了数字人民币钱包应用程序的试点版本。**
 
-**纵经千百劫所作业不亡，因缘会遇时果报还自受。万般带不去，唯有业随身。断恶修善，行善积德。**
+由中国人民银行（PBOC）数字货币研究所开发的“e-CNY（试点版）”应用程序于周二在上海在中国安卓和苹果应用程序商店开放下载。
 
-本文仅代表个人立场
-**祈祷万佛万神加持文贵先生与新中国联邦战友**
-审核:Athena雅典娜 发布:Amitofu
+该应用程序中的一条通知称，程序处于研发试点阶段，仅通过提供电子人民币服务的支持机构（包括国内主要银行）向特定用户提供。
+
+中国人民银行行长易纲在 11 月表示，中国将继续推进央行数字货币的发展并改进其设计和使用，包括提高其与现有支付工具的互操作性。
+
+在年终会议上，中国人民银行表示将继续推进数字人民币的研发。
+
+阿登纳基金会（Konrad Adenauer Stiftung）高级项目经理巴登海姆（Alexander Badenheim）曾于2020年10月份对《德国之声》驻北京记者说，**发行数字主权货币可能是中国政府重新控制国内金融的一种手段。**中国可能希望创建自己的国际支付机制，类似于SWIFT，帮助金融机构处理交易的代码。**新的数字货币国际支付机制将不由美元主导，而是由中国的数字人民币主导。**
+
+通过成为第一个主导数字货币领域的大国，中国有可能在全球经济中占据更强势位置，再也不担心受到美国制裁。**这是中国挑战美国全球主导地位的又一大步。**
+
+新闻来源：
+
+1、[China central bank launches digital yuan wallet apps for Android, iOS – CNA (channelnewsasia.com)](https://www.channelnewsasia.com/business/china-central-bank-launches-digital-yuan-wallet-apps-android-ios-2414061)
+
+2、[中国在数字货币领域领先一步，但谁会跟着走？ | 经济纵横 | DW | 11.10.2020](https://www.dw.com/zh/%E4%B8%AD%E5%9B%BD%E5%9C%A8%E6%95%B0%E5%AD%97%E8%B4%A7%E5%B8%81%E9%A2%86%E5%9F%9F%E9%A2%86%E5%85%88%E4%B8%80%E6%AD%A5%E4%BD%86%E8%B0%81%E4%BC%9A%E8%B7%9F%E7%9D%80%E8%B5%B0/a-55184812)
+
+***发布：小红帽***
+
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
