--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,9 +1,9 @@
 ---
-title: 麦卡洛：由于死亡人数过高，早在二月疫苗接种就该叫停
+title: 恒大表示在复工方面初显成效
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820741/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1820748/)
 
-12/15/2021 麦卡洛博士：事实证明，美国领导和负责疫苗项目的机构是错误的。疾控中心和食品药品管理局不应该负责诸如疫苗项目之类的临床项目。我们没有设立相关的独立安全委员会，因此没有人在 2 月份叫停疫苗接种项目。截止1月 22 日，美国已经有 182 人死于该疫苗，超过了美国每年接种 2.78 亿次疫苗中的平均 150 人致死人数。
+12/27/2021 印度WION新闻：负债最高的房地产开发商恒大表示其在复工方面初显成效，并敦促其员工要日夜奋战来恢复销售、偿还债务。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
