--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,49 +1,25 @@
 ---
-title: 习近平11月演讲稿刻意歪曲89.64惨案
+title: 参议员克鲁兹：2023年共和党可能会弹劾拜登总统
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1820484/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1820713/)
 
-作者：日本方舟农场 – Andy5
+#### 撰稿：彩虹   
 
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-7.jpg)图片来源：达拉斯新闻
+1月3日，《新闻极限》报道泰德·克鲁兹参议员预测，共和党在今年晚些时候举行的中期选举中将接管众议院，并可能在2023年采取行动弹劾总统乔·拜登（Joe Biden）。
 
+克鲁兹有一个播客“Verdict with Ted Cruz”，在其最新一期节目中，他说，他“对2022年（中期选举）非常乐观。我认为共和党赢得众议院的几率为百分之九十，甚至比这还要高”。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+他指出，如果共和党拿下了众议院，明年有可能发生对总统的弹劾，“如果我们（共和党）拿下了众议院，我说过这种可能性是极大的，那么我们认为将看到对拜登政府的严肃追责调查”。
 
+关于弹劾（拜登总统），他说存在这样的机会，指出“无论公平与否，民主党将弹劾作为了武器，他们用弹劾来达到党派的目的，用来对付与他们达不成一致的川普。这样做的弊端之一就是，你越将其武器化，将其作为党派的工具，那么也会导致对方以其人之道还施彼身”。
 
+关于弹劾的理由，他说：“我认为共和党的众议院将面临巨大的压力要开始弹劾程序。我认为考虑进行弹劾有潜在的多种理由,最有说服力的可能是拜登总统在边境执法上的完全无法无天。这可能是现在最有力的弹劾理由，但可能还有其他理由”。
 
-1月1日，中共喉舌媒体《求是》杂志上，刊登了习近平于去年11月召开的十九届中央委员会议的讲话。
+**新闻来源**
 
-这次会议中，中共总结其所谓百年重大成就和历史经验。其中，引人关注的是习近平在讲话中，不仅抨击了美国参与朝鲜战争，更是扭曲了89.64天安门事件。同时，将89.64这个严重政治风波的解决，归功于所谓“中共紧紧依靠人民，采取果断措施打赢党和国家生死存亡的斗争”。该讲话在提及89.64惨案时，并无丝毫的悔恨甚至还是丧事喜办，称这是“正确航向和改革发展的正确方向”。
-
-分析人士指出，继去年5月，习近平专题学习班将文革的定义改为偏向“取得令人瞩目的成就”之后，此次在元旦刊登扭曲天安门事件的讲话，就是要将习的个人独裁转至合法化，并给中共党内定调。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide9.jpg)
-参考链接：
-1. [以史为鉴、开创未来　埋头苦干、勇毅前行](http://www.qstheory.cn/dukan/qs/2022-01/01/c_1128219233.htm)
-2. [时事大家谈: 重新定调文革，习近平释放危险信号？](https://www.voachinese.com/a/voaweishi-20210505-voaio-xi-jinping-redefine-the-cultural-revolution/5879012.html)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
-
-总编：DM
-编辑：文特
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
+[Sen. Ted Cruz: GOP May Impeach Biden if They Win House](https://www.newsmax.com/politics/tedcruz-gop-joebiden-impeachment/2022/01/03/id/1050874/)
 
  
 
