--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,45 +1,52 @@
 ---
-title: 盘古变成火龙的时候就是七哥接受世界十家媒体采访之时
+title: 美国国会两院2022中期选举
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1821052/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1821176/)
 
-**郭文贵先生**：刚才你没有回答我的问题，为什么十大媒体要采访我，我都拒绝了？答案非常简单，十家媒体来采访这个“龙头”的事情，最后一定记住，我们会发生十家媒体的大战，它一定会说你坏话，同时也达不到传播目的。为啥我不接受呢，不到时候，就是一句话，不到时候。什么时候到时候？盘古要变成火龙了，都检查完了，这个什么都检查完了，这个什么管道都没问题了，它哪天“嘣”变成火龙的时候。那个时候，我该说话了。
+整理报道：彩虹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/midterm_1.jpg)图片来源：国家地理
+美国是世界政治的中心，而美国政治的重心焦点体现在了国会两院，即参议院和众议院。两院的代表分别代表着不同的州的利益、代表着不同利益群体的利益、表达着各个群体的意见。郭文贵先生在直播中多次讲到美国2022年国会两院中期选举对于灭共的重要性，因此，整理、学习和研究美国国会两院中期选举的有关资料，对于了解美国国内的政治走向有着重要的意义。本系列带领大家了解相关本次中期选举参议院和众议院的部分情况，以抛砖引玉，促进相关深入思考。
 
-他一定会说这是郭文贵干的，在美国控制了，把龙变成了火龙。那个绝对会成为全世界最大的，到底世界上存不存在的第三方力量，到底有没有外星人，小王子最关心的外星人，还有我们的小飞侠最关心的有没有外星人。这都会给你一个答案。另外一个会告诉你，共产党它到底是一个无神论党还是有神论党？它打压宗教到底是假的是真的？它为什么打压其他宗教，无神论的时候它也装神弄鬼？
+**中期选举包含哪些内容？**
 
-第三个会证明，到时裕达的佛手要成为火手，它为什么会同时爆发。然后它栽赃我的时候，到时候看看到底是新中国联邦干的还是天意干的。不到时候。这在西方留下的痕迹是不可抹杀的。只有现在我们铁血组，草根还有马拉多纳，勇气，还有魔女，这么笨，竟然一天了连个视频都找不着，字幕都没加上。但是这个互联网是不可能的，我们肌肉猫就有，谢谢肌肉猫，就找到了。
+1. 改选美国众议院435席全部席位，选民直接选举产生。众议员按各州人口比例选出，大约50万人选一名，任期两年，但会依据每十年的人口普查重新划定选区。候选人必须年满25周岁，作为美国公民已满7年，且为选出州的居民。任何文官不得担任；
+2. 改选美国参议院约1/3的席位，选民直接选举产生。参议员每州选两名，任期六年。候选人必须年满30周岁，作为美国公民已满9年，且必须是选出州的居民。任何文官不得担任；
+3. 部分州长的选举，各州州长由选民直接选出。一般任期为4年，佛蒙特州和新罕布什尔州任期2年、无连任限制次数；部分州长有任期限制，但不少州长无任期限制；
+4. 各州、市、县举行的行政（州长、市长、县长）、立法（州议会【州参议院、州众议院）、市议会、县议会）地方议会选举。
 
-七哥在等待最佳出手时机，就像那个Vice采访我，一年是吧，我当时就说你采访我一年我都拒绝你，是吧！你想为啥拒绝你，因为你就是个骗子。我现在为啥我要采访啊？我就是让你，你骗我，我要在这事上揭发你这骗子，我不能让你一个人说话。我一个人反击是多么无力，我要跟她一起来反击，当场较量，结果她采访了一两个小时只用了3分钟，而且她犯了无数的大错，种族歧视，种族挑拨，然后尝试制造恐怖主义。甚至可能导致人道大灾难、种族大屠杀、编辑虚假骗取新闻，这都是一切都发生了。
 
-但是我是在她要四年前采访过我，我跟她说：四年前你们造假黑我，所以说今天我放摄相机。对吧？放摄像机干啥呢？放摄像机就是揭穿你们谎言的是吧？就是很直接告诉她。就这都挡不住她执行任务啊，她得要采访啊，她还有侥幸心理呢。所以你看这东西，你看这十家一定会来的。
+**众议院中期选举**
 
-字幕来源：[2021年12月29日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1805851/)
+美国众议院的选举将于2022年11月8日举行，所有435个席位都将进行选举。特别选举也将举行，以填补第117届国会中出现的空缺。
 
-编辑整理：Jacques；
+在2020年的选举中，民主党在美国众议院保持了多数，赢得了222个席位，而共和党则为213个席位。该次选举民主党翻转了3个席位，共和党人翻转了15个席位，另加一个由自由党人持有的席位。 下图为1999年至2021年美国众议院共和党和民主党席位的变动趋势图（红线代表共和党，蓝线代表民主党）。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-39.png)图片来源：Ballotpedia
+**参议院中期选举**
 
-字幕文件制作：小满；
+美国参议院的选举将于2022年11月8日举行，100个席位中的34个将进行定期选举。在2022年的34位定期选举中当选为美国参议院议员的人将于2023年1月3日开始其六年任期。
 
-视频制作及上传：Cindy；
+在2020年参议院选举和2021年1月佐治亚州的决选之后，民主党人和共和党人占据的席位对半分。这使得副总统卡玛拉·哈里斯（Kamala Harris）获得了打破僵局的一票，民主党人通过权力分享协议控制了美国参议院。
 
-G-News发布：小满；
+2022年将有14个由民主党人占据的席位和20个由共和党人占据的席位要进行选举。在2022年选举的这34个席位中，有32个是在2016年进行的最后一次选举。佐治亚州和亚利桑那州2022年的选举席位是在2020年进行的特别选举。 下图为1999年至2021年美国参议院共和党和民主党席位的变动趋势图（红线代表共和党，蓝线代表民主党）。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-10.png)图片来源：Ballotpedia
+综合以上情况，面对中共利用生化病毒发起的第三次世界大战以及对美国实施的蓝金黄和3F方案，由于世界暗黑势力与中共的勾结，美国内部分化严重。美国2022年中期大选结果将决定着美国的政治走向，决定着世界的政治走向，也是决定人类世界走向的重要因素。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+接下来的系列文章，我们将对各个州的选举情况和选举人分别做一个简要的概括，在这一决定人类生存与发展的重要阶段，分析和解读美国各州国会两院参选人的情况，对于理解和践行新中国联邦“为真不破”的理念，客观地经验这一历史进程，对于新中国联邦未来政治的重构和建设，有着重要的参考意义。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+**参考资料来源**
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+[United States Congress elections, 2022](https://ballotpedia.org/United_States_Congress_elections,_2022)
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+**发布：彩虹**
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
