--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,30 +1,30 @@
 ---
-title: 有声&#124;盖特是最重要的社交媒体平台
+title: 文贵爆料1.7: 大校证实Omicron就是生化武器，疫苗比病毒还可怕
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1833923/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1833991/)
 
-配音：香草山健身部 – 玫瑰园
-![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-1月5日大直播，文贵先生再次向战友们剖析盖特的重要之处。
+撰稿：Skagen
+![](https://assets.gnews.org/wp-content/uploads/2022/01/stand-news-virus-800x420-1.png)
+原图/制作：网络/Skagen
 
-第一，盖特是传播疫苗灾难的救命媒体。第二，盖特不出卖用户数据，改变了社交媒体平台出卖用户数据收益的现状。最重要的是：它打破了法币和数字货币屏障，开创了媒体成为个体间沟通的桥梁。盖特和GTV，未来的价值，绝对是金钱无法衡量的，他们是改变游戏规则的社交媒体平台。
+2022年1月7号，郭文贵先生在大直播中引用逃出中共国，现离开日本在某国政府部门做证的大校先生的话，证实了Omicron并仅仅是传播率奇高的病毒变异，而是具有生化武器的特征，而疫苗比病毒还可怕。
 
-今天盖特的数据，活跃用户占96%，与之相比，FB,推特上是垃圾信息泛滥。可想而知，盖特的传播力量有多大。在盖特上，我被评为共产党的噩梦，你看多少欧美人在下面表达感激。这就是盖特的力量，媒体传播的力量。
+各国都注意到这次Omicron的感染之容易前所未有，但是各国政府包括流行病专家重点关注的是医疗资源不崩溃，重症率不高，寄希望于“群体免疫”。
 
-文字版原文：[盖特是最重要的社交媒体平台](https://gnews.org/zh-hans/1831178/)
+大校说，这个Omicron染到身上不是开玩笑的，有病是让你长期有病和让你短期死亡，这都是生化武器可以做得到的，为什么没人小心呢？
 
-音频处理：喜山必胜Maverick
-发稿：Fei797
+大校还谈了他在某国政府秘密作证的过程，他说了不到5分钟，所有一屋子人说，“你别，你别说，你停，你停“，让我们休息了20分钟回来，每个人脸色铁青，他们真的是知道这疫苗比病毒还可怕。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-01-at-10.17.55-PM.png)
+郭先生让大家一定要搞清楚什么叫mRNA，mRNA就是刺突蛋白，就是病毒啊！郭先生再三重申，辉瑞制药，任何制药公司，现在已经没有一家制药公司敢说“我承担这个责任，承担后果”，没有一家！为什么制药公司研究的疫苗不承担责任呢？哪个疫苗的成分都叫mRNA，就叫刺突蛋白。这是他们回避不了的事实。其实越来越多的人在质疑：辉瑞心里没鬼，为什么要拖75年才公布疫苗资料？
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+郭先生自豪说，现在咱爆料革命在全世界受到这么大的关注，特别是科学家和专业人士想知道，为什么爆料革命能早于他们一年多知道这些真相呢？例如刺突蛋白会脱落，会感染。
+
+尽管爆料革命现在已经竭尽全力了，可是世界还是这个样子，不仅仅是战友，连郭先生和大校都非常感叹。郭先生感慨大校在2021年初的时候就说过一句特别经典的话：如果这个世界在确认这是病毒（生化武器）之前还没醒过来的话，就不需要这个世界醒过来了”。
+
+参考链接：
+
+[https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
