--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,29 +1,53 @@
 ---
-title: 文贵爆料1.7: 大校证实Omicron就是生化武器，疫苗比病毒还可怕
+title: 哈萨克斯坦关闭网络，比特币暴跌
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1833991/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1834122/)
 
-撰稿：Skagen
-![](https://assets.gnews.org/wp-content/uploads/2022/01/stand-news-virus-800x420-1.png)
-原图/制作：网络/Skagen
+![](https://assets.gnews.org/wp-content/uploads/2022/01/61d6af062030277daf1db609-1.jpg)
+前苏联共和国哈萨克斯坦是世界第二大挖矿中心，因全国范围内的反政府抗议活动，正面临重大的网络中断问题。
 
-2022年1月7号，郭文贵先生在大直播中引用逃出中共国，现离开日本在某国政府部门做证的大校先生的话，证实了Omicron并仅仅是传播率奇高的病毒变异，而是具有生化武器的特征，而疫苗比病毒还可怕。
+由于世界第二大挖矿中心哈萨克斯坦的抗议活动仍在继续，比特币出现了大幅下跌，因为那里的网络被关闭，迫使当地虚拟币矿工关闭他们的设备。
 
-各国都注意到这次Omicron的感染之容易前所未有，但是各国政府包括流行病专家重点关注的是医疗资源不崩溃，重症率不高，寄希望于“群体免疫”。
+全球领先的加密货币已跌至42786美元，这标志着日下跌近8.5%，延续上一交易日录得的损失。
 
-大校说，这个Omicron染到身上不是开玩笑的，有病是让你长期有病和让你短期死亡，这都是生化武器可以做得到的，为什么没人小心呢？
+跌幅发生在网络数据提供商NetBlocks的报告，“从2022年1月4日星期二晚上开始，哈萨克斯坦的网络出现重大中断，并在星期三下午发展到全国范围的通信中断”。据报道，哈萨克斯坦的正常化网络连接率下降到2%。
 
-大校还谈了他在某国政府秘密作证的过程，他说了不到5分钟，所有一屋子人说，“你别，你别说，你停，你停“，让我们休息了20分钟回来，每个人脸色铁青，他们真的是知道这疫苗比病毒还可怕。
+周日，在政府取消能源价格上限的决定生效后一天，导致液化石油气的成本增加了一倍，随后哈萨克斯坦西部爆发了动乱。
 
-郭先生让大家一定要搞清楚什么叫mRNA，mRNA就是刺突蛋白，就是病毒啊！郭先生再三重申，辉瑞制药，任何制药公司，现在已经没有一家制药公司敢说“我承担这个责任，承担后果”，没有一家！为什么制药公司研究的疫苗不承担责任呢？哪个疫苗的成分都叫mRNA，就叫刺突蛋白。这是他们回避不了的事实。其实越来越多的人在质疑：辉瑞心里没鬼，为什么要拖75年才公布疫苗资料？
+卡西姆·约玛特·托卡耶夫（Kassym-Jomart Tokayev）总统解散了政府，并承诺将恢复低的燃料价格。然而，这一宣布没有什么效果，反而抗议游行在这个前苏联国家的最大城市蔓延开来。据报道，为了减少对汹涌的动乱的报道，哈萨克斯坦当局切断了网络。
 
-郭先生自豪说，现在咱爆料革命在全世界受到这么大的关注，特别是科学家和专业人士想知道，为什么爆料革命能早于他们一年多知道这些真相呢？例如刺突蛋白会脱落，会感染。
+比特币目前面临的其他不利因素包括美联储的加息信号，这可能最快在今年3月发生。周三发布的这一消息立即引发了市场动荡，使美国股市大幅下跌，并延续了比特币的损失。
 
-尽管爆料革命现在已经竭尽全力了，可是世界还是这个样子，不仅仅是战友，连郭先生和大校都非常感叹。郭先生感慨大校在2021年初的时候就说过一句特别经典的话：如果这个世界在确认这是病毒（生化武器）之前还没醒过来的话，就不需要这个世界醒过来了”。
+**简评：**
 
-参考链接：
+据新中国联邦郭文贵先生的大直播中说到，哈萨克斯坦动乱，是王毅到哈萨克斯坦要回100吨黄金，被哈国总统骂走，王毅刚走，哈国就动乱了。可以看出，哈政府取消能源价格上限的决定，只是动乱的一个引子。
 
-[https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
+中共策划的动乱，表面上都是开始于民众的和平抗议，期间从中做梗而使动乱升级。独裁政府的其中一个明显标志是，为了掩盖动乱的实况和真相流出而采取断网。断网后，网络连接率连基本的电话通讯都不能维持。由于比特币依赖大量网络计算能力，还有其不受政府和中央银行的监管，在任何大事件和变化，比如断网的情况都会引起其价值巨大波动。
+
+中共不仅祸国殃民，其蓝金黄和革命输出，亦导致其他国家政局动荡，置无辜百姓于危机中。
+
+新闻链接：[Bitcoin dives after Kazakhstan kills internet](https://thepressunited.com/updates/bitcoin-dives-after-kazakhstan-kills-internet/)
+
+*翻译/简评: JS*
+
+*PR：感恩*
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
+
+
+
+
 
  
 
