--- a/gnews/49.md
+++ b/gnews/49.md
@@ -1,136 +1,87 @@
 ---
-title: 01/07每日播报｜新闻简讯:朝鲜不参加北京奥运会 西安封城物资奇缺 辉瑞的噩梦
+title: 01/07每日播报&#124;社媒消息：蓬佩奥 杰森米勒
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1831891/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1832137/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d80039f2fe0449ea197c87)**
+BY：[秘翻新闻](https://gtv.org/broadcast/watch/61d80039f2fe0449ea197c88)
 
-**2022-01-0**7
+**2022-01-07 **
 
-1、**疫情肆虐 法国日增破33万例 香港新增30例奥米炕病例**
+**1. 蓬佩奥1月7日在盖特发文：** 我热爱奥运会。1984年，我母亲带我去看洛杉矶奥运会，我坐在洛杉矶体育馆的高排座位上，观看卡尔·刘易斯奔跑。我喜欢这项赛事，但我们不能支持习近平。因为不仅奥运会将支持历史上最大的人权侵犯者之一，我们的运动员将也将被置于一个非常困难和危险的境地。 我们的运动员应该知道，北京是世界上监控最多的城市之一。你可以打赌，中共将会跟踪他们所做的每件事、所去的每个地方以及所说的每句话。
 
-[据《新唐人》1月7日报道，周四，除中共国以外，全球超过2亿9,800万人，确诊中共病毒，约546万人死亡。法国单日新增确诊人数突破33万例，香港新增30例奥米炕病例。](https://m.ntdtv.com/gb/2022/01/06/a103314445.html)
+[https://gettr.com/post/pmpf6e0a67](https://gettr.com/post/pmpf6e0a67)
 
-[香港周四新增33例确诊，其中30例带有Omicron病毒。当局宣布，从周五开始，取消大型活动，关闭所有娱乐场所。晚上6点到隔日凌晨5点，餐厅禁止内用。另外，从周六凌晨开始，禁止美国、加拿大、英、澳、法、印度、巴基斯坦和菲律宾等八国民航客机降落香港，包括转机。](https://m.ntdtv.com/gb/2022/01/06/a103314445.html)
+**2. 杰森米勒1月6日在盖特发文：** 这是社交媒体历史上最关键的几周之一，数十万人宣布独立于大公司。请阅读并分享《新闻周刊》(Newsweek)今天发表的关于盖特的最新专栏文章—《社交媒体平台的大颠覆》！ 【盖文转《新闻周刊》报道，在上次总统大选和持续的大流行间，对社交媒体的巨头们来说，过去两年是一个转折点，而且不是一个好的转折点。曾经以促进信息自由流动和因对自由民主有承诺而自豪的大科技公司，现在正在例行审查用户和内容。曾经在追究政府责任方面具有巨大潜力的平台，现已允许它们自己成为政府的言论执法部门，一个曾经承诺要颠覆媒体格局的行业已经成为政府的打手。事实证明，大科技公司的这种审查和歧视不仅对民主不利，而且也是一种糟糕的商业模式。mRNA技术的发明人罗伯特·马龙博士和马乔丽·泰勒·格林议员先后因违反所谓的新冠政策而被逐出推特平台就是最佳例子。主播界巨星乔·罗根 (Joe Rogan)在此事发生后，宣布入驻盖特。罗根和盖特是传统新闻媒体和社交媒体领域的颠覆者。一些评论员认为，社交媒体巨头因为自我审查正走向衰落。】
 
-[法国周三新增超过33万例，再破纪录。当局警告，未来几天病例数还会上升。经过三天激烈辩论，法国议会以214票赞成，93票反对，27人弃权，周四通过法案，将健康通行证转换为疫苗接种证。不过，新法案还需交由参议院审查。如果法案通过，除了进入卫生机构和服务之外，未来所有12岁以上的法国人，一定要接种疫苗才行。](https://m.ntdtv.com/gb/2022/01/06/a103314445.html)
+[https://gettr.com/post/pmmx126561](https://gettr.com/post/pmmx126561)
 
-秘翻新闻文洋MAS编译报道
+**3. 杰森米勒1月7日在盖特发文： **盖特已经荣登社交媒体榜第一名！让我们再接再厉！
 
-2、**朝鲜不参加北京奥运会 但会在精神上支持中共**
+[https://gettr.com/post/pmov5y5263](https://gettr.com/post/pmov5y5263)
 
-[据路透社1 月 7 日报导，朝鲜在给中共国的一封信中表示，朝鲜因敌对势力的影响和感染病毒的风险决定拒绝参加即将在北京举行的冬奥会，并指责美国试图阻止奥运会的成功举办。](https://www.reuters.com/world/asia-pacific/nkorea-says-us-actions-over-beijing-games-are-insult-olympic-spirit-2022-01-06/)
+**4. 班农先生1月6日在盖特发文：** 中共摧毁了一个伟大的民族，华尔街资助了它们的暴行！ 【盖文转《雅虎财经》报道，有债券大王之称的双线资本（DoubleLine Capital）创始人杰弗里·冈德拉克 (Jeffrey Gundlach)告诫投资者，在把钱投入中共国之前需要三思而后行。冈德拉克在其加州庄园接受《雅虎财经》采访时说：“在我看来，目前的中共国是不可投资的。我在中共国从来没有任何长线或短线投资。为什么呢？因为我不相信中共的这些数据，我也不再相信中美之间的关系。另外，我认为在中共国的投资可能存在被没收的风险。”去年发生的一系列事件可以证实冈德拉克对中共国的担忧。2021年，滴滴等大型互联网公司遭到了中共政府的持续打压，这让许多投资者感到震惊。除此以外，中共还在不断打击加密货币的崛起。冈德拉克对新兴市场越来越乐观，但不包括中共国，因为他认为中共国不再是一个新兴市场。】
 
-[美国在去年 12 月宣布，由于中共国的人权记录，其政府官员将抵制2022 年冬季奥运会，但美国运动员可以自由前往北京参加比赛。此后，包括英国、澳大利亚和加拿大在内的其他几个国家也宣布了对北京冬奥会的外交抵制。](https://www.reuters.com/world/asia-pacific/nkorea-says-us-actions-over-beijing-games-are-insult-olympic-spirit-2022-01-06/)
+[https://gettr.com/post/pmkh6n0467](https://gettr.com/post/pmkh6n0467)
 
-[据朝中社报道，信中提到，由于敌对势力的举动和世界范围的病毒大流行，朝方无法参加奥运会，但将全力支持中共国的同志为举办奥运会所做的一切工作。](https://www.reuters.com/world/asia-pacific/nkorea-says-us-actions-over-beijing-games-are-insult-olympic-spirit-2022-01-06/)
+**5. 班农先生1月6日在盖特发文：** 中共通过智利、哥伦比亚、巴西的左派马克思主义者和社会主义者占领拉丁美洲。 【盖文转《纽约时报》报道，日益严重的不平等、不断恶化的经济局势以及新冠疫情应对不利使得拉美各国的选民纷纷放弃在几年前占据主流的右翼和中右翼领导人，左翼候选人开始重获选民的支持。左派承诺更公平地分配财富、提供更好的公共服务和广泛扩大社会安全网络。分析人士说，左派的崛起可能会提振中共并削弱美国。因为中美在争夺地区影响力时，出现了一批急需经济发展的拉美领导人，他们对北京提供贷款和基础设施投资的全球战略更加开放。这一变化还可能使美国更难继续孤立委内瑞拉、尼加拉瓜和古巴的左翼独裁政权。】
 
-[自 1961 年中朝两国签署条约以来，中共国一直是朝鲜唯一的盟友。朝鲜一直实行严格的自我边界封锁，甚至连本国外交官都无法进入，几乎所有贸易都被扼杀。如此封闭的国家，不知会如何全力支持中共开展冬奥会。](https://www.reuters.com/world/asia-pacific/nkorea-says-us-actions-over-beijing-games-are-insult-olympic-spirit-2022-01-06/)
+[https://gettr.com/post/pmlmog6b53](https://gettr.com/post/pmlmog6b53)
 
-秘翻新闻文洋MAS编译报道
+**6. 国家脉动1月7日在盖特发文：** DNA技术测试的假阳性结果导致更多堕胎。 【盖文转报道，《纽约时报》的一项调查发现，85%的罕见染色体疾病的产前血液测试向准妈妈提供了错误的阳性结果。平均来说，每85次关于孩子基因构成的测试中，只有15次能得到准确结果，这可能导致许多母亲打掉完全健康的孩子。全美国超过三分之一的母亲可能被错误地告知，她们的孩子出生时将患有迪乔治综合症（DiGeorge syndrome）、普瑞德威利症候群（Prader-Willi syndrome）等因染色体缺陷导致的疾病。加州大学旧金山分校的一位产科医生和遗传学家说，除了唐氏综合症，几乎所有被检测的疾病的风险都很低，这些测试纯粹是市场营销。一些硅谷的技术公司应该为这种对美国母亲令人发指的攻击和剥削、以及她们未出生孩子的不必要死亡负责。这些公司通过提供测试赚取大量财富，一位分析家估计，这些基因测试的市场高达6亿到数十亿美元。】
 
-3、**印度指控小米逃税 追缴税金近九千万美元**
+[https://gettr.com/post/pms13nbc6a](https://gettr.com/post/pms13nbc6a)
 
-[据《新唐人》1月7日报道，印度政府日前指控中共国智能手机企业小米在印度开办的一家分公司存在逃税行为，并宣布将对该公司追缴近9000万美元的税金。对此，小米回应称，双方在金额认定上存在分歧。](https://m.ntdtv.com/gb/2022/01/06/a103314403.html)
+**7. 零对冲1月6日发推说：** 丹麦科学家在对近12000户家庭进行调查后发现，奥米炕变种在完全接种新冠疫苗人群中的传播速度比德尔塔快，在接种了加强针的人群中传播速度更快，这有力证明了该变种有免疫逃逸性。 【推文转报道，这项由哥本哈根大学、丹麦统计局和丹麦国立血清研究所(Statens Serum Institut)的研究人员共同进行的研究显示，奥米炕的传播力比德尔塔强2.7倍至3.7倍。】
 
-[当地时间1月5日下，印度财政部官员在印度政府新闻局（PIB）发表声明称，经调查发现，小米科技印度有限公司存在逃税行为。为此，税收局要追缴该公司在2017年4月至2020年6月期间漏缴的税金共65.3亿卢比，约8800万美元。](https://m.ntdtv.com/gb/2022/01/06/a103314403.html)
 
-[印度财政部税收局指控印度小米向美国高通公司和小米中共国总部支付的专利费和特许使用费，并未计入其进口商品的交易额当中。印度税务情报局 (DRI)认定，印度小米的上述行为违反了印度1962年颁布的《海关法》第14条和2007年海关估价的规则。该部门现已向小米印度公司发出了追缴税金的通知。](https://m.ntdtv.com/gb/2022/01/06/a103314403.html)
 
-[据市场研调公司Counterpoint Research发布的 2021年第三季度统计数据，在印度智能手机市场中，小米的市场占有率达23%，位居印度智能手机市场份额第一。](https://m.ntdtv.com/gb/2022/01/06/a103314403.html)
+> Omicron Spreads Faster Than Delta Within Vaccinated Individuals: Danish Study [https://t.co/7HDA65dxmd](https://t.co/7HDA65dxmd)
+> — zerohedge (@zerohedge) [January 6, 2022](https://twitter.com/zerohedge/status/1479030067607052292?ref_src=twsrc%5Etfw)
 
-秘翻新闻文洋MAS编译报道
 
-4、**辉瑞的噩梦 联邦法官拒绝了FDA延期75年提交疫苗数据**
 
-[据《零对冲》1月6日报道，周四，美国一名联邦地区法院的法官，拒绝了FDA（美国食品和药品监管局）提出的请求，即辉瑞公司每个月提交500页数据以及批准中共病毒疫苗。法官还下令，辉瑞公司每月提交5.5万页疫苗的数据。](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)
+**8. Andy再开 1月6日在盖特发文：** 东京的新冠病例激增，连续两天的新增感染人数爆表 而值得注意的是：感染者中，疫苗接种者人数是未接种者的三倍！ 1月5日，总感染数390人，其中未接种者96人，占24.6%；接种两剂疫苗的有207人，占总数53.0%。 1月6日，总感染人数641人，其中未接种者163人，占25.4%；接种两剂疫苗的有334人，占总数的52.1%
 
-[代表原告的律师亚伦·西里（Aaron Siri）在他的博客里提供了令人震惊的消息。](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)
+[https://gettr.com/post/pmmbz7c75b](https://gettr.com/post/pmmbz7c75b)
 
-[他称，自己的一名客户要求FDA提供辉瑞公司提交的所有数据，以授权其中共病毒疫苗。FDA请求法院允许每月只需要提供500页文件的数据，这将需要花费75年的时间来提交所有的数据。](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)
+**9. 大纪元时报1月6日发推说：** 一项研究显示，一种全天然的非处方鼻喷雾剂可有效治疗和预防中共病毒，该研究的一位首席研究员说，美国司法部对制造和推广这种喷雾剂作为新冠疾病治疗手段的犹他州公司提起诉讼，是在掩盖真相。 【推文转报道，使用天然甜味剂木糖醇(Xylitol)对抗病毒和其他严重疾病的全球研究员马克·坎农（Mark Cannon）博士说，政府应该推广使用Xlear公司生产的基于木糖醇的喷雾剂，而不是通过诉讼压制该疗法。坎农告诉大纪元时报：“木糖醇在抑制多种呼吸道病毒方面有着悠久的历史。它已在其他国家成功用于对抗甲型H1N1流感病毒和人类呼吸道合胞病毒（HRSV） 等严重流感毒株。”他表示木糖醇可以杀死病原体并具有“非常强的抗炎”特性。抗病毒研究所和犹他州立大学于 2021 年 12 月完成的一项研究得出了类似的结论，发现木糖醇和葡萄柚籽提取物均被证明对中共病毒的德尔塔变种特别有效。该研究还指出，这两种成分都比瑞德西韦具有更高的抗病毒功效。但是美国食品药品监督管理局拒绝授予Xlear公司的鼻腔喷雾剂紧急使用授权，并对其发出警告。政府正寻求对Xlear公司进行罚款，并对其推广非处方鼻腔喷雾剂作为治疗和预防新冠病毒的方法下达永久禁令。】
 
-[他在博客中表示，很高兴这位联邦法官坚决地拒绝了FDA的请求，并命令FDA以每月5.5万页的速度提供所有数据。在要求及时公布这些文件时，法官认识到，公布这些数据对公众至关重要，应该是FDA的最高优先事项之一。](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)
 
-[这一判决意味着，之前需要花费75年才能获得辉瑞公司中共病毒疫苗的所有数据，现在需要8个月的时间就能让全世界看到。](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)
 
-秘翻新闻冰糖葫芦喵编译报道
+> A lead researcher in a study that showed the use of an all-natural over-the-counter nasal spray is effective in treating and preventing [#COVID19](https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw) said the [#DOJ](https://twitter.com/hashtag/DOJ?src=hash&amp;ref_src=twsrc%5Etfw) is covering up the truth with a lawsuit it has filed against the [#Utah](https://twitter.com/hashtag/Utah?src=hash&amp;ref_src=twsrc%5Etfw) company. [https://t.co/Nesd6DhGCG](https://t.co/Nesd6DhGCG)
+> — The Epoch Times (@EpochTimes) [January 6, 2022](https://twitter.com/EpochTimes/status/1479061434873040897?ref_src=twsrc%5Etfw)
 
-5、**上海世茂集团股价暴跌  旗舰子公司债券交易暂停**
 
-[据《路透社》1月7日报道，当地时间周五，上海世茂集团在香港上市的股票暴跌，其旗舰子公司所发行债券的价格也下跌，促使上海证券交易所暂停了其中三支债券的交易。](https://www.reuters.com/business/shimao-group-shares-slump-trading-flagship-units-bonds-paused-2022-01-07/)
 
-[周五早上，世茂集团股价在香港盘前交易下跌逾17%。其子公司上海世茂股份有限公司，2021年7月发行的上海交易所交易债券下跌逾25%，引发交易暂停。](https://www.reuters.com/business/shimao-group-shares-slump-trading-flagship-units-bonds-paused-2022-01-07/)
+**10. 福克斯新闻1月6日发推说**： 美国边境巡逻队队长劳尔·奥尔蒂斯（Raul Ortiz）周三宣布，在出现症状后，他的中共病毒检测呈阳性。尽管如此，他仍催促美国人接种中共病毒疫苗。 【推文转报道，奥尔蒂斯已接种了两针疫苗，并准备在今天早些时候接种加强针，但他新冠核酸检测后呈阳性，目前正自我隔离。】
 
-[该报道指出，上海证券交易所称其为异常波动。](https://www.reuters.com/business/shimao-group-shares-slump-trading-flagship-units-bonds-paused-2022-01-07/)
 
-秘翻新闻冰糖葫芦喵编译报道
 
-6、**西安突停国际航线 原因不明**
+> Border Patrol chief tests positive for COVID-19, urges vaccinations[https://t.co/lsdVPeIVby](https://t.co/lsdVPeIVby)
+> — Fox News (@FoxNews) [January 6, 2022](https://twitter.com/FoxNews/status/1479060185348022275?ref_src=twsrc%5Etfw)
 
-[据《新唐人》1月06日报道，西安封城十多天后，西安咸阳国际机场突然宣布，自5日起暂停国际客运航线营运，但未说明原因，引发舆论热议。](https://m.ntdtv.com/gb/2022/01/04/a103312425.html)
 
-[中共官媒新华社1月6日在官方微博发布消息称，经中共国民用航空局批准，西安咸阳国际机场自1月5日起暂停国际客运航线营运，恢复时间另行通知。此前，西安咸阳国际机场已停飞国内航班。](https://m.ntdtv.com/gb/2022/01/04/a103312425.html)
 
-[这则消息引发网络热议，有网友质疑称，西安于去年12月23日起封城，为何13天后才停飞国际航班？也有网友表示，咸阳机场是很重要的入境口岸，停不停肯定是国家定。而且西安的机场要为北京分流，不是想停就能停的。](https://m.ntdtv.com/gb/2022/01/04/a103312425.html)
+**11. Disclose.tv 1月6日在盖特发文：** 澳大利亚北领地（Northern Territory）当局对所有未接种新冠疫苗的公民实施了类似于中共国的封锁，北领地首席部长迈克尔·贡纳 (Michael Gunner) 声称“他们感染新冠病毒的风险更大”。 贡纳说：“对于未接种疫苗的16以上人士，如果没有完全接种疫苗，需要留在家中，因为您感染新冠并需要住院治疗的风险更大。只有三种情况才可出门：接受治疗，包括检测新冠病毒；购买生活用品；照顾家里无法自顾人士，但是不能离开您的家30里之外。对于未接种疫苗的人来说，不能以工作为由而离家出门。首席卫生官还确定，现在限制行动是至关重要的，接下来每四天必需锻炼一小时，请记住，这些限制令仅适用于未完全接种疫苗的人。”
 
-[稍早前，货运物流供应链新闻网站The Loadstar报导说，西安咸阳国际机场是中共国第九大货运机场，受疫情影响，现在面临大量航班取消带来的问题。](https://m.ntdtv.com/gb/2022/01/04/a103312425.html)
+[https://gettr.com/post/pmm14t5521](https://gettr.com/post/pmm14t5521)
 
-秘翻新闻二丫编辑报道
+**12 Disclose.tv 1月6日在盖特发文： **法国议会批准了马克龙的疫苗通行证，未接种新冠疫苗的公民将被排除在“生活的基本权利“”之外。该法案现在将提交给参议院进行辩论以及表决。
 
-7、**京东快递现多名确诊病例 西安业务已停**
+[https://gettr.com/post/pmn1z9a249](https://gettr.com/post/pmn1z9a249)
 
-[据《大纪元》1月6日报道，西安中共病毒疫情持续升温，京东快递因有15名确诊病例已暂停业务。](https://www.epochtimes.com/gb/22/1/6/n13486079.htm)
+**13. 郭文贵先生1月7日在盖特发文：** 爆料革命和新中国联邦似乎总能准确预测中共的动向。四个星期前，郭先生再次预测陈全国将被晋升，而不是很多人认为的降职。这已经是郭先生第三次准确预测陈全国的仕途动向了。另外两次分别发生在3年前和1年前。以下是中共二十大的政治局常委人选：国家主席：习近平习太阳；总理：胡春华；第一副总理：陈敏尔；中纪委书记：陈全国；政协主席：李希；全国人大委员长：丁薛祥。
 
-[据陕西省交通运输厅宣传教育中心“大秦交通”微信公众号1月5日的消息，西安全市保持运行的快递业务主要集中在邮政和顺丰，京东因有15名确诊病例，已暂停业务。](https://www.epochtimes.com/gb/22/1/6/n13486079.htm)
+[https://gettr.com/post/pmpqbvc1ce](https://gettr.com/post/pmpqbvc1ce)
 
-[此外，航空运输通过西安咸阳机场的3架货机，装载率约30%，主要运输生活及防疫物资；公路运输量为疫情前的25%，市内网点营业率为43%，一线快递员上岗率约32%。](https://www.epochtimes.com/gb/22/1/6/n13486079.htm)
+**以上社交媒体新闻由 巴拉克和Stephanie 联合编译报道**
 
-[西安网民表示，目前西安个人快递都无法送货，淘宝等电商已经拒绝接收西安的订单。就算顺丰也不接收个人快递业务。西安所有小区全都封闭式管理，不允许接受外界的任何东西，尤其是快递。](https://www.epochtimes.com/gb/22/1/6/n13486079.htm)
-
-秘翻新闻文洋MAS编译报道
-
-8、**西安深夜通报处理孕妇流产事件责任人**
-
-[1月6日消息，近日西安高新医院发生的孕产妇流产事件引起社会广泛关注，造成恶劣社会影响。1月5日，经陕西省、西安市卫生健康委组织专家进行调查，认定该事件是一起责任事故。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-[据悉，西安高新医院已对相关责任人作出处理：总经理范郁会被停职，门诊部、医务部相关责任人被免职。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-[另悉，西安市纪委对省市有关疫情防控期间急救工作要求落实不到位、履职不力的西安市急救中心党总支副书记、主任李强给予党内警告处分，对落实省市关于疫情防控期间特殊人群救治工作要求不到位的西安市卫生健康委主任刘顺智给予党内警告处分。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-[但有网友对此表示，接诊的医院负责人被处理了，拒诊的医院反而没事。或许西安政府只想处理几个人平民愤而已，从政策和规定上没有任何优化行为，治标不治本，换汤不换药。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-秘翻新闻菜园子编辑报道
-
-9、**西安封城物资奇缺 民众用iPhone换一袋米**
-
-[据《新唐人》1月6日报道，西安封城后，很多民众物资短缺，被迫用以物换物的方式来换取急需的食物，有人用苹果手机、平板电脑换一包白米。与此同时，却有西安官员家属在网上炫耀政府派送来的丰富物资。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-[西安封城已经14天，西安民众称西安闹得不是疫情，而是饥荒。很多民众既没有收到政府的免费物资，也买不到食物，只能以物换物维持生活。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-[西安民众发布在微博的照片和视频显示，一位居民拿来一个苹果手机一个平板，跟邻居换了一袋大米；还有人拿最新的任天堂Switch游戏机换取一包泡面和两颗馒头；用洗碗精换苹果；用卫生棉或香烟换蔬菜、零食等。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-[与此同时，也有西安官员的家属，在网上炫耀政府免费配送的丰富物资，还唱着共产党好的歌曲。家中摆着新鲜蔬菜，鱼，肉类，鸡蛋、水果等稀缺物资。](https://m.ntdtv.com/gb/2022/01/06/a103314014.html)
-
-秘翻新闻二丫编辑报道
-
-10、**墙国自媒体人因撰文揭露西安疫情真相被免去公职**
-
-[据中共国侨联官网1月6日通报，经研究，免去宋汶洮同志基层建设部组织处副处长职务。](https://www.163.com/news/article/GT29PAP00001899N.html)
-
-[此前，陕西违法和不良信息举报中心微信公众号1月4日通报一案例显示，群众将名为清风明月楼的微信公众号举报，指其于1月2日发表的《西安百姓的悲哀：为什么有人不惜违法、冒死也要逃离西安？》一文，涉及传播严重不实谣言、漠视全民抗疫努力等行为。](https://www.163.com/news/article/GT29PAP00001899N.html)
-
-[通报称，经核查该账号系认证为宋汶洮，中国古代文学硕士的个人主体账号，文章在未经核实的情况下传播西安隔离费用至少5000元、直接粗暴关停医疗体系 和普通社区居民没菜吃等严重不实谣言信息，文中出现没有人性的西安、西安比任何城市都更严格地禁止市民自救 和西安人民现在担心的不是染病而死，而是在没有碰到疫情之前就已病死、饿死等言论，通报称相关表述与事实严重不符。](https://www.163.com/news/article/GT29PAP00001899N.html)
-
-[陕西省网络举报中心认为该文传播未经核实的虚假谣言信息严重影响西安疫情防控秩序，大量煽动性攻击性言论严重违反《网络安全法》《网络信息内容生态治理规定》等法规，属于违法有害信息。通过实名认证信息找到撰写者，最终作出免去宋汶洮同志基层建设部组织处副处长职务的处理决定。](https://www.163.com/news/article/GT29PAP00001899N.html)
-
-秘翻新闻vera编辑报道
-
-发布: 恩典
+发布：陸柒陸捌
 
 * * *
 
 **By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
